@@ -59,7 +59,7 @@ public class JSpecifyAnnotationTest extends LightJavaCodeInsightFixtureTestCase 
     }
   }; 
   
-  private static final String PACKAGE_NAME = "org.jspecify.annotations";
+  private static final String PACKAGE_NAME = "org.jspecify.nullness";
   private static final Path PATH = Paths.get(JavaTestUtil.getJavaTestDataPath(), "/inspection/dataFlow/jspecify/");
   @Parameterized.Parameter
   public String myFileName;
@@ -89,7 +89,7 @@ public class JSpecifyAnnotationTest extends LightJavaCodeInsightFixtureTestCase 
     myFixture.addClass(String.format(Locale.ROOT, template, "ElementType.TYPE_USE", "NonNull"));
     myFixture.addClass(String.format(Locale.ROOT, template, "ElementType.TYPE_USE", "Nullable"));
     myFixture.addClass(String.format(Locale.ROOT, template, "ElementType.TYPE_USE", "NullnessUnspecified"));
-    myFixture.addClass(String.format(Locale.ROOT, template, "ElementType.TYPE, ElementType.PACKAGE", "DefaultNonNull"));
+    myFixture.addClass(String.format(Locale.ROOT, template, "ElementType.TYPE, ElementType.PACKAGE", "NullMarked"));
   }
 
   @Test
@@ -98,7 +98,7 @@ public class JSpecifyAnnotationTest extends LightJavaCodeInsightFixtureTestCase 
     boolean dirMode = Files.isDirectory(path);
     List<Path> files = Files.walk(path)
       .filter(p -> Files.isRegularFile(p)).filter(p -> p.getFileName().toString().endsWith(".java"))
-      .collect(Collectors.toList());
+      .toList();
     if (files.isEmpty()) {
       throw new IllegalStateException("No Java files");
     }
@@ -162,33 +162,22 @@ public class JSpecifyAnnotationTest extends LightJavaCodeInsightFixtureTestCase 
     @Override
     protected void reportProblem(@NotNull ProblemsHolder holder,
                                  @NotNull PsiElement anchor,
-                                 @Nullable LocalQuickFix fix,
+                                 LocalQuickFix @NotNull [] fixes,
                                  @NotNull String messageKey, Object... args) {
       switch (messageKey) {
-        case "inspection.nullable.problems.primitive.type.annotation":
-        case "inspection.nullable.problems.receiver.annotation":
-        case "inspection.nullable.problems.outer.type":
-        case "inspection.nullable.problems.at.reference.list":
-        case "inspection.nullable.problems.at.constructor":
-        case "inspection.nullable.problems.at.enum.constant":
+        case "inspection.nullable.problems.primitive.type.annotation", "inspection.nullable.problems.receiver.annotation",
+          "inspection.nullable.problems.outer.type", "inspection.nullable.problems.at.reference.list",
+          "inspection.nullable.problems.at.constructor", "inspection.nullable.problems.at.enum.constant" ->
           warnings.put(anchor, "jspecify_nullness_intrinsically_not_nullable");
-          break;
-        case "inspection.nullable.problems.at.wildcard":
-        case "inspection.nullable.problems.at.type.parameter":
-        case "inspection.nullable.problems.at.local.variable":
+        case "inspection.nullable.problems.at.wildcard", "inspection.nullable.problems.at.type.parameter",
+          "inspection.nullable.problems.at.local.variable" ->
           warnings.put(anchor, "jspecify_unrecognized_location");
-          break;
-        case "inspection.nullable.problems.Nullable.method.overrides.NotNull":
-        case "inspection.nullable.problems.NotNull.parameter.overrides.Nullable":
+        case "inspection.nullable.problems.Nullable.method.overrides.NotNull",
+          "inspection.nullable.problems.NotNull.parameter.overrides.Nullable" ->
           warnings.put(anchor, "jspecify_nullness_mismatch");
-          break;
-        case "inspection.nullable.problems.method.overrides.NotNull":
-        case "inspection.nullable.problems.parameter.overrides.NotNull":
+        case "inspection.nullable.problems.method.overrides.NotNull", "inspection.nullable.problems.parameter.overrides.NotNull" ->
           warnings.put(anchor, "jspecify_nullness_not_enough_information");
-          break;
-        case "inspection.nullable.problems.Nullable.NotNull.conflict":
-          warnings.put(anchor, "jspecify_conflicting_annotations");
-          break;
+        case "inspection.nullable.problems.Nullable.NotNull.conflict" -> warnings.put(anchor, "jspecify_conflicting_annotations");
       }
     }
   }
@@ -219,8 +208,7 @@ public class JSpecifyAnnotationTest extends LightJavaCodeInsightFixtureTestCase 
 
     @Override
     protected void reportNullabilityProblems(DataFlowInspectionBase.ProblemReporter reporter,
-                                             List<NullabilityProblemKind.NullabilityProblem<?>> problems,
-                                             Map<PsiExpression, DataFlowInspectionBase.ConstantResult> expressions) {
+                                             List<NullabilityProblemKind.NullabilityProblem<?>> problems) {
       for (NullabilityProblemKind.NullabilityProblem<?> problem : problems) {
         String warning = getJSpecifyWarning(problem);
         if (warning != null) {
