@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.diff.impl;
 
 import com.intellij.codeInsight.hint.HintManager;
@@ -8,9 +8,13 @@ import com.intellij.diff.*;
 import com.intellij.diff.FrameDiffTool.DiffViewer;
 import com.intellij.diff.actions.impl.*;
 import com.intellij.diff.impl.DiffSettingsHolder.DiffSettings;
+import com.intellij.diff.impl.ui.DiffToolChooser;
 import com.intellij.diff.lang.DiffIgnoredRangeProvider;
 import com.intellij.diff.requests.*;
 import com.intellij.diff.tools.ErrorDiffTool;
+import com.intellij.diff.tools.external.ExternalDiffSettings;
+import com.intellij.diff.tools.external.ExternalDiffSettings.ExternalTool;
+import com.intellij.diff.tools.external.ExternalDiffSettings.ExternalToolGroup;
 import com.intellij.diff.tools.external.ExternalDiffTool;
 import com.intellij.diff.tools.util.DiffDataKeys;
 import com.intellij.diff.tools.util.PrevNextDifferenceIterable;
@@ -24,6 +28,7 @@ import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.ex.ActionUtil;
 import com.intellij.openapi.actionSystem.ex.ComboBoxAction;
+import com.intellij.openapi.actionSystem.impl.ActionButton;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
@@ -32,8 +37,6 @@ import com.intellij.openapi.diff.DiffBundle;
 import com.intellij.openapi.diff.impl.DiffUsageTriggerCollector;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.LogicalPosition;
-import com.intellij.openapi.keymap.Keymap;
-import com.intellij.openapi.keymap.KeymapManager;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.DumbAware;
@@ -50,13 +53,15 @@ import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
 import com.intellij.ui.*;
 import com.intellij.ui.components.JBPanelWithEmptyText;
 import com.intellij.ui.components.panels.Wrapper;
-import com.intellij.ui.mac.TouchbarDataKeys;
-import com.intellij.ui.mac.UpdatableDefaultActionGroup;
+import com.intellij.ui.mac.touchbar.Touchbar;
 import com.intellij.ui.scale.JBUIScale;
+import com.intellij.util.EventDispatcher;
 import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.JBUI;
+import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.UIUtil;
+import com.intellij.util.ui.components.BorderLayoutPanel;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -64,11 +69,14 @@ import org.jetbrains.annotations.Nullable;
 import javax.swing.*;
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 
-public abstract class DiffRequestProcessor implements Disposable {
+import static com.intellij.diff.util.DiffUtil.recursiveRegisterShortcutSet;
+import static com.intellij.util.ObjectUtils.chooseNotNull;
+
+public abstract class DiffRequestProcessor implements CheckedDisposable {
   private static final Logger LOG = Logger.getInstance(DiffRequestProcessor.class);
 
   private boolean myDisposed;
@@ -82,20 +90,32 @@ public abstract class DiffRequestProcessor implements Disposable {
   @Nullable private final DiffTool myForcedDiffTool;
 
   @NotNull private final DefaultActionGroup myToolbarGroup;
+  @NotNull private final DefaultActionGroup myRightToolbarGroup;
   @NotNull private final DefaultActionGroup myPopupActionGroup;
-  @NotNull private final UpdatableDefaultActionGroup myTouchbarActionGroup;
+  @NotNull private final DefaultActionGroup myTouchbarActionGroup;
 
   @NotNull private final JPanel myPanel;
   @NotNull private final MyPanel myMainPanel;
-  @NotNull protected final Wrapper myContentPanel;
+  @NotNull private final Wrapper myContentPanel;
+  @NotNull private final JPanel myTopPanel;
   @NotNull private final ActionToolbar myToolbar;
+  @NotNull private final ActionToolbar myRightToolbar;
   @NotNull protected final Wrapper myToolbarWrapper;
+  @NotNull protected final Wrapper myDiffInfoWrapper;
+  @NotNull protected final Wrapper myRightToolbarWrapper;
   @NotNull private final Wrapper myToolbarStatusPanel;
   @NotNull private final MyProgressBar myProgressBar;
+
+  @NotNull private final EventDispatcher<DiffRequestProcessorListener> myEventDispatcher =
+    EventDispatcher.create(DiffRequestProcessorListener.class);
 
   @NotNull private DiffRequest myActiveRequest;
 
   @NotNull private ViewerState myState;
+
+  @Nullable private ScrollToPolicy myCurrentScrollToPolicy;
+
+  private final boolean myIsNewToolbar;
 
   public DiffRequestProcessor(@Nullable Project project) {
     this(project, new UserDataHolderBase());
@@ -114,6 +134,8 @@ public abstract class DiffRequestProcessor implements Disposable {
     mySettings = DiffSettings.getSettings(myContext.getUserData(DiffUserDataKeys.PLACE));
     myForcedDiffTool = myContext.getUserData(DiffUserDataKeysEx.FORCE_DIFF_TOOL);
 
+    myIsNewToolbar = DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_NEW_TOOLBAR, myContext);
+
     updateAvailableDiffTools();
     DiffTool.EP_NAME.addChangeListener(() -> {
       updateAvailableDiffTools();
@@ -123,31 +145,41 @@ public abstract class DiffRequestProcessor implements Disposable {
     DiffIgnoredRangeProvider.EP_NAME.addChangeListener(() -> updateRequest(true), this);
 
     myToolbarGroup = new DefaultActionGroup();
+    myRightToolbarGroup = new DefaultActionGroup();
     myPopupActionGroup = new DefaultActionGroup();
-    myTouchbarActionGroup = new UpdatableDefaultActionGroup();
-    TouchbarDataKeys.putActionDescriptor(myTouchbarActionGroup).setReplaceEsc(false);
+    myTouchbarActionGroup = new DefaultActionGroup();
 
     // UI
 
     myMainPanel = new MyPanel();
+    Touchbar.setActions(myMainPanel, myTouchbarActionGroup);
+
     myContentPanel = new Wrapper();
     myToolbarStatusPanel = new Wrapper();
     myProgressBar = new MyProgressBar();
 
     myToolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.DIFF_TOOLBAR, myToolbarGroup, true);
+    putContextUserData(DiffUserDataKeysEx.LEFT_TOOLBAR, myToolbar);
+    if (myIsNewToolbar) {
+      myToolbar.setLayoutPolicy(ActionToolbar.NOWRAP_LAYOUT_POLICY);
+    }
     myToolbar.setTargetComponent(myMainPanel);
     myToolbarWrapper = new Wrapper(myToolbar.getComponent());
 
-    myPanel = JBUI.Panels.simplePanel(myMainPanel);
+    myRightToolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.DIFF_RIGHT_TOOLBAR, myRightToolbarGroup, true);
+    myRightToolbar.setLayoutPolicy(ActionToolbar.NOWRAP_LAYOUT_POLICY);
+    myRightToolbar.setTargetComponent(myMainPanel);
 
-    JPanel statusPanel = JBUI.Panels.simplePanel(myToolbarStatusPanel).addToLeft(myProgressBar);
-    JPanel topPanel = JBUI.Panels.simplePanel(myToolbarWrapper).addToRight(statusPanel);
-    GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+    myRightToolbarWrapper = new Wrapper(JBUI.Panels.simplePanel(myRightToolbar.getComponent()));
+
+    myPanel = JBUI.Panels.simplePanel(myMainPanel);
+    myDiffInfoWrapper = new Wrapper();
+    myTopPanel = buildTopPanel();
 
     Splitter bottomContentSplitter = new JBSplitter(true, "DiffRequestProcessor.BottomComponentSplitter", 0.8f);
     bottomContentSplitter.setFirstComponent(myContentPanel);
 
-    myMainPanel.add(topPanel, BorderLayout.NORTH);
+    myMainPanel.add(myTopPanel, BorderLayout.NORTH);
     myMainPanel.add(bottomContentSplitter, BorderLayout.CENTER);
 
     myMainPanel.setFocusTraversalPolicyProvider(true);
@@ -161,6 +193,24 @@ public abstract class DiffRequestProcessor implements Disposable {
     myContentPanel.setContent(DiffUtil.createMessagePanel(((LoadingDiffRequest)myActiveRequest).getMessage()));
   }
 
+  @NotNull
+  private BorderLayoutPanel buildTopPanel() {
+    BorderLayoutPanel topPanel;
+    if (myIsNewToolbar) {
+      BorderLayoutPanel rightPanel = JBUI.Panels.simplePanel(myRightToolbarWrapper).addToLeft(myProgressBar);
+      topPanel = JBUI.Panels.simplePanel(myDiffInfoWrapper).addToLeft(myToolbarWrapper).addToRight(rightPanel);
+      GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+      GuiUtils.installVisibilityReferent(topPanel, myRightToolbar.getComponent());
+    }
+    else {
+      JPanel statusPanel = JBUI.Panels.simplePanel(myToolbarStatusPanel).addToLeft(myProgressBar);
+      topPanel = JBUI.Panels.simplePanel(myToolbarWrapper).addToRight(statusPanel);
+      GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+    }
+
+    return topPanel;
+  }
+
   protected boolean shouldAddToolbarBottomBorder(@NotNull FrameDiffTool.ToolbarComponents toolbarComponents) {
     return toolbarComponents.needTopToolbarBorder;
   }
@@ -168,6 +218,15 @@ public abstract class DiffRequestProcessor implements Disposable {
   //
   // Update
   //
+
+  public void addListener(@NotNull DiffRequestProcessorListener listener, @Nullable Disposable disposable) {
+    if (disposable != null) {
+      myEventDispatcher.addListener(listener, disposable);
+    }
+    else {
+      myEventDispatcher.addListener(listener);
+    }
+  }
 
   @RequiresEdt
   protected void reloadRequest() {
@@ -181,7 +240,7 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   @RequiresEdt
   public void updateRequest(boolean force) {
-    updateRequest(force, null);
+    updateRequest(force, myCurrentScrollToPolicy);
   }
 
   @RequiresEdt
@@ -333,9 +392,11 @@ public abstract class DiffRequestProcessor implements Disposable {
       myState.destroy();
       myToolbarStatusPanel.setContent(null);
       myContentPanel.setContent(null);
-      myToolbarWrapper.setBorder(null);
+      myTopPanel.setBorder(null);
+      myDiffInfoWrapper.setContent(null);
 
       myToolbarGroup.removeAll();
+      myRightToolbarGroup.removeAll();
       myPopupActionGroup.removeAll();
       ActionUtil.clearActions(myMainPanel);
 
@@ -361,6 +422,8 @@ public abstract class DiffRequestProcessor implements Disposable {
         }
       });
     });
+
+    myEventDispatcher.getMulticaster().onViewerChanged();
   }
 
   protected void setWindowTitle(@NotNull @NlsContexts.DialogTitle String title) {
@@ -384,16 +447,24 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   @NotNull
   protected List<AnAction> getNavigationActions() {
-    return Arrays.asList(new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(), Separator.getInstance(),
-                         new MyPrevChangeAction(), new MyNextChangeAction());
+    List<AnAction> actions = List.of(
+      new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(),
+      Separator.getInstance(),
+      new MyPrevChangeAction(), new MyNextChangeAction());
+
+    AnAction goToChangeAction = createGoToChangeAction();
+    if (goToChangeAction != null) {
+      actions = ContainerUtil.append(actions, goToChangeAction);
+    }
+
+    return actions;
   }
 
-  @NotNull
-  private List<AnAction> getTouchbarActions() {
-    final DefaultActionGroup left = new DefaultActionGroup(new MyPrevDifferenceAction(), new MyNextDifferenceAction());
-    final DefaultActionGroup main = new DefaultActionGroup(new MyPrevChangeAction(), new MyNextChangeAction());
-    TouchbarDataKeys.putActionDescriptor(main).setShowText(true).setShowImage(false).setMainGroup(true);
-    return Arrays.asList(left, main);
+  /**
+   * @see com.intellij.openapi.vcs.changes.actions.diff.ChangeGoToChangePopupAction
+   */
+  protected @Nullable AnAction createGoToChangeAction() {
+    return null;
   }
 
   //
@@ -407,7 +478,8 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   private boolean isFocusedInWindow() {
     return DiffUtil.isFocusedComponentInWindow(myContentPanel) ||
-           DiffUtil.isFocusedComponentInWindow(myToolbar.getComponent());
+           DiffUtil.isFocusedComponentInWindow(myToolbar.getComponent()) ||
+           (myIsNewToolbar && DiffUtil.isFocusedComponentInWindow(myRightToolbar.getComponent()));
   }
 
   private void requestFocusInWindow() {
@@ -416,8 +488,14 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   @NotNull
   protected List<DiffTool> getToolOrderFromSettings(@NotNull List<? extends DiffTool> availableTools) {
+    return getToolOrderFromSettings(getSettings(), availableTools);
+  }
+
+  @NotNull
+  public static List<DiffTool> getToolOrderFromSettings(@NotNull DiffSettings diffSettings,
+                                                        @NotNull List<? extends DiffTool> availableTools) {
     List<DiffTool> result = new ArrayList<>();
-    List<String> savedOrder = getSettings().getDiffToolsOrder();
+    List<String> savedOrder = diffSettings.getDiffToolsOrder();
 
     for (final String clazz : savedOrder) {
       DiffTool tool = ContainerUtil.find(availableTools, t -> t.getClass().getCanonicalName().equals(clazz));
@@ -451,8 +529,10 @@ public abstract class DiffRequestProcessor implements Disposable {
       myState.destroy();
       myToolbarStatusPanel.setContent(null);
       myContentPanel.setContent(null);
+      myDiffInfoWrapper.setContent(null);
 
       myToolbarGroup.removeAll();
+      myRightToolbarGroup.removeAll();
       myPopupActionGroup.removeAll();
       ActionUtil.clearActions(myMainPanel);
 
@@ -463,15 +543,28 @@ public abstract class DiffRequestProcessor implements Disposable {
     });
   }
 
+  private static final boolean SHOW_VIEWER_ACTIONS_IN_TOUCHBAR = Boolean.getBoolean("touchbar.diff.show.viewer.actions");
+
   protected void collectToolbarActions(@Nullable List<? extends AnAction> viewerActions) {
     myToolbarGroup.removeAll();
 
+    boolean oldToolbar = !myIsNewToolbar;
     List<AnAction> navigationActions = new ArrayList<>(getNavigationActions());
-    navigationActions.add(new MyChangeDiffToolAction());
+    if (oldToolbar) {
+      navigationActions.add(new MyChangeDiffToolAction());
+    }
+    else {
+      myRightToolbarGroup.add(new MyDiffToolChooser());
+    }
     DiffUtil.addActionBlock(myToolbarGroup,
                             navigationActions);
 
-    DiffUtil.addActionBlock(myToolbarGroup, viewerActions);
+    if (oldToolbar) {
+      DiffUtil.addActionBlock(myToolbarGroup, viewerActions, true);
+    }
+    else {
+      DiffUtil.addActionBlock(myRightToolbarGroup, viewerActions, false);
+    }
 
     List<AnAction> requestContextActions = myActiveRequest.getUserData(DiffUserDataKeys.CONTEXT_ACTIONS);
     DiffUtil.addActionBlock(myToolbarGroup, requestContextActions);
@@ -479,11 +572,22 @@ public abstract class DiffRequestProcessor implements Disposable {
     List<AnAction> contextActions = myContext.getUserData(DiffUserDataKeys.CONTEXT_ACTIONS);
     DiffUtil.addActionBlock(myToolbarGroup, contextActions);
 
-    DiffUtil.addActionBlock(myToolbarGroup,
-                            new ShowInExternalToolAction(),
-                            ActionManager.getInstance().getAction(IdeActions.ACTION_CONTEXT_HELP));
+    if (oldToolbar) {
+      DiffUtil.addActionBlock(myToolbarGroup,
+                              new ShowInExternalToolActionGroup(),
+                              ActionManager.getInstance().getAction(IdeActions.ACTION_CONTEXT_HELP));
+    }
 
-    myTouchbarActionGroup.replaceAll(getTouchbarActions());
+    if (SystemInfo.isMac) { // collect touchbar actions
+      myTouchbarActionGroup.removeAll();
+      myTouchbarActionGroup.addAll(
+        new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(), Separator.getInstance(),
+        new MyPrevChangeAction(), new MyNextChangeAction()
+      );
+      if (SHOW_VIEWER_ACTIONS_IN_TOUCHBAR && viewerActions != null) {
+        myTouchbarActionGroup.addAll(viewerActions);
+      }
+    }
   }
 
   protected void collectPopupActions(@Nullable List<? extends AnAction> viewerActions) {
@@ -505,8 +609,13 @@ public abstract class DiffRequestProcessor implements Disposable {
 
     ((ActionToolbarImpl)myToolbar).clearPresentationCache();
     myToolbar.updateActionsImmediately();
+    recursiveRegisterShortcutSet(myToolbarGroup, myMainPanel, null);
 
-    ActionUtil.recursiveRegisterShortcutSet(myToolbarGroup, myMainPanel, null);
+    if (myIsNewToolbar) {
+      ((ActionToolbarImpl)myRightToolbar).clearPresentationCache();
+      myRightToolbar.updateActionsImmediately();
+      recursiveRegisterShortcutSet(myRightToolbarGroup, myMainPanel, null);
+    }
   }
 
   @NotNull
@@ -535,7 +644,7 @@ public abstract class DiffRequestProcessor implements Disposable {
     return myPanel;
   }
 
-  @Nullable
+  @NotNull
   public JComponent getPreferredFocusedComponent() {
     JComponent component = myState.getPreferredFocusedComponent();
     JComponent fallback = myToolbar.getComponent();
@@ -575,6 +684,7 @@ public abstract class DiffRequestProcessor implements Disposable {
     return mySettings;
   }
 
+  @Override
   public boolean isDisposed() {
     return myDisposed;
   }
@@ -584,24 +694,17 @@ public abstract class DiffRequestProcessor implements Disposable {
   //
 
   private class ShowInExternalToolAction extends DumbAwareAction {
-    ShowInExternalToolAction() {
-      ActionUtil.copyFrom(this, "Diff.ShowInExternalTool");
-    }
+    @NotNull private final ExternalDiffSettings.ExternalTool myExternalTool;
 
-    @Override
-    public void update(@NotNull AnActionEvent e) {
-      if (!ExternalDiffTool.isEnabled()) {
-        e.getPresentation().setEnabledAndVisible(false);
-        return;
-      }
-      e.getPresentation().setEnabled(ExternalDiffTool.canShow(myActiveRequest));
-      e.getPresentation().setVisible(true);
+    private ShowInExternalToolAction(ExternalDiffSettings.@NotNull ExternalTool externalTool) {
+      super(DiffBundle.message("action.use.external.tool.text", externalTool.getName()));
+      myExternalTool = externalTool;
     }
 
     @Override
     public void actionPerformed(@NotNull AnActionEvent e) {
       try {
-        ExternalDiffTool.showRequest(e.getProject(), myActiveRequest);
+        ExternalDiffTool.showRequest(e.getProject(), myActiveRequest, myExternalTool);
       }
       catch (ProcessCanceledException ex) {
         throw ex;
@@ -612,14 +715,100 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
+  private class ShowInExternalToolActionGroup extends ActionGroup implements DumbAware {
+    private ShowInExternalToolActionGroup() {
+      ActionUtil.copyFrom(this, "Diff.ShowInExternalTool");
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      getShowActions().get(0).actionPerformed(e);
+    }
+
+    @Override
+    public void update(@NotNull AnActionEvent e) {
+      Presentation presentation = e.getPresentation();
+      if (!ExternalDiffTool.isEnabled()) {
+        presentation.setEnabledAndVisible(false);
+        return;
+      }
+
+      List<ShowInExternalToolAction> actions = getShowActions();
+
+      presentation.setEnabled(ExternalDiffTool.canShow(myActiveRequest));
+      presentation.setPerformGroup(actions.size() == 1);
+      presentation.putClientProperty(ActionButton.HIDE_DROPDOWN_ICON, presentation.isPerformGroup());
+      presentation.setPopupGroup(true);
+      presentation.setVisible(true);
+    }
+
+    @Override
+    public AnAction @NotNull [] getChildren(@Nullable AnActionEvent e) {
+      List<ShowInExternalToolAction> actions = getShowActions();
+      if (actions.size() <= 1) return AnAction.EMPTY_ARRAY;
+
+      return actions.toArray(AnAction.EMPTY_ARRAY);
+    }
+
+    @NotNull
+    private List<ShowInExternalToolAction> getShowActions() {
+      Map<ExternalToolGroup, List<ExternalTool>> externalTools = ExternalDiffSettings.getInstance().getExternalTools();
+      List<ExternalTool> diffTools = externalTools.getOrDefault(ExternalToolGroup.DIFF_TOOL, Collections.emptyList());
+
+      return ContainerUtil.map(diffTools, ShowInExternalToolAction::new);
+    }
+  }
+
+  private class MyDiffToolChooser extends DiffToolChooser {
+    private MyDiffToolChooser() {
+      super(chooseNotNull(myProject, myContext.getProject()));
+    }
+
+    @Override
+    public void onSelected(@NotNull Project project, @NotNull DiffTool diffTool) {
+      DiffUsageTriggerCollector.logToggleDiffTool(project, diffTool, myContext.getUserData(DiffUserDataKeys.PLACE));
+      moveToolOnTop(diffTool);
+
+      updateRequest(true);
+    }
+
+    @NotNull
+    @Override
+    public List<DiffTool> getTools() {
+      return new ArrayList<>(getAvailableFittedTools());
+    }
+
+    @NotNull
+    @Override
+    public DiffTool getActiveTool() {
+      return myState.getActiveTool();
+    }
+
+    @Nullable
+    @Override
+    public DiffTool getForcedDiffTool() {
+      return myForcedDiffTool;
+    }
+  }
+
   private class MyChangeDiffToolAction extends ComboBoxAction implements DumbAware {
     // TODO: add icons for diff tools, show only icon in toolbar - to reduce jumping on change ?
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
 
     @Override
     public void update(@NotNull AnActionEvent e) {
       Presentation presentation = e.getPresentation();
 
       DiffTool activeTool = myState.getActiveTool();
+      //noinspection DialogTitleCapitalization
       presentation.setText(activeTool.getName());
 
       if (myForcedDiffTool != null) {
@@ -639,7 +828,7 @@ public abstract class DiffRequestProcessor implements Disposable {
 
     @NotNull
     @Override
-    protected DefaultActionGroup createPopupActionGroup(JComponent button) {
+    protected DefaultActionGroup createPopupActionGroup(@NotNull JComponent button, @NotNull DataContext context) {
       DefaultActionGroup group = new DefaultActionGroup();
       for (DiffTool tool : getAvailableFittedTools()) {
         group.add(new DiffToolToggleAction(tool));
@@ -653,8 +842,14 @@ public abstract class DiffRequestProcessor implements Disposable {
     @NotNull private final DiffTool myDiffTool;
 
     private DiffToolToggleAction(@NotNull DiffTool tool) {
+      //noinspection DialogTitleCapitalization
       super(tool.getName());
       myDiffTool = tool;
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -666,7 +861,7 @@ public abstract class DiffRequestProcessor implements Disposable {
     public void actionPerformed(@NotNull AnActionEvent e) {
       if (myState.getActiveTool() == myDiffTool) return;
 
-      DiffUsageTriggerCollector.trigger(e.getProject(), "toggle.diff.tool", myDiffTool, myContext.getUserData(DiffUserDataKeys.PLACE));
+      DiffUsageTriggerCollector.logToggleDiffTool(e.getProject(), myDiffTool, myContext.getUserData(DiffUserDataKeys.PLACE));
       moveToolOnTop(myDiffTool);
 
       updateRequest(true);
@@ -676,6 +871,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   private class ShowActionGroupPopupAction extends DumbAwareAction {
     ShowActionGroupPopupAction() {
       ActionUtil.copyFrom(this, "Diff.ShowSettingsPopup");
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -710,10 +910,16 @@ public abstract class DiffRequestProcessor implements Disposable {
     return false;
   }
 
+  /**
+   * @see #goToNextChangeImpl(boolean, Runnable)
+   */
   @RequiresEdt
   protected void goToNextChange(boolean fromDifferences) {
   }
 
+  /**
+   * @see #goToPrevChangeImpl(boolean, Runnable)
+   */
   @RequiresEdt
   protected void goToPrevChange(boolean fromDifferences) {
   }
@@ -723,9 +929,40 @@ public abstract class DiffRequestProcessor implements Disposable {
     return false;
   }
 
+  protected void goToNextChangeImpl(boolean fromDifferences, @NotNull Runnable navigationTask) {
+    runWithScrollPolicy(fromDifferences, ScrollToPolicy.FIRST_CHANGE, navigationTask);
+  }
+
+  protected void goToPrevChangeImpl(boolean fromDifferences, @NotNull Runnable navigationTask) {
+    runWithScrollPolicy(fromDifferences, ScrollToPolicy.LAST_CHANGE, navigationTask);
+  }
+
+  private void runWithScrollPolicy(boolean fromDifferences, @NotNull ScrollToPolicy lastChange, @NotNull Runnable navigationTask) {
+    if (fromDifferences) {
+      assert myCurrentScrollToPolicy == null;
+      myCurrentScrollToPolicy = lastChange;
+      try {
+        navigationTask.run();
+        updateRequest();
+      }
+      finally {
+        myCurrentScrollToPolicy = null;
+      }
+    }
+    else {
+      navigationTask.run();
+      updateRequest();
+    }
+  }
+
   protected class MyNextDifferenceAction extends NextDifferenceAction {
 
     public MyNextDifferenceAction() {
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -767,12 +1004,18 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
 
       goToNextChange(true);
+      myIterationState = IterationState.NONE;
     }
   }
 
   protected class MyPrevDifferenceAction extends PrevDifferenceAction {
 
     public MyPrevDifferenceAction() {
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -814,11 +1057,16 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
 
       goToPrevChange(true);
+      myIterationState = IterationState.NONE;
     }
   }
 
   private void notifyMessage(@NotNull AnActionEvent e, boolean next) {
-    if (!myContentPanel.isShowing()) return;
+    notifyMessage(e, myContentPanel, next);
+  }
+
+  public static void notifyMessage(@NotNull AnActionEvent e, @NotNull JComponent contentPanel, boolean next) {
+    if (!contentPanel.isShowing()) return;
     Editor editor = e.getData(DiffDataKeys.CURRENT_EDITOR);
 
     // TODO: provide "change" word in chain UserData - for tests/etc
@@ -828,15 +1076,15 @@ public abstract class DiffRequestProcessor implements Disposable {
                                                                         DiffUtil.getSettingsConfigurablePath()));
 
     final LightweightHint hint = new LightweightHint(HintUtil.createInformationLabel(message));
-    Point point = new Point(myContentPanel.getWidth() / 2, next ? myContentPanel.getHeight() - JBUIScale.scale(40) : JBUIScale.scale(40));
+    Point point = new Point(contentPanel.getWidth() / 2, next ? contentPanel.getHeight() - JBUIScale.scale(40) : JBUIScale.scale(40));
 
-    if (editor == null) {
+    if (editor == null || editor.isDisposed()) {
       final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
-      final HintHint hintHint = createNotifyHint(myContentPanel, point, next);
-      hint.show(myContentPanel, point.x, point.y, owner instanceof JComponent ? (JComponent)owner : null, hintHint);
+      final HintHint hintHint = createNotifyHint(contentPanel, point, next);
+      hint.show(contentPanel, point.x, point.y, owner instanceof JComponent ? (JComponent)owner : null, hintHint);
     }
     else {
-      int x = SwingUtilities.convertPoint(myContentPanel, point, editor.getComponent()).x;
+      int x = SwingUtilities.convertPoint(contentPanel, point, editor.getComponent()).x;
 
       JComponent header = editor.getHeaderComponent();
       int shift = editor.getScrollingModel().getVerticalScrollOffset() - (header != null ? header.getHeight() : 0);
@@ -864,7 +1112,8 @@ public abstract class DiffRequestProcessor implements Disposable {
     return new HintHint(component, point)
       .setPreferredPosition(above ? Balloon.Position.above : Balloon.Position.below)
       .setAwtTooltip(true)
-      .setFont(UIUtil.getLabelFont().deriveFont(Font.BOLD))
+      .setFont(StartupUiUtil.getLabelFont().deriveFont(Font.BOLD))
+      .setBorderColor(HintUtil.getHintBorderColor())
       .setTextBg(HintUtil.getInformationColor())
       .setShowImmediately(true);
   }
@@ -872,10 +1121,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   // Iterate requests
 
   protected class MyNextChangeAction extends NextChangeAction {
-    public MyNextChangeAction() {
-      if (DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_IN_EDITOR, getContext())) {
-        patchShortcutSet(this, IdeActions.ACTION_NEXT_TAB, IdeActions.ACTION_NEXT_EDITOR_TAB);
-      }
+    public MyNextChangeAction() { }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -903,10 +1153,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   }
 
   protected class MyPrevChangeAction extends PrevChangeAction {
-    public MyPrevChangeAction() {
-      if (DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_IN_EDITOR, getContext())) {
-        patchShortcutSet(this, IdeActions.ACTION_PREVIOUS_TAB, IdeActions.ACTION_PREVIOUS_EDITOR_TAB);
-      }
+    public MyPrevChangeAction() { }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -931,26 +1182,6 @@ public abstract class DiffRequestProcessor implements Disposable {
 
       goToPrevChange(false);
     }
-  }
-
-  protected static void patchShortcutSet(@NotNull AnAction action,
-                                         @NotNull @NonNls String originalActionId,
-                                         @Nullable @NonNls String replacementActionId) {
-    //noinspection ConstantConditions
-    Keymap keymap = KeymapManager.getInstance().getActiveKeymap();
-    Shortcut[] originalShortcuts = keymap.getShortcuts(originalActionId);
-
-    Shortcut[] shortcuts = action.getShortcutSet().getShortcuts();
-    Set<Shortcut> newShortcuts = ContainerUtil.set(shortcuts);
-    boolean hadOriginalShortcut = ContainerUtil.removeAll(newShortcuts, originalShortcuts);
-    if (!hadOriginalShortcut) return;
-
-    if (replacementActionId != null) {
-      Shortcut[] replacementShortcuts = keymap.getShortcuts(replacementActionId);
-      ContainerUtil.addAll(newShortcuts, replacementShortcuts);
-    }
-
-    action.registerCustomShortcutSet(new CustomShortcutSet(newShortcuts.toArray(Shortcut.EMPTY_ARRAY)), null);
   }
 
   //
@@ -1000,7 +1231,7 @@ public abstract class DiffRequestProcessor implements Disposable {
       else if (CommonDataKeys.PROJECT.is(dataId)) {
         return myProject;
       }
-      else if (PlatformDataKeys.HELP_ID.is(dataId)) {
+      else if (PlatformCoreDataKeys.HELP_ID.is(dataId)) {
         if (myActiveRequest.getUserData(DiffUserDataKeys.HELP_ID) != null) {
           return myActiveRequest.getUserData(DiffUserDataKeys.HELP_ID);
         }
@@ -1010,9 +1241,6 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
       else if (DiffDataKeys.DIFF_CONTEXT.is(dataId)) {
         return myContext;
-      }
-      else if (TouchbarDataKeys.ACTIONS_KEY.is(dataId)) {
-        return myTouchbarActionGroup;
       }
 
       data = myState.getData(dataId);
@@ -1057,7 +1285,6 @@ public abstract class DiffRequestProcessor implements Disposable {
     @Override
     public final Component getDefaultComponent(final Container focusCycleRoot) {
       JComponent component = DiffRequestProcessor.this.getPreferredFocusedComponent();
-      if (component == null) return null;
       return IdeFocusTraversalPolicy.getPreferredFocusedComponent(component, this);
     }
 
@@ -1210,19 +1437,12 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   private class ErrorState implements ViewerState {
     @Nullable private final DiffTool myDiffTool;
-    @NotNull private final MessageDiffRequest myRequest;
 
     @NotNull private final DiffViewer myViewer;
 
-    ErrorState(@NotNull MessageDiffRequest request) {
-      this(request, null);
-    }
-
     ErrorState(@NotNull MessageDiffRequest request, @Nullable DiffTool diffTool) {
       myDiffTool = diffTool;
-      myRequest = request;
-
-      myViewer = ErrorDiffTool.INSTANCE.createComponent(myContext, myRequest);
+      myViewer = ErrorDiffTool.INSTANCE.createComponent(myContext, request);
     }
 
     @Override
@@ -1280,13 +1500,19 @@ public abstract class DiffRequestProcessor implements Disposable {
       setTitle(myActiveRequest.getTitle());
 
       FrameDiffTool.ToolbarComponents toolbarComponents = myViewer.init();
-
+      FrameDiffTool.DiffInfo diffInfo = toolbarComponents.diffInfo;
+      if (diffInfo != null) {
+        myDiffInfoWrapper.setContent(diffInfo.getComponent());
+      }
+      else {
+        myDiffInfoWrapper.setContent(null);
+      }
       buildToolbar(toolbarComponents.toolbarActions);
       buildActionPopup(toolbarComponents.popupActions);
 
       myToolbarStatusPanel.setContent(toolbarComponents.statusPanel);
       if (shouldAddToolbarBottomBorder(toolbarComponents)) {
-        myToolbarWrapper.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
+        myTopPanel.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
       }
     }
 
@@ -1350,12 +1576,12 @@ public abstract class DiffRequestProcessor implements Disposable {
 
       myToolbarStatusPanel.setContent(toolbarComponents1.statusPanel); // TODO: combine both panels ?
       if (shouldAddToolbarBottomBorder(toolbarComponents1)) {
-        myToolbarWrapper.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
+        myTopPanel.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
       }
     }
 
     @Nullable
-    private List<AnAction> mergeActions(@Nullable List<AnAction> actions1, @Nullable List<AnAction> actions2) {
+    private static List<AnAction> mergeActions(@Nullable List<AnAction> actions1, @Nullable List<AnAction> actions2) {
       if (actions1 == null && actions2 == null) return null;
       if (ContainerUtil.isEmpty(actions1)) return actions2;
       if (ContainerUtil.isEmpty(actions2)) return actions1;
