@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.impl;
 
 import com.intellij.execution.filters.*;
@@ -6,10 +6,11 @@ import com.intellij.execution.ui.ConsoleView;
 import com.intellij.execution.ui.ConsoleViewContentType;
 import com.intellij.ide.ui.LafManager;
 import com.intellij.ide.ui.LafManagerListener;
-import com.intellij.ide.ui.UISettings;
+import com.intellij.ide.ui.UISettingsUtils;
 import com.intellij.lexer.Lexer;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.undo.UndoUtil;
+import com.intellij.openapi.components.Service;
 import com.intellij.openapi.editor.*;
 import com.intellij.openapi.editor.colors.*;
 import com.intellij.openapi.editor.colors.impl.DelegateColorScheme;
@@ -37,15 +38,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
-/**
- * @author peter
- */
 public final class ConsoleViewUtil {
   public static final Key<Boolean> EDITOR_IS_CONSOLE_HISTORY_VIEW = Key.create("EDITOR_IS_CONSOLE_HISTORY_VIEW");
 
   private static final Key<Boolean> REPLACE_ACTION_ENABLED = Key.create("REPLACE_ACTION_ENABLED");
 
-  public static @NotNull EditorEx setupConsoleEditor(Project project, boolean foldingOutlineShown, boolean lineMarkerAreaShown) {
+  public static @NotNull EditorEx setupConsoleEditor(@Nullable Project project, boolean foldingOutlineShown, boolean lineMarkerAreaShown) {
     EditorFactory editorFactory = EditorFactory.getInstance();
     Document document = ((EditorFactoryImpl)editorFactory).createDocument(true);
     UndoUtil.disableUndoFor(document);
@@ -56,8 +54,7 @@ public final class ConsoleViewUtil {
 
   public static void setupConsoleEditor(final @NotNull EditorEx editor, final boolean foldingOutlineShown, final boolean lineMarkerAreaShown) {
     ApplicationManager.getApplication().runReadAction(() -> {
-
-      final EditorSettings editorSettings = editor.getSettings();
+      EditorSettings editorSettings = editor.getSettings();
       editorSettings.setLineMarkerAreaShown(lineMarkerAreaShown);
       editorSettings.setIndentGuidesShown(false);
       editorSettings.setLineNumbersShown(false);
@@ -70,24 +67,30 @@ public final class ConsoleViewUtil {
       editorSettings.setShowingSpecialChars(false);
       editor.getGutterComponentEx().setPaintBackground(false);
 
-      final DelegateColorScheme scheme = updateConsoleColorScheme(editor.getColorsScheme());
-      if (UISettings.getInstance().getPresentationMode()) {
-        scheme.setEditorFontSize(UISettings.getInstance().getPresentationModeFontSize());
-      }
+      DelegateColorScheme scheme = updateConsoleColorScheme(editor.getColorsScheme());
+      scheme.setEditorFontSize(UISettingsUtils.getInstance().getScaledEditorFontSize());
       editor.setColorsScheme(scheme);
       editor.setHighlighter(new NullEditorHighlighter());
     });
   }
 
-  private static class NullEditorHighlighter extends EmptyEditorHighlighter {
+  public static void setupLanguageConsoleEditor(final @NotNull EditorEx editor) {
+    setupConsoleEditor(editor, false, false);
+
+    editor.getContentComponent().setFocusCycleRoot(false);
+    editor.setBorder(null);
+
+    EditorSettings editorSettings = editor.getSettings();
+    editorSettings.setAdditionalLinesCount(1);
+    editorSettings.setAdditionalColumnsCount(1);
+  }
+
+  private static final class NullEditorHighlighter extends EmptyEditorHighlighter {
     private static final TextAttributes NULL_ATTRIBUTES = new TextAttributes();
 
     NullEditorHighlighter() {
       super(NULL_ATTRIBUTES);
     }
-
-    @Override
-    public void setAttributes(TextAttributes attributes) {}
 
     @Override
     public void setColorScheme(@NotNull EditorColorsScheme scheme) {}
@@ -112,6 +115,11 @@ public final class ConsoleViewUtil {
       }
 
       @Override
+      public float getEditorFontSize2D() {
+        return getConsoleFontSize2D();
+      }
+
+      @Override
       public String getEditorFontName() {
         return getConsoleFontName();
       }
@@ -130,6 +138,11 @@ public final class ConsoleViewUtil {
       public void setEditorFontSize(int fontSize) {
         setConsoleFontSize(fontSize);
       }
+
+      @Override
+      public void setEditorFontSize(float fontSize) {
+        setConsoleFontSize(fontSize);
+      }
     };
   }
 
@@ -145,9 +158,12 @@ public final class ConsoleViewUtil {
     editor.putUserData(REPLACE_ACTION_ENABLED, true);
   }
 
+  @Service(Service.Level.APP)
   private static final class ColorCache {
-    static {
-      ApplicationManager.getApplication().getMessageBus().connect().subscribe(LafManagerListener.TOPIC, new LafManagerListener() {
+    static final ColorCache INSTANCE = new ColorCache();
+
+    private ColorCache() {
+      ApplicationManager.getApplication().getMessageBus().simpleConnect().subscribe(LafManagerListener.TOPIC, new LafManagerListener() {
         @Override
         public void lookAndFeelChanged(@NotNull LafManager source) {
           mergedTextAttributes.clear();
@@ -155,8 +171,8 @@ public final class ConsoleViewUtil {
       });
     }
 
-    static final Map<Key<?>, List<TextAttributesKey>> textAttributeKeys = new ConcurrentHashMap<>();
-    static final Map<Key<?>, TextAttributes> mergedTextAttributes = ConcurrentFactoryMap.createMap(contentKey-> {
+    private final Map<Key<?>, List<TextAttributesKey>> textAttributeKeys = new ConcurrentHashMap<>();
+    private final Map<Key<?>, TextAttributes> mergedTextAttributes = ConcurrentFactoryMap.createMap(contentKey-> {
         EditorColorsScheme scheme = EditorColorsManager.getInstance().getGlobalScheme();
         TextAttributes result = scheme.getAttributes(HighlighterColors.TEXT);
         for (TextAttributesKey key : textAttributeKeys.get(contentKey)) {
@@ -169,7 +185,10 @@ public final class ConsoleViewUtil {
       }
     );
 
-    static final Map<List<TextAttributesKey>, Key<?>> keys = ConcurrentFactoryMap.createMap(keys-> {
+    private final Map<List<TextAttributesKey>, Key<?>> keys = new ConcurrentHashMap<>();
+
+    private Key<?> getKey(List<TextAttributesKey> keyList) {
+      return keys.computeIfAbsent(keyList, keys -> {
         StringBuilder keyName = new StringBuilder("ConsoleViewUtil_");
         for (TextAttributesKey key : keys) {
           keyName.append("_").append(key.getExternalName());
@@ -185,8 +204,8 @@ public final class ConsoleViewUtil {
 
         ConsoleViewContentType.registerNewConsoleViewType(newKey, contentType);
         return newKey;
-      }
-    );
+      });
+    }
   }
 
   public static void printWithHighlighting(@NotNull ConsoleView console, @NotNull String text, @NotNull SyntaxHighlighter highlighter) {
@@ -215,12 +234,13 @@ public final class ConsoleViewUtil {
     }
   }
 
-  public static @NotNull ConsoleViewContentType getContentTypeForToken(@NotNull IElementType tokenType, @NotNull SyntaxHighlighter highlighter) {
+  public static @NotNull ConsoleViewContentType getContentTypeForToken(@NotNull IElementType tokenType,
+                                                                       @NotNull SyntaxHighlighter highlighter) {
     TextAttributesKey[] keys = highlighter.getTokenHighlights(tokenType);
     if (keys.length == 0) {
       return ConsoleViewContentType.NORMAL_OUTPUT;
     }
-    return ConsoleViewContentType.getConsoleViewType(ColorCache.keys.get(Arrays.asList(keys)));
+    return ConsoleViewContentType.getConsoleViewType(ColorCache.INSTANCE.getKey(List.of(keys)));
   }
 
   public static void printAsFileType(@NotNull ConsoleView console, @NotNull String text, @NotNull FileType fileType) {
@@ -260,19 +280,15 @@ public final class ConsoleViewUtil {
     if (inputFilters.isEmpty()) {
       return (text, contentType) -> null;
     }
-    CompositeInputFilter compositeInputFilter = new CompositeInputFilter(project);
+    List<InputFilter> allFilters = new ArrayList<>();
     for (ConsoleInputFilterProvider eachProvider : inputFilters) {
-      List<InputFilter> filters;
       if (eachProvider instanceof ConsoleDependentInputFilterProvider) {
-        filters = ((ConsoleDependentInputFilterProvider)eachProvider).getDefaultFilters(consoleView, project, searchScope);
+        allFilters.addAll(((ConsoleDependentInputFilterProvider)eachProvider).getDefaultFilters(consoleView, project, searchScope));
       }
       else {
-        filters = Arrays.asList(eachProvider.getDefaultFilters(project));
-      }
-      for (InputFilter filter : filters) {
-        compositeInputFilter.addFilter(filter);
+        allFilters.addAll(Arrays.asList(eachProvider.getDefaultFilters(project)));
       }
     }
-    return compositeInputFilter;
+    return new CompositeInputFilter(project, allFilters);
   }
 }
