@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.wsl;
 
 import com.google.common.net.InetAddresses;
@@ -10,18 +10,20 @@ import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.configurations.PathEnvironmentVariableUtil;
 import com.intellij.execution.process.*;
 import com.intellij.ide.IdeBundle;
-import com.intellij.openapi.application.Experiments;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.NullableLazyValue;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.OSAgnosticPathUtil;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.util.text.Strings;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.openapi.vfs.impl.local.LocalFileSystemBase;
-import com.intellij.util.*;
+import com.intellij.openapi.vfs.impl.wsl.WslConstants;
+import com.intellij.util.Consumer;
+import com.intellij.util.Functions;
+import com.intellij.util.ObjectUtils;
+import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
@@ -31,37 +33,51 @@ import org.jetbrains.annotations.Nullable;
 import java.io.File;
 import java.io.OutputStream;
 import java.io.PrintWriter;
+import java.net.DatagramSocket;
 import java.net.InetAddress;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.Supplier;
+import java.util.regex.Pattern;
 
 import static com.intellij.execution.wsl.WSLUtil.LOG;
+import static com.intellij.openapi.util.NullableLazyValue.lazyNullable;
 
 /**
  * Represents a single linux distribution in WSL, installed after <a href="https://blogs.msdn.microsoft.com/commandline/2017/10/11/whats-new-in-wsl-in-windows-10-fall-creators-update/">Fall Creators Update</a>
  *
  * @see WSLUtil
  */
-public class WSLDistribution {
+public class WSLDistribution implements AbstractWslDistribution {
   public static final String DEFAULT_WSL_MNT_ROOT = "/mnt/";
   private static final int RESOLVE_SYMLINK_TIMEOUT = 10000;
   private static final String RUN_PARAMETER = "run";
-  public static final String UNC_PREFIX = "\\\\wsl$\\";
-  private static final String WSLENV = "WSLENV";
-  private static final int DEFAULT_TIMEOUT = SystemProperties.getIntProperty("ide.wsl.probe.timeout", 20_000);
+  static final int DEFAULT_TIMEOUT = SystemProperties.getIntProperty("ide.wsl.probe.timeout", 20_000);
+  private static final String SHELL_PARAMETER = "$SHELL";
+  public static final String WSL_EXE = "wsl.exe";
+  public static final String DISTRIBUTION_PARAMETER = "--distribution";
+  public static final String EXIT_CODE_PARAMETER = "; exitcode=$?";
+  public static final String EXEC_PARAMETER = "--exec";
 
   private static final Key<ProcessListener> SUDO_LISTENER_KEY = Key.create("WSL sudo listener");
 
+  /**
+   * @see <a href="https://www.gnu.org/software/bash/manual/html_node/Definitions.html#index-name">bash identifier definition</a>
+   */
+  private static final Pattern ENV_VARIABLE_NAME_PATTERN = Pattern.compile("[a-zA-Z_][a-zA-Z0-9_]*");
+
   private final @NotNull WslDistributionDescriptor myDescriptor;
   private final @Nullable Path myExecutablePath;
-  private final NullableLazyValue<String> myHostIp = NullableLazyValue.createValue(this::readHostIp);
-  private final NullableLazyValue<String> myWslIp = NullableLazyValue.createValue(this::readWslIp);
-  private final NullableLazyValue<String> myShellPath = NullableLazyValue.createValue(this::readShellPath);
-  private final NullableLazyValue<String> myUserHomeProvider = NullableLazyValue.createValue(this::readUserHome);
+  private @Nullable Integer myVersion;
+  private final NullableLazyValue<String> myHostIp = lazyNullable(this::readHostIp);
+  private final NullableLazyValue<String> myWslIp = lazyNullable(this::readWslIp);
+  private final NullableLazyValue<String> myShellPath = lazyNullable(this::readShellPath);
+  private final NullableLazyValue<String> myUserHomeProvider = lazyNullable(this::readUserHome);
 
   protected WSLDistribution(@NotNull WSLDistribution dist) {
     this(dist.myDescriptor, dist.myExecutablePath);
+    myVersion = dist.myVersion;
   }
 
   WSLDistribution(@NotNull WslDistributionDescriptor descriptor, @Nullable Path executablePath) {
@@ -74,11 +90,11 @@ public class WSLDistribution {
   }
 
   /**
-   * @deprecated please don't use it, to be removed
    * @return executable file, null for WSL distributions parsed from `wsl.exe --list` output
+   * @deprecated please don't use it, to be will be removed after we collect statistics and make sure versions before 1903 aren't used.
+   * Check statistics and remove in the next version
    */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  @Deprecated
+  @Deprecated(forRemoval = true)
   public @Nullable Path getExecutablePath() {
     return myExecutablePath;
   }
@@ -106,12 +122,18 @@ public class WSLDistribution {
     return null;
   }
 
+  void setVersion(@Nullable Integer version) {
+    myVersion = version;
+  }
+
   /**
-   * @return creates and patches command line, e.g:
-   * {@code ruby -v} => {@code bash -c "ruby -v"}
+   * @return version if it can be determined or -1 instead
    */
-  public @NotNull GeneralCommandLine createWslCommandLine(String @NotNull ... command) throws ExecutionException {
-    return patchCommandLine(new GeneralCommandLine(command), null, new WSLCommandLineOptions());
+  public int getVersion() {
+    if (myVersion == null) {
+      myVersion = WSLUtil.getWslVersion(this);
+    }
+    return myVersion;
   }
 
   /**
@@ -131,15 +153,13 @@ public class WSLDistribution {
     if (processHandlerConsumer != null) {
       processHandlerConsumer.consume(processHandler);
     }
-    return processHandler.runProcess(timeout);
-  }
-
-  private @NotNull ProcessOutput executeOnWsl(@NotNull GeneralCommandLine commandLine,
-                                              @NotNull WSLCommandLineOptions options,
-                                              int timeout) throws ExecutionException {
-    patchCommandLine(commandLine, null, options);
-    CapturingProcessHandler processHandler = new CapturingProcessHandler(commandLine);
-    return processHandler.runProcess(timeout);
+    ProcessOutput output = processHandler.runProcess(timeout);
+    if (output.getExitCode() != 0 || output.isTimeout() || output.isCancelled()) {
+      LOG.info("command on wsl: " + commandLine.getCommandLineString() + " was failed:" +
+               "ec=" + output.getExitCode() + ",timeout=" + output.isTimeout() + ",cancelled=" + output.isCancelled()
+               + ",stderr=" + output.getStderr() + ",stdout=" + output.getStdout());
+    }
+    return output;
   }
 
   public @NotNull ProcessOutput executeOnWsl(int timeout, @NonNls String @NotNull ... command) throws ExecutionException {
@@ -147,44 +167,9 @@ public class WSLDistribution {
   }
 
   /**
-   * Copying changed files recursively from wslPath/ to windowsPath/; with rsync
-   *
-   * @param wslPath           source path inside wsl, e.g. /usr/bin
-   * @param windowsPath       target windows path, e.g. C:/tmp; Directory going to be created
-   * @param additionalOptions may be used for --delete (not recommended), --include and so on
-   * @param handlerConsumer   consumes process handler just before execution. Can be used for fast cancellation
-   * @return process output
-   */
-
-  @SuppressWarnings("UnusedReturnValue")
-  public ProcessOutput copyFromWsl(@NotNull String wslPath,
-                                   @NotNull String windowsPath,
-                                   @Nullable List<String> additionalOptions,
-                                   @Nullable Consumer<? super ProcessHandler> handlerConsumer
-  )
-    throws ExecutionException {
-    //noinspection ResultOfMethodCallIgnored
-    new File(windowsPath).mkdirs();
-    List<String> command = new ArrayList<>(Arrays.asList("rsync", "-cr"));
-
-    if (additionalOptions != null) {
-      command.addAll(additionalOptions);
-    }
-
-    command.add(wslPath + "/");
-    String targetWslPath = getWslPath(windowsPath);
-    if (targetWslPath == null) {
-      throw new ExecutionException(IdeBundle.message("wsl.rsync.unable.to.copy.files.dialog.message", windowsPath));
-    }
-    command.add(targetWslPath + "/");
-    return executeOnWsl(command, new WSLCommandLineOptions(), -1, handlerConsumer);
-  }
-
-  /**
    * @deprecated use {@link #patchCommandLine(GeneralCommandLine, Project, WSLCommandLineOptions)} instead
    */
   @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
                                                                     @Nullable Project project,
                                                                     @Nullable String remoteWorkingDir,
@@ -200,20 +185,7 @@ public class WSLDistribution {
     }
   }
 
-  /**
-   * Patches passed command line to make it runnable in WSL context, e.g changes {@code date} to {@code ubuntu run "date"}.<p/>
-   * <p>
-   * Environment variables and working directory are mapped to the chain calls: working dir using {@code cd} and environment variables using {@code export},
-   * e.g {@code bash -c "export var1=val1 && export var2=val2 && cd /some/working/dir && date"}.<p/>
-   * <p>
-   * Method should properly handle quotation and escaping of the environment variables.<p/>
-   *
-   * @param commandLine command line to patch
-   * @param project     current project
-   * @param options     {@link WSLCommandLineOptions} instance
-   * @param <T>         GeneralCommandLine or descendant
-   * @return original {@code commandLine}, prepared to run in WSL context
-   */
+  @Override
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
                                                                     @Nullable Project project,
                                                                     @NotNull WSLCommandLineOptions options) throws ExecutionException {
@@ -227,7 +199,9 @@ public class WSLDistribution {
     boolean executeCommandInShell = wslExe == null || options.isExecuteCommandInShell();
     List<String> linuxCommand = buildLinuxCommand(commandLine, executeCommandInShell);
 
-    if (options.isSudo()) { // fixme shouldn't we sudo for every chunk? also, preserve-env, login?
+    final boolean isElevated = options.isSudo();
+    // use old approach in case of wsl.exe is not available
+    if (isElevated && wslExe == null) { // fixme shouldn't we sudo for every chunk? also, preserve-env, login?
       prependCommand(linuxCommand, "sudo", "-S", "-p", "''");
       //TODO[traff]: ask password only if it is needed. When user is logged as root, password isn't asked.
 
@@ -263,7 +237,12 @@ public class WSLDistribution {
     }
     if (executeCommandInShell && !options.isPassEnvVarsUsingInterop()) {
       commandLine.getEnvironment().forEach((key, val) -> {
-        prependCommand(linuxCommand, "export", CommandLineUtil.posixQuote(key) + "=" + CommandLineUtil.posixQuote(val), "&&");
+        if (ENV_VARIABLE_NAME_PATTERN.matcher(key).matches()) {
+          prependCommand(linuxCommand, "export", key + "=" + CommandLineUtil.posixQuote(val), "&&");
+        }
+        else {
+          LOG.debug("Can not pass environment variable (bad name): '", key, "'");
+        }
       });
       commandLine.getEnvironment().clear();
     }
@@ -280,13 +259,21 @@ public class WSLDistribution {
     String linuxCommandStr = StringUtil.join(linuxCommand, " ");
     if (wslExe != null) {
       commandLine.setExePath(wslExe.toString());
-      commandLine.addParameters("--distribution", getMsId());
+      commandLine.addParameters(DISTRIBUTION_PARAMETER, getMsId());
+      if (isElevated) {
+        commandLine.addParameters("-u", "root");
+      }
       if (options.isExecuteCommandInShell()) {
+        // workaround WSL1 problem: https://github.com/microsoft/WSL/issues/4082
+        if (options.getSleepTimeoutSec() > 0 && getVersion() == 1) {
+          linuxCommandStr += EXIT_CODE_PARAMETER + "; sleep " + options.getSleepTimeoutSec() + "; (exit $exitcode)";
+        }
+
         if (options.isExecuteCommandInDefaultShell()) {
-          commandLine.addParameters("$SHELL", "-c", linuxCommandStr);
+          commandLine.addParameters(SHELL_PARAMETER, "-c", linuxCommandStr);
         }
         else {
-          commandLine.addParameters("--exec", options.getShellPath());
+          commandLine.addParameters(EXEC_PARAMETER, options.getShellPath());
           if (options.isExecuteCommandInInteractiveShell()) {
             commandLine.addParameters("-i");
           }
@@ -297,7 +284,7 @@ public class WSLDistribution {
         }
       }
       else {
-        commandLine.addParameter("--exec");
+        commandLine.addParameter(EXEC_PARAMETER);
         commandLine.addParameters(linuxCommand);
       }
     }
@@ -305,6 +292,12 @@ public class WSLDistribution {
       commandLine.setExePath(executable.toString());
       commandLine.addParameter(getRunCommandLineParameter());
       commandLine.addParameter(linuxCommandStr);
+    }
+
+    if (Registry.is("wsl.use.utf8.encoding", true)) {
+      // Unlike the default system encoding on Windows (e.g. cp-1251),
+      // UTF-8 is the default for most Linux distributions
+      commandLine.setCharset(StandardCharsets.UTF_8);
     }
 
     logCommandLineAfter(commandLine);
@@ -330,7 +323,7 @@ public class WSLDistribution {
   }
 
   public static @Nullable Path findWslExe() {
-    File file = PathEnvironmentVariableUtil.findInPath("wsl.exe");
+    File file = PathEnvironmentVariableUtil.findInPath(WSL_EXE);
     return file != null ? file.toPath() : null;
   }
 
@@ -351,13 +344,13 @@ public class WSLDistribution {
       }
     }
     if (builder.length() > 0) {
-      String prevValue = commandLine.getEnvironment().get(WSLENV);
+      String prevValue = commandLine.getEnvironment().get(WslConstants.WSLENV);
       if (prevValue == null) {
-        prevValue = commandLine.getParentEnvironment().get(WSLENV);
+        prevValue = commandLine.getParentEnvironment().get(WslConstants.WSLENV);
       }
       String value = prevValue != null ? StringUtil.trimEnd(prevValue, ':') + ':' + builder
                                        : builder.toString();
-      commandLine.getEnvironment().put(WSLENV, value);
+      commandLine.getEnvironment().put(WslConstants.WSLENV, value);
     }
   }
 
@@ -412,64 +405,78 @@ public class WSLDistribution {
   /**
    * @return environment map of the default user in wsl
    */
-  public @NotNull Map<String, String> getEnvironment() {
+  public @Nullable Map<String, String> getEnvironment() {
     try {
-      ProcessOutput processOutput =
-        executeOnWsl(Collections.singletonList("env"),
-                     new WSLCommandLineOptions()
-                       .setExecuteCommandInShell(true)
-                       .setExecuteCommandInLoginShell(true)
-                       .setExecuteCommandInInteractiveShell(true),
-                     5000,
-                     null);
-      Map<String, String> result = new HashMap<>();
-      for (String string : processOutput.getStdoutLines()) {
-        int assignIndex = string.indexOf('=');
-        if (assignIndex == -1) {
-          result.put(string, "");
+      ProcessOutput processOutput = WslExecution.executeInShellAndGetCommandOnlyStdout(
+        this, new GeneralCommandLine("env"),
+        new WSLCommandLineOptions()
+          .setExecuteCommandInShell(true)
+          .setExecuteCommandInLoginShell(true)
+          .setExecuteCommandInInteractiveShell(true),
+        5000);
+      if (processOutput.getExitCode() == 0) {
+        Map<String, String> result = new HashMap<>();
+        for (String string : processOutput.getStdoutLines()) {
+          int assignIndex = string.indexOf('=');
+          if (assignIndex == -1) {
+            result.put(string, "");
+          }
+          else {
+            result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
+          }
         }
-        else {
-          result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
-        }
+        return result;
       }
-      return result;
     }
     catch (ExecutionException e) {
       LOG.warn(e);
     }
+    return null;
+  }
 
-    return Collections.emptyMap();
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath) {
+    return getWindowsPath(wslPath, this::getMntRoot);
   }
 
   /**
    * @return Windows-dependent path for a file, pointed by {@code wslPath} in WSL, or {@code null} if path is unmappable
    */
-
-  public @Nullable @NlsSafe String getWindowsPath(@NotNull String wslPath) {
-    if (wslPath.startsWith(getMntRoot())) {
-      return WSLUtil.getWindowsPath(wslPath, getMntRoot());
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath, @NotNull Supplier<String> mntRootSupplier) {
+    if (containsDriveLetter(wslPath)) {
+      String windowsPath = WSLUtil.getWindowsPath(wslPath, mntRootSupplier.get());
+      if (windowsPath != null) {
+        return windowsPath;
+      }
     }
-    return getUNCRoot() + FileUtil.toSystemDependentName(wslPath);
+    return getUNCRootPathString() + FileUtil.toSystemDependentName(FileUtil.normalize(wslPath));
   }
 
-  /**
-   * @return Linux path for a file pointed by {@code windowsPath} or null if unavailable, like \\MACHINE\path
-   */
-  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
-    if (FileUtil.toSystemDependentName(windowsPath).startsWith(UNC_PREFIX)) {
-      windowsPath = StringUtil.trimStart(FileUtil.toSystemDependentName(windowsPath), UNC_PREFIX);
-      int index = windowsPath.indexOf('\\');
-      if (index == -1) return null;
-
-      String distName = windowsPath.substring(0, index);
-      if (!distName.equalsIgnoreCase(myDescriptor.getMsId())) {
-        throw new IllegalArgumentException("Trying to get WSL path from a different WSL distribution");
+  private static boolean containsDriveLetter(@NotNull String linuxPath) {
+    int slashInd = linuxPath.indexOf('/');
+    while (slashInd >= 0) {
+      int nextSlashInd = linuxPath.indexOf('/', slashInd + 1);
+      if ((nextSlashInd == slashInd + 2 || (nextSlashInd == -1 && slashInd + 2 == linuxPath.length())) &&
+          OSAgnosticPathUtil.isDriveLetter(linuxPath.charAt(slashInd + 1))) {
+        return true;
       }
-      return FileUtil.toSystemIndependentName(windowsPath.substring(index));
+      slashInd = nextSlashInd;
+    }
+    return false;
+  }
+
+  @Override
+  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
+    WslPath wslPath = WslPath.parseWindowsUncPath(windowsPath);
+    if (wslPath != null) {
+      if (wslPath.getDistributionId().equalsIgnoreCase(myDescriptor.getMsId())) {
+        return wslPath.getLinuxPath();
+      }
+      throw new IllegalArgumentException("Trying to get WSL path from a different WSL distribution. Requested path (" + windowsPath + ")" +
+                                         " belongs to " + wslPath.getDistributionId() + " distribution" +
+                                         ", but context distribution is " + myDescriptor.getMsId());
     }
 
-    //noinspection deprecation
-    if (FileUtil.isWindowsAbsolutePath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
+    if (OSAgnosticPathUtil.isAbsoluteDosPath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
       return getMntRoot() + convertWindowsPath(windowsPath);
     }
     return null;
@@ -502,6 +509,7 @@ public class WSLDistribution {
     return myDescriptor.getId();
   }
 
+  @Override
   public @NotNull @NlsSafe String getMsId() {
     return myDescriptor.getMsId();
   }
@@ -512,7 +520,7 @@ public class WSLDistribution {
 
   @Override
   public String toString() {
-    return "WSLDistribution{myDescriptor=" + myDescriptor + '}';
+    return myDescriptor.getMsId();
   }
 
   private static void prependCommand(@NotNull List<? super String> command, String @NotNull ... commandToPrepend) {
@@ -529,34 +537,17 @@ public class WSLDistribution {
     return Strings.stringHashCodeInsensitive(getMsId());
   }
 
-  /** @deprecated use {@link WSLDistribution#getUNCRootPath()} instead */
-  @Deprecated
-  public @NotNull File getUNCRoot() {
-    return new File(UNC_PREFIX + myDescriptor.getMsId());
-  }
-
   /**
    * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
    */
+  @Override
   @ApiStatus.Experimental
   public @NotNull Path getUNCRootPath() {
-    return Paths.get(UNC_PREFIX + myDescriptor.getMsId());
+    return Path.of(getUNCRootPathString());
   }
 
-  /**
-   * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
-   * @implNote there is a hack in {@link LocalFileSystemBase#getAttributes(VirtualFile)} which causes all network
-   * virtual files to exists all the time. So we need to check explicitly that root exists. After implementing proper non-blocking check
-   * for the network resource availability, this method may be simplified to findFileByIoFile
-   * @see VfsUtil#findFileByIoFile(File, boolean)
-   */
-  @ApiStatus.Experimental
-  public @Nullable VirtualFile getUNCRootVirtualFile(boolean refreshIfNeed) {
-    if (!Experiments.getInstance().isFeatureEnabled("wsl.p9.support")) {
-      return null;
-    }
-    File uncRoot = getUNCRoot();
-    return uncRoot.exists() ? VfsUtil.findFileByIoFile(uncRoot, refreshIfNeed) : null;
+  private @NotNull String getUNCRootPathString() {
+    return WslConstants.UNC_PREFIX + myDescriptor.getMsId();
   }
 
   // https://docs.microsoft.com/en-us/windows/wsl/compare-versions#accessing-windows-networking-apps-from-linux-host-ip
@@ -581,11 +572,27 @@ public class WSLDistribution {
     if (wsl1LoopbackAddress != null) {
       return wsl1LoopbackAddress;
     }
+    if (Registry.is("wsl.obtain.windows.host.ip.alternatively", true)) {
+      InetAddress wslAddr = getWslIpAddress();
+      // Connect to any port on WSL IP. The destination endpoint is not needed to be reachable as no real connection is established.
+      // This transfers the socket into "connected" state including setting the local endpoint according to the system's routing table.
+      // Works on Windows and Linux.
+      try (DatagramSocket datagramSocket = new DatagramSocket()) {
+        // Any port in range [1, 0xFFFF] can be used. Port=0 is forbidden: https://datatracker.ietf.org/doc/html/rfc8085
+        // "A UDP receiver SHOULD NOT bind to port zero".
+        // Java asserts "port != 0" since v15 (https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8240533).
+        int anyPort = 1;
+        datagramSocket.connect(wslAddr, anyPort);
+        return datagramSocket.getLocalAddress().getHostAddress();
+      }
+      catch (Exception e) {
+        LOG.error("Cannot obtain Windows host IP alternatively: failed to connect to WSL IP " + wslAddr + ". Fallback to default way.", e);
+      }
+    }
     final String releaseInfo = "/etc/resolv.conf"; // available for all distributions
     final ProcessOutput output;
     try {
-      output = executeOnWsl(List.of("cat", releaseInfo),
-                            new WSLCommandLineOptions().setExecuteCommandInShell(false), 10_000, null);
+      output = executeOnWsl(List.of("cat", releaseInfo), new WSLCommandLineOptions(), 10_000, null);
     }
     catch (ExecutionException e) {
       LOG.info("Cannot read host ip", e);
@@ -608,8 +615,7 @@ public class WSLDistribution {
     }
     final ProcessOutput output;
     try {
-      output = executeOnWsl(List.of("ip", "addr", "show", "eth0"),
-                            new WSLCommandLineOptions().setExecuteCommandInShell(false), 10_000, null);
+      output = executeOnWsl(List.of("ip", "addr", "show", "eth0"), new WSLCommandLineOptions(), 10_000, null);
     }
     catch (ExecutionException e) {
       LOG.info("Cannot read wsl ip", e);
@@ -630,7 +636,7 @@ public class WSLDistribution {
   }
 
   private @Nullable String getWsl1LoopbackAddress() {
-    return WSLUtil.isWsl1(this) == ThreeState.YES ? InetAddress.getLoopbackAddress().getHostAddress() : null;
+    return getVersion() == 1 ? InetAddress.getLoopbackAddress().getHostAddress() : null;
   }
 
   public @NonNls @Nullable String getEnvironmentVariable(String name) {
@@ -638,7 +644,8 @@ public class WSLDistribution {
       .setExecuteCommandInInteractiveShell(true)
       .setExecuteCommandInLoginShell(true)
       .setShellPath(getShellPath());
-    return executeInShellAndGetCommandOnlyStdout(new GeneralCommandLine("printenv", name), options, DEFAULT_TIMEOUT, true);
+    return WslExecution.executeInShellAndGetCommandOnlyStdout(this, new GeneralCommandLine("printenv", name), options, DEFAULT_TIMEOUT,
+                                                              true);
   }
 
   public @NlsSafe @NotNull String getShellPath() {
@@ -647,62 +654,8 @@ public class WSLDistribution {
 
   private @NlsSafe @Nullable String readShellPath() {
     WSLCommandLineOptions options = new WSLCommandLineOptions().setExecuteCommandInDefaultShell(true);
-    return executeInShellAndGetCommandOnlyStdout(new GeneralCommandLine("printenv", "SHELL"), options, DEFAULT_TIMEOUT, true);
+    return WslExecution.executeInShellAndGetCommandOnlyStdout(this, new GeneralCommandLine("printenv", "SHELL"), options, DEFAULT_TIMEOUT,
+                                                              true);
   }
 
-  @NotNull ProcessOutput executeInShellAndGetCommandOnlyStdout(@NotNull GeneralCommandLine commandLine,
-                                                               @NotNull WSLCommandLineOptions options,
-                                                               int timeout) throws ExecutionException {
-    if (!options.isExecuteCommandInShell()) {
-      throw new AssertionError("Execution in shell is expected");
-    }
-    // When command is executed in interactive/login shell, the result stdout may contain additional output
-    // produced by shell configuration files, for example, "Message Of The Day".
-    // Let's print some unique message before executing the command to know where command output begins in the result output.
-    String prefixText = "intellij: executing command...";
-    options.addInitCommand("echo " + CommandLineUtil.posixQuote(prefixText));
-    ProcessOutput output = executeOnWsl(commandLine, options, timeout);
-    String stdout = output.getStdout();
-    String markerText = prefixText + LineSeparator.LF.getSeparatorString();
-    int index = stdout.indexOf(markerText);
-    if (index < 0) {
-      LOG.error("Cannot find '" + prefixText + "' in stdout");
-      return output;
-    }
-    return new ProcessOutput(stdout.substring(index + markerText.length()),
-                             output.getStderr(),
-                             output.getExitCode(),
-                             output.isTimeout(),
-                             output.isCancelled());
-  }
-
-  @SuppressWarnings("SameParameterValue")
-  @Nullable String executeInShellAndGetCommandOnlyStdout(@NotNull GeneralCommandLine commandLine,
-                                                         @NotNull WSLCommandLineOptions options,
-                                                         int timeout,
-                                                         boolean expectOneLineStdout) {
-    try {
-      ProcessOutput output = executeInShellAndGetCommandOnlyStdout(commandLine, options, timeout);
-      String stdout = output.getStdout();
-      if (!output.isTimeout() && output.getExitCode() == 0) {
-        return expectOneLineStdout ? expectOneLineOutput(commandLine, stdout) : stdout;
-      }
-      LOG.info("Failed to execute " + commandLine + " for " + getMsId() + ": " +
-               "exitCode=" + output.getExitCode() + ", timeout=" + output.isTimeout() +
-               ", stdout=" + stdout + ", stderr=" + output.getStderr());
-    }
-    catch (ExecutionException e) {
-      LOG.info("Failed to execute " + commandLine + " for " + getMsId(), e);
-    }
-    return null;
-  }
-
-  private @NotNull String expectOneLineOutput(@NotNull GeneralCommandLine commandLine, @NotNull String stdout) {
-    String converted = StringUtil.convertLineSeparators(stdout, LineSeparator.LF.getSeparatorString());
-    List<String> lines = StringUtil.split(converted, LineSeparator.LF.getSeparatorString(), true, true);
-    if (lines.size() != 1) {
-      LOG.info("One line stdout expected: " + getMsId() + ", command=" + commandLine + ", stdout=" + stdout + ", lines=" + lines.size());
-    }
-    return StringUtil.notNullize(ContainerUtil.getFirstItem(lines), stdout);
-  }
 }
