@@ -1,33 +1,34 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
 import com.intellij.CommonBundle;
 import com.intellij.core.CoreBundle;
+import com.intellij.diagnostic.LoadingState;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService;
 import com.intellij.ide.plugins.marketplace.PluginSignatureChecker;
-import com.intellij.ide.util.PropertiesComponent;
+import com.intellij.ide.plugins.marketplace.statistics.PluginManagerUsageCollector;
+import com.intellij.ide.plugins.marketplace.statistics.enums.InstallationSourceEnum;
+import com.intellij.ide.plugins.org.PluginManagerFilters;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.extensions.PluginId;
-import com.intellij.openapi.fileChooser.FileChooser;
-import com.intellij.openapi.fileChooser.FileChooserDescriptor;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
+import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.ex.MessagesEx;
-import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.openapi.util.registry.RegistryManager;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VfsUtilCore;
-import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.Decompressor;
 import org.jetbrains.annotations.ApiStatus;
@@ -35,29 +36,25 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
-import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.*;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
 import static com.intellij.ide.startup.StartupActionScriptManager.*;
 
-/**
- * @author stathik
- */
 public final class PluginInstaller {
   private static final Logger LOG = Logger.getInstance(PluginInstaller.class);
 
   public static final String UNKNOWN_HOST_MARKER = "__unknown_repository__";
 
   static final Object ourLock = new Object();
-  private static final String PLUGINS_PRESELECTION_PATH = "plugins.preselection.path";
 
   private PluginInstaller() { }
 
@@ -72,7 +69,7 @@ public final class PluginInstaller {
           LOG.error("Plugin is bundled: " + pluginDescriptor.getPluginId());
         }
         else {
-          boolean needRestart = !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor);
+          boolean needRestart = pluginDescriptor.isEnabled() && !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor);
           if (needRestart) {
             uninstallAfterRestart(pluginDescriptor.getPluginPath());
           }
@@ -85,20 +82,25 @@ public final class PluginInstaller {
     return false;
   }
 
-  private static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
+  @ApiStatus.Internal
+  public static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
     addActionCommand(new DeleteCommand(pluginPath));
   }
 
   public static boolean uninstallDynamicPlugin(@Nullable JComponent parentComponent,
                                                @NotNull IdeaPluginDescriptorImpl pluginDescriptor,
                                                boolean isUpdate) {
-    DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
-      .withUpdate(isUpdate)
-      .withWaitForClassloaderUnload(true);
+    boolean uninstalledWithoutRestart = true;
+    if (pluginDescriptor.isEnabled()) {
+      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
+        .withDisable(false)
+        .withUpdate(isUpdate)
+        .withWaitForClassloaderUnload(true);
 
-    boolean uninstalledWithoutRestart = parentComponent != null ?
-                                        DynamicPlugins.unloadPluginWithProgress(null, parentComponent, pluginDescriptor, options) :
-                                        DynamicPlugins.unloadPlugin(pluginDescriptor, options);
+      uninstalledWithoutRestart = parentComponent != null ?
+                                  DynamicPlugins.INSTANCE.unloadPluginWithProgress(null, parentComponent, pluginDescriptor, options) :
+                                  DynamicPlugins.INSTANCE.unloadPlugin(pluginDescriptor, options);
+    }
 
     Path pluginPath = pluginDescriptor.getPluginPath();
     if (uninstalledWithoutRestart) {
@@ -122,10 +124,21 @@ public final class PluginInstaller {
     return uninstalledWithoutRestart;
   }
 
-  public static void installAfterRestart(@NotNull Path sourceFile,
-                                         boolean deleteSourceFile,
+  @ApiStatus.Internal
+  public static void installAfterRestartAndKeepIfNecessary(@NotNull IdeaPluginDescriptor newDescriptor,
+                                                           @NotNull Path newPluginPath,
+                                                           @Nullable Path oldPluginPath) throws IOException {
+    installAfterRestart(newDescriptor,
+                        newPluginPath,
+                        oldPluginPath,
+                        !keepArchive());
+  }
+
+  @ApiStatus.Internal
+  public static void installAfterRestart(@NotNull IdeaPluginDescriptor descriptor,
+                                         @NotNull Path sourceFile,
                                          @Nullable Path existingPlugin,
-                                         @NotNull IdeaPluginDescriptor descriptor) throws IOException {
+                                         boolean deleteSourceFile) throws IOException {
     List<ActionCommand> commands = new ArrayList<>();
 
     if (existingPlugin != null) {
@@ -184,7 +197,7 @@ public final class PluginInstaller {
     }
     else {
       target = targetPath.resolve(rootEntryName(sourceFile));
-      FileUtilRt.delete(target.toFile());
+      NioFiles.deleteRecursively(target);
       new Decompressor.Zip(sourceFile).extract(targetPath);
     }
     return target;
@@ -192,15 +205,16 @@ public final class PluginInstaller {
 
   public static String rootEntryName(@NotNull Path zip) throws IOException {
     try (ZipFile zipFile = new ZipFile(zip.toFile())) {
-      Enumeration<? extends ZipEntry> entries = zipFile.entries();
+      var entries = zipFile.entries();
       while (entries.hasMoreElements()) {
         ZipEntry zipEntry = entries.nextElement();
         // we do not necessarily get a separate entry for the subdirectory when the file
-        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash
-        // is found anywhere in the path
+        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash  is found anywhere in the path
         String name = zipEntry.getName();
         int i = name.indexOf('/');
-        if (i > 0) return name.substring(0, i);
+        if (i > 0) {
+          return name.substring(0, i);
+        }
       }
     }
 
@@ -211,25 +225,37 @@ public final class PluginInstaller {
     PluginStateManager.addStateListener(listener);
   }
 
+  @RequiresEdt
   static boolean installFromDisk(@NotNull InstalledPluginsTableModel model,
-                                 @NotNull Path file,
-                                 @NotNull Consumer<? super PluginInstallCallbackData> callback,
-                                 @Nullable JComponent parent) {
+                                 @NotNull PluginEnabler pluginEnabler,
+                                 @NotNull File file,
+                                 @Nullable Project project,
+                                 @Nullable JComponent parent,
+                                 @NotNull Consumer<? super PluginInstallCallbackData> callback) {
     try {
-      IdeaPluginDescriptorImpl pluginDescriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(file, null);
+      Path path = file.toPath();
+      IdeaPluginDescriptorImpl pluginDescriptor = ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
+        return PluginDescriptorLoader.loadDescriptorFromArtifact(path, null);
+      }, IdeBundle.message("action.InstallFromDiskAction.progress.text"), true, project);
+
       if (pluginDescriptor == null) {
-        MessagesEx.showErrorDialog(parent, IdeBundle
-          .message("dialog.message.fail.to.load.plugin.descriptor.from.file", file.getFileName().toString()), CommonBundle.getErrorTitle());
+        MessagesEx.showErrorDialog(parent,
+                                   IdeBundle.message("dialog.message.fail.to.load.plugin.descriptor.from.file", file.getName()),
+                                   CommonBundle.getErrorTitle());
         return false;
       }
-      if (Registry.is("marketplace.certificate.signature.check")) {
-        if (!PluginSignatureChecker.isSignedByAnyCertificates(pluginDescriptor.name, file.toFile())) {
-          return false;
-        }
+
+      if (!PluginManagerMain.checkThirdPartyPluginsAllowed(List.of(pluginDescriptor))) {
+        return false;
+      }
+
+      if (!PluginManagerFilters.getInstance().allowInstallingPlugin(pluginDescriptor)) {
+        String message = IdeBundle.message("dialog.message.plugin.is.not.allowed", pluginDescriptor.getName());
+        MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
+        return false;
       }
 
       InstalledPluginsState ourState = InstalledPluginsState.getInstance();
-
       if (ourState.wasInstalled(pluginDescriptor.getPluginId())) {
         String message = IdeBundle.message("dialog.message.plugin.was.already.installed", pluginDescriptor.getName());
         MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
@@ -256,22 +282,26 @@ public final class PluginInstaller {
         return false;
       }
 
-      PluginManagerMain.PluginEnabler pluginEnabler = model instanceof PluginManagerMain.PluginEnabler
-                                                      ? (PluginManagerMain.PluginEnabler)model
-                                                      : new PluginManagerMain.PluginEnabler.HEADLESS();
+      PluginManagerUsageCollector.pluginInstallationStarted(pluginDescriptor,
+                                                            InstallationSourceEnum.FROM_DISK,
+                                                            installedPlugin != null ? installedPlugin.getVersion() : null);
 
-      Task.WithResult<Pair<? extends PluginInstallOperation, ? extends IdeaPluginDescriptor>, RuntimeException> task =
+      if (!PluginSignatureChecker.verifyIfRequired(pluginDescriptor, file, false, true)) {
+        return false;
+      }
+
+      Task.WithResult<Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor>, RuntimeException> task =
         new Task.WithResult<>(null,
                               parent,
                               IdeBundle.message("progress.title.checking.plugin.dependencies"),
                               true) {
           @Override
-          protected @NotNull Pair<? extends PluginInstallOperation, ? extends IdeaPluginDescriptor> compute(@NotNull ProgressIndicator indicator) {
+          protected @NotNull Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor> compute(@NotNull ProgressIndicator indicator) {
             PluginInstallOperation operation = new PluginInstallOperation(List.of(),
                                                                           CustomPluginRepositoryService.getInstance()
                                                                             .getCustomRepositoryPlugins(),
                                                                           pluginEnabler,
-                                                                          ProgressManager.getInstance().getProgressIndicator());
+                                                                          indicator);
             operation.setAllowInstallWithoutRestart(true);
 
             return operation.checkMissingDependencies(pluginDescriptor, null) ?
@@ -280,29 +310,28 @@ public final class PluginInstaller {
           }
         };
 
-      Pair<? extends PluginInstallOperation, ? extends IdeaPluginDescriptor> pair = ProgressManager.getInstance().run(task);
+      Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor> pair = ProgressManager.getInstance().run(task);
       PluginInstallOperation operation = pair.getFirst();
       if (operation == null) {
         return false;
       }
 
-      Path oldFile = null;
-      if (installedPlugin != null && !installedPlugin.isBundled()) {
-        oldFile = installedPlugin.getPluginPath();
-      }
+      Path oldFile = installedPlugin != null && !installedPlugin.isBundled() ?
+                     installedPlugin.getPluginPath() :
+                     null;
 
-      boolean installWithoutRestart = oldFile == null &&
-                                      DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) &&
-                                      !operation.isRestartRequired();
-      if (!installWithoutRestart) {
-        installAfterRestart(file, false, oldFile, pluginDescriptor);
+      boolean isRestartRequired = oldFile != null ||
+                                  !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) ||
+                                  operation.isRestartRequired();
+      if (isRestartRequired) {
+        installAfterRestart(pluginDescriptor, path, oldFile, false);
       }
-      ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, !installWithoutRestart);
+      ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, isRestartRequired);
 
       IdeaPluginDescriptor toDisable = pair.getSecond();
       if (toDisable != null) {
         // TODO[yole] unload and check for restart
-        pluginEnabler.disablePlugins(Set.of(toDisable));
+        pluginEnabler.disable(Set.of(toDisable));
       }
 
       Set<PluginInstallCallbackData> installedDependencies = operation.getInstalledDependentPlugins();
@@ -311,30 +340,38 @@ public final class PluginInstaller {
       for (PluginInstallCallbackData plugin : installedDependencies) {
         installedPlugins.add(plugin.getPluginDescriptor());
       }
-      checkInstalledPluginDependencies(model,
-                                       pluginDescriptor,
-                                       parent,
-                                       ContainerUtil.map2Set(installedPlugins, PluginDescriptor::getPluginId));
+
+      Set<String> notInstalled = findNotInstalledPluginDependencies(pluginDescriptor.getDependencies(),
+                                                                    model,
+                                                                    ContainerUtil.map2Set(installedPlugins, PluginDescriptor::getPluginId));
+      if (!notInstalled.isEmpty()) {
+        String message = IdeBundle.message("dialog.message.plugin.depends.on.unknown.plugin",
+                                           pluginDescriptor.getName(),
+                                           notInstalled.size(),
+                                           StringUtil.join(notInstalled, ", "));
+        MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
+      }
+
       PluginManagerMain.suggestToEnableInstalledDependantPlugins(pluginEnabler, installedPlugins);
 
-      callback.accept(new PluginInstallCallbackData(file, pluginDescriptor, !installWithoutRestart));
+      callback.accept(new PluginInstallCallbackData(path, pluginDescriptor, isRestartRequired));
       for (PluginInstallCallbackData callbackData : installedDependencies) {
         if (!callbackData.getPluginDescriptor().getPluginId().equals(pluginDescriptor.getPluginId())) {
           callback.accept(callbackData);
         }
       }
 
-      if (file.toString().endsWith(".zip") && Registry.is("ide.plugins.keep.archive")) {
+      if (path.toString().endsWith(".zip") && keepArchive()) {
         File tempFile = MarketplacePluginDownloadService.getPluginTempFile();
-        FileUtil.copy(file.toFile(), tempFile);
+        FileUtil.copy(file, tempFile);
         MarketplacePluginDownloadService.renameFileToZipRoot(tempFile);
       }
       return true;
     }
     catch (IOException ex) {
       MessagesEx.showErrorDialog(parent, ex.getMessage(), CommonBundle.getErrorTitle());
+      return false;
     }
-    return false;
   }
 
   public static boolean installAndLoadDynamicPlugin(@NotNull Path file,
@@ -353,64 +390,73 @@ public final class PluginInstaller {
       return false;
     }
 
-    IdeaPluginDescriptorImpl targetDescriptor = PluginManager.loadDescriptor(targetFile,
-                                                                             DisabledPluginsState.disabledPlugins(),
-                                                                             false,
-                                                                             PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER);
+    IdeaPluginDescriptorImpl targetDescriptor = PluginDescriptorLoader.loadDescriptor(targetFile,
+                                                                                      false,
+                                                                                      PluginXmlPathResolver.DEFAULT_PATH_RESOLVER);
     if (targetDescriptor == null) {
       return false;
     }
 
-    return DynamicPlugins.loadPlugin(targetDescriptor);
+    return PluginEnabler.HEADLESS.isDisabled(targetDescriptor.getPluginId()) ||
+           DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
   }
 
-  private static void checkInstalledPluginDependencies(@NotNull InstalledPluginsTableModel model,
-                                                       @NotNull IdeaPluginDescriptorImpl pluginDescriptor,
-                                                       @Nullable Component parent,
-                                                       Set<PluginId> installedDependencies) {
-    final Set<PluginId> notInstalled = new HashSet<>();
-    for (IdeaPluginDependency dep : pluginDescriptor.getDependencies()) {
-      if (dep.isOptional()) continue;
-      PluginId id = dep.getPluginId();
-      if (installedDependencies.contains(id)) continue;
-      final boolean disabled = model.isDisabled(id);
-      final boolean enabled = model.isEnabled(id);
-      if (!enabled && !disabled && !PluginManagerCore.isModuleDependency(id)) {
-        notInstalled.add(id);
-      }
-    }
-    if (!notInstalled.isEmpty()) {
-      String deps = StringUtil.join(notInstalled, PluginId::toString, ", ");
-      String message =
-        IdeBundle.message("dialog.message.plugin.depends.on.unknown.plugin", pluginDescriptor.getName(), notInstalled.size(), deps);
-      MessagesEx.showWarningDialog(parent, message, IdeBundle.message("dialog.title.install.plugin"));
-    }
+  private static boolean keepArchive() {
+    return !LoadingState.COMPONENTS_LOADED.isOccurred() ||
+           RegistryManager.getInstance().is("ide.plugins.keep.archive");
   }
 
-  static void chooseAndInstall(@NotNull InstalledPluginsTableModel model,
-                               @Nullable JComponent parent,
-                               @NotNull Consumer<? super PluginInstallCallbackData> callback) {
-    final FileChooserDescriptor descriptor = new FileChooserDescriptor(false, false, true, true, false, false) {
-      @Override
-      public boolean isFileSelectable(VirtualFile file) {
-        final String extension = file.getExtension();
-        return Comparing.strEqual(extension, "jar") || Comparing.strEqual(extension, "zip");
+  private static @NotNull Set<String> findNotInstalledPluginDependencies(@NotNull List<? extends IdeaPluginDependency> dependencies,
+                                                                         @NotNull InstalledPluginsTableModel model,
+                                                                         @NotNull Set<PluginId> installedDependencies) {
+    Set<String> notInstalled = new HashSet<>();
+    for (IdeaPluginDependency dependency : dependencies) {
+      if (dependency.isOptional()) continue;
+
+      PluginId pluginId = dependency.getPluginId();
+      if (installedDependencies.contains(pluginId) ||
+          model.isLoaded(pluginId) ||
+          PluginManagerCore.isModuleDependency(pluginId)) {
+        continue;
       }
-    };
-    descriptor.setTitle(IdeBundle.message("chooser.title.plugin.file"));
-    descriptor.setDescription(IdeBundle.message("chooser.description.jar.and.zip.archives.are.accepted"));
-    String oldPath = PropertiesComponent.getInstance().getValue(PLUGINS_PRESELECTION_PATH);
-    VirtualFile toSelect =
-      oldPath == null ? null : VfsUtil.findFileByIoFile(new File(FileUtilRt.toSystemDependentName(oldPath)), false);
-    FileChooser.chooseFile(descriptor, null, parent, toSelect, virtualFile -> {
-      Path file = VfsUtilCore.virtualToIoFile(virtualFile).toPath();
-      PropertiesComponent.getInstance()
-        .setValue(PLUGINS_PRESELECTION_PATH, FileUtilRt.toSystemIndependentName(file.getParent().toString()));
-      installFromDisk(model, file, callback, parent);
-    });
+
+      notInstalled.add(pluginId.getIdString());
+    }
+
+    return notInstalled;
   }
 
   private static @NotNull Path getPluginsPath() {
-    return Paths.get(PathManager.getPluginsPath());
+    return Path.of(PathManager.getPluginsPath());
+  }
+
+  @RequiresEdt
+  static void installPluginFromCallbackData(@NotNull PluginInstallCallbackData callbackData,
+                                            @Nullable Project project,
+                                            @Nullable JComponent parentComponent) {
+    IdeaPluginDescriptorImpl descriptor = callbackData.getPluginDescriptor();
+    if (callbackData.getRestartNeeded()) {
+      shutdownOrRestartAppAfterInstall(descriptor);
+    }
+    else {
+      ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
+        boolean loaded = installAndLoadDynamicPlugin(callbackData.getFile(), descriptor);
+
+        if (!loaded) {
+          ApplicationManager.getApplication().invokeLater(() -> {
+            shutdownOrRestartAppAfterInstall(descriptor);
+          });
+        }
+      }, IdeBundle.message("action.InstallFromDiskAction.progress.text"), false, project, parentComponent);
+    }
+  }
+
+  private static void shutdownOrRestartAppAfterInstall(@NotNull IdeaPluginDescriptorImpl descriptor) {
+    PluginManagerConfigurable.shutdownOrRestartAppAfterInstall(PluginManagerConfigurable.getUpdatesDialogTitle(),
+                                                               action -> IdeBundle.message("plugin.installed.ide.restart.required.message",
+                                                                                           descriptor.getName(),
+                                                                                           action,
+                                                                                           ApplicationNamesInfo.getInstance()
+                                                                                             .getFullProductName()));
   }
 }
