@@ -1,38 +1,44 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.application
 
+import com.intellij.configurationStore.getPerOsSettingsStorageFolderName
 import com.intellij.diagnostic.VMOptions
 import com.intellij.ide.plugins.PluginBuilder
+import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService
 import com.intellij.ide.startup.StartupActionScriptManager
 import com.intellij.ide.util.PropertiesComponent
 import com.intellij.openapi.components.stateStore
 import com.intellij.openapi.diagnostic.logger
 import com.intellij.openapi.extensions.PluginId
+import com.intellij.openapi.progress.ProgressIndicator
 import com.intellij.openapi.util.BuildNumber
 import com.intellij.openapi.util.SystemInfo
-import com.intellij.openapi.util.ThrowableNotNullBiFunction
+import com.intellij.openapi.util.registry.Registry
 import com.intellij.testFramework.PlatformTestUtil.useAppConfigDir
+import com.intellij.util.SystemProperties
+import com.intellij.util.io.createDirectories
 import com.intellij.util.io.isDirectory
 import kotlinx.coroutines.runBlocking
 import org.assertj.core.api.Assertions.assertThat
 import org.assertj.core.api.Condition
 import org.junit.Assume.assumeTrue
 import org.junit.Test
+import java.io.File
 import java.io.IOException
 import java.nio.charset.StandardCharsets
 import java.nio.file.Files
+import java.nio.file.Path
 import java.util.function.Predicate
 
-private val LOG = logger<ConfigImportHelperTest>()
-
 class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
+  private val LOG = logger<ConfigImportHelperTest>()
+
   @Test fun `config directory is valid for import`() {
     PropertiesComponent.getInstance().setValue("property.ConfigImportHelperTest", true)
     try {
       useAppConfigDir {
         runBlocking { ApplicationManager.getApplication().stateStore.save(forceSavingAllSettings = true) }
 
-        @Suppress("UsePropertyAccessSyntax")
         assertThat(PathManager.getConfigDir())
           .isNotEmptyDirectory()
           .satisfies(Condition(Predicate { ConfigImportHelper.isConfigDirectory(it) }, "A valid config directory"))
@@ -114,7 +120,7 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val newConfigDir = createConfigDir("2019.2", product = "DataGrip")
     ConfigImportHelper.setKeymapIfNeeded(oldConfigDir, newConfigDir, LOG)
 
-    val optionFile = newConfigDir.resolve("${PathManager.OPTIONS_DIRECTORY}/keymap.xml")
+    val optionFile = newConfigDir.resolve("${PathManager.OPTIONS_DIRECTORY}/${getPerOsSettingsStorageFolderName()}/keymap.xml")
     if (isMigrationExpected) {
       assertThat(optionFile).usingCharset(StandardCharsets.UTF_8).hasContent("""
         <application>
@@ -127,6 +133,46 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     else {
       assertThat(optionFile).doesNotExist()
     }
+  }
+
+  @Test fun `filtering unwanted files`() {
+    val oldConfigDir = createConfigDir("2021.2")
+    val newConfigDir = createConfigDir("2021.3")
+
+    val jdkFile = oldConfigDir.resolve("${ApplicationNamesInfo.getInstance().scriptName}.jdk")
+    val otherFile = oldConfigDir.resolve("other.xml")
+    Files.write(jdkFile, listOf("..."))
+    Files.write(otherFile, listOf("..."))
+
+    val options = ConfigImportHelper.ConfigImportOptions(LOG)
+    options.headless = true
+    ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldConfigDir.resolve("plugins"), newConfigDir.resolve("plugins"), options)
+
+    assertThat(newConfigDir.resolve(jdkFile.fileName)).doesNotExist()
+    assertThat(newConfigDir.resolve(otherFile.fileName)).hasSameBinaryContentAs(otherFile)
+  }
+
+  @Test fun `nested files should be passed to the settings filter`() {
+    val oldConfigDir = createConfigDir("2022.3")
+    val newConfigDir = createConfigDir("2023.1")
+
+    val subdir = oldConfigDir.resolve("subdir").let(Files::createDirectories)
+    listOf(
+      subdir.resolve("file1.txt"),
+      subdir.resolve("file2.txt")
+    ).forEach { Files.write(it, listOf("...")) }
+
+    val options = ConfigImportHelper.ConfigImportOptions(LOG)
+    options.headless = true
+    options.importSettings = object : ConfigImportSettings {
+      override fun importFinished(newConfigPath: Path, pathSelectorOfOtherIde: String?) {}
+      override fun shouldSkipPath(path: Path) = path.endsWith("file1.txt")
+    }
+    ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldConfigDir.resolve("plugins"), newConfigDir.resolve("plugins"), options)
+
+    assertThat(newConfigDir.resolve("subdir")).isDirectory()
+    assertThat(newConfigDir.resolve("subdir/file1.txt")).doesNotExist()
+    assertThat(newConfigDir.resolve("subdir/file2.txt")).isRegularFile()
   }
 
   @Test fun `migrate plugins to empty directory`() {
@@ -153,19 +199,23 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
 
     val newConfigDir = localTempDir.newDirectory("newConfig").toPath()
     val newPluginsDir = newConfigDir.resolve("plugins")
-
+    Registry.get("marketplace.certificate.signature.check").setValue(false, testRootDisposable) // skip verifying plugin certificates
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.downloadFunction = ThrowableNotNullBiFunction { _, _ ->
-      val path = localTempDir.newDirectory("pluginTemp")
-        .toPath()
-        .resolve("my-plugin-new.jar")
-      PluginBuilder()
-        .id(oldBuilder.id)
-        .buildJar(path)
-      path.toFile()
+    options.downloadService = object : MarketplacePluginDownloadService() {
+
+      override fun downloadPlugin(pluginUrl: String, indicator: ProgressIndicator): File {
+        val path = localTempDir.newDirectory("pluginTemp")
+          .toPath()
+          .resolve("my-plugin-new.jar")
+        PluginBuilder()
+          .id(oldBuilder.id)
+          .buildJar(path)
+        return path.toFile()
+      }
     }
+
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir).isDirectoryContaining { it.fileName.toString() == "my-plugin-new.jar" }
   }
@@ -183,7 +233,11 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.downloadFunction = ThrowableNotNullBiFunction { _, _ -> throw IOException("404") }
+    options.downloadService = object : MarketplacePluginDownloadService() {
+
+      override fun downloadPlugin(pluginUrl: String, indicator: ProgressIndicator) =
+        throw IOException("404")
+    }
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir).isDirectoryContaining { it.fileName.toString() == "my-plugin.jar" }
   }
@@ -280,7 +334,11 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     options.compatibleBuildNumber = BuildNumber.fromString("201.1")
-    options.downloadFunction = ThrowableNotNullBiFunction { _, _ -> throw AssertionError("No file download should be requested") }
+    options.downloadService = object : MarketplacePluginDownloadService() {
+
+      override fun downloadPlugin(pluginUrl: String, indicator: ProgressIndicator) =
+        throw AssertionError("No file download should be requested")
+    }
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldPluginsDir, newPluginsDir, options)
     assertThat(newPluginsDir)
       .isDirectoryContaining { it.fileName.toString() == "my-plugin-1.1.jar" }
@@ -336,14 +394,139 @@ class ConfigImportHelperTest : ConfigImportHelperBaseTest() {
 
   @Test fun `filtering custom VM options`() {
     val oldConfigDir = localTempDir.newDirectory("oldConfig").toPath()
-    Files.write(oldConfigDir.resolve(VMOptions.getCustomVMOptionsFileName()),
-                listOf("-XX:MaxJavaStackTraceDepth=-1", "-Xverify:none", "-noverify", "-agentlib:yjpagent=opts", "-agentpath:/path/to/lib-yjpagent.so=opts"))
+    @Suppress("SpellCheckingInspection") val outlaws = listOf(
+      "-XX:MaxJavaStackTraceDepth=-1", "-Xverify:none", "-noverify", "-agentlib:yjpagent=opts", "-agentpath:/path/to/lib-yjpagent.so=opts")
+    Files.write(oldConfigDir.resolve(VMOptions.getFileName()), outlaws)
     val newConfigDir = localTempDir.newDirectory("newConfig").toPath()
 
     val options = ConfigImportHelper.ConfigImportOptions(LOG)
     options.headless = true
     ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldConfigDir.resolve("plugins"), newConfigDir.resolve("plugins"), options)
 
-    assertThat(newConfigDir.resolve(VMOptions.getCustomVMOptionsFileName())).hasContent("-XX:MaxJavaStackTraceDepth=10000")
+    assertThat(newConfigDir.resolve(VMOptions.getFileName())).hasContent("-XX:MaxJavaStackTraceDepth=10000")
+  }
+
+  @Test fun `de-duplicating custom VM options`() {
+    val platformOptions = listOf("-Xms128m", "-Xmx750m", "-XX:ReservedCodeCacheSize=512m", "-XX:+UseG1GC")
+    val userOptions = listOf("-Xms512m", "-Xmx2g", "-XX:ReservedCodeCacheSize=240m", "-XX:+UseZGC")
+    @Suppress("SpellCheckingInspection") val commonOptions = listOf(
+      "-XX:SoftRefLRUPolicyMSPerMB=50", "-XX:CICompilerCount=2", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:-OmitStackTraceInFastThrow",
+      "-ea", "-Dsun.io.useCanonCaches=false", "-Djdk.http.auth.tunneling.disabledSchemes=\"\"", "-Djdk.attach.allowAttachSelf=true",
+      "-Djdk.module.illegalAccess.silent=true", "-Dkotlinx.coroutines.debug=off")
+
+    val platformFile = memoryFs.fs.getPath(VMOptions.getPlatformOptionsFile().toString())
+    Files.createDirectories(platformFile.parent)
+    Files.write(platformFile, platformOptions + commonOptions)
+
+    val oldConfigDir = createConfigDir("2021.2")
+    Files.write(oldConfigDir.resolve(VMOptions.getFileName()), userOptions + commonOptions)
+    val newConfigDir = createConfigDir("2021.3")
+
+    val options = ConfigImportHelper.ConfigImportOptions(LOG)
+    options.headless = true
+    ConfigImportHelper.doImport(oldConfigDir, newConfigDir, null, oldConfigDir.resolve("plugins"), newConfigDir.resolve("plugins"), options)
+
+    assertThat(newConfigDir.resolve(VMOptions.getFileName())).hasContent("-Xms512m\n-Xmx2g\n-XX:+UseZGC")
+  }
+
+  @Test fun `finding related directories`() {
+    fun populate(config: Path, plugins: Path?, system: Path?, logs: Path?) {
+      writeStorageFile(config, System.currentTimeMillis())
+      plugins?.createDirectories()
+      system?.createDirectories()
+      logs?.createDirectories()
+    }
+
+    val cfg191 = createConfigDir("2019.1")
+    populate(cfg191, null, null, null)
+    if (!SystemInfo.isMac) {
+      Files.writeString(cfg191.parent.resolve("some_file.txt"), "...")
+    }
+
+    val cfg192 = createConfigDir("2019.2")
+    populate(cfg192, null, null, null)
+    val expected192 = when {
+      SystemInfo.isMac -> listOf(cfg192)
+      else -> listOf(cfg192.parent)
+    }
+
+    val cfg193 = createConfigDir("2019.3")
+    val plugins193 = when {
+      SystemInfo.isMac -> cfg193.parent.parent.resolve("Application Support").resolve(cfg193.fileName)
+      else -> cfg193.resolve("plugins")
+    }
+    val sys193 = when {
+      SystemInfo.isMac -> cfg193.parent.parent.resolve("Caches").resolve(cfg193.fileName)
+      else -> cfg193.parent.resolve("system")
+    }
+    val logs193 = when {
+      SystemInfo.isMac -> cfg193.parent.parent.resolve("Logs").resolve(cfg193.fileName)
+      else -> sys193.resolve("logs")
+    }
+    populate(cfg193, plugins193, sys193, logs193)
+    val expected193 = when {
+      SystemInfo.isMac -> listOf(cfg193, sys193, plugins193, logs193)
+      else -> listOf(cfg193.parent)
+    }
+    val cachesAndLogs193 = when {
+      SystemInfo.isMac -> listOf(sys193, logs193)
+      else -> listOf(sys193)
+    }
+
+    val cfg201 = createConfigDir("2020.1")
+    populate(cfg201, null, null, null)
+
+    val cfg202 = createConfigDir("2020.2")
+    val sys202 = cfg202.fileSystem.getPath(PathManager.getDefaultSystemPathFor(cfg202.fileName.toString()))
+    populate(cfg202, null, sys202, null)
+
+    val cfg203 = createConfigDir("2020.3")
+    val sys203 = cfg203.fileSystem.getPath(PathManager.getDefaultSystemPathFor(cfg203.fileName.toString()))
+    val plugins203 = cfg203.fileSystem.getPath(PathManager.getDefaultPluginPathFor(cfg203.fileName.toString()))
+    val logs203 = cfg203.fileSystem.getPath(PathManager.getDefaultLogPathFor(cfg203.fileName.toString()))
+    populate(cfg203, plugins203, sys203, logs203)
+    val expected203 = when {
+      SystemInfo.isWindows -> listOf(cfg203, sys203)
+      SystemInfo.isMac -> listOf(cfg203, sys203, logs203)
+      else -> listOf(cfg203, sys203, plugins203)
+    }
+    val cachesAndLogs203 = when {
+      SystemInfo.isMac -> listOf(sys203, logs203)
+      else -> listOf(sys203)
+    }
+
+    val current = createConfigDir("2021.2")
+    val result = ConfigImportHelper.findConfigDirectories(current)
+    assertThat(result.paths).containsExactlyInAnyOrder(cfg191, cfg192, cfg193, cfg201, cfg202, cfg203)
+
+    val related = result.paths.map { result.findRelatedDirectories(it, false) }
+    assertThat(related).containsExactlyInAnyOrder(
+      listOf(cfg191), expected192, expected193, listOf(cfg201), listOf(cfg202, sys202), expected203)
+
+    val cachesAndLogs = result.paths.map { result.findRelatedDirectories(it, true) }.filter { it.isNotEmpty() }
+    assertThat(cachesAndLogs).containsExactlyInAnyOrder(
+      cachesAndLogs193, listOf(sys202), cachesAndLogs203)
+  }
+
+  @Test fun `default project directory is excluded`() {
+    val defaultProjectPath = "${SystemProperties.getUserHome()}/PhpstormProjects"
+    Files.createDirectories(memoryFs.fs.getPath(defaultProjectPath))
+    val current = createConfigDir("2021.2", product = "PhpStorm")
+    val result = ConfigImportHelper.findConfigDirectories(current)
+    assertThat(result.paths).isEmpty()
+  }
+
+  @Test fun `suffix-less directories are excluded`() {
+    createConfigDir(product = "Rider", version = "", modern = true)
+    val current = createConfigDir(product = "Rider", version = "2022.1")
+    val result = ConfigImportHelper.findConfigDirectories(current)
+    assertThat(result.paths).isEmpty()
+  }
+
+  @Test fun `suffix-less directories are excluded case-insensitively`() {
+    createConfigDir(product = "RIDER", version = "", modern = true)
+    val current = createConfigDir(product = "Rider", version = "2022.1")
+    val result = ConfigImportHelper.findConfigDirectories(current)
+    assertThat(result.paths).isEmpty()
   }
 }
