@@ -1,26 +1,27 @@
- // Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+ // Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.util;
 
  import com.intellij.diagnostic.PerformanceWatcher;
-import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.application.ModalityState;
-import com.intellij.openapi.application.impl.LaterInvocator;
-import com.intellij.testFramework.LightPlatformTestCase;
-import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.ui.UIUtil;
-import org.jetbrains.annotations.NotNull;
+ import com.intellij.openapi.application.ApplicationManager;
+ import com.intellij.openapi.application.ModalityState;
+ import com.intellij.openapi.application.impl.LaterInvocator;
+ import com.intellij.testFramework.LightPlatformTestCase;
+ import com.intellij.testFramework.LoggedErrorProcessor;
+ import com.intellij.util.containers.ContainerUtil;
+ import com.intellij.util.ui.UIUtil;
+ import org.jetbrains.annotations.NotNull;
 
-import java.util.List;
-import java.util.Set;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+ import java.util.List;
+ import java.util.Set;
+ import java.util.concurrent.ExecutionException;
+ import java.util.concurrent.Future;
+ import java.util.concurrent.TimeUnit;
+ import java.util.concurrent.TimeoutException;
+ import java.util.concurrent.atomic.AtomicInteger;
+ import java.util.stream.Collectors;
+ import java.util.stream.Stream;
 
-import static org.assertj.core.api.Assertions.assertThat;
+ import static org.assertj.core.api.Assertions.assertThat;
 
  public class AlarmTest extends LightPlatformTestCase {
   public void testTwoAddsWithZeroDelayMustExecuteSequentially() throws Exception {
@@ -30,11 +31,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
   public void testAlarmRequestsShouldExecuteSequentiallyEvenInPooledThread() throws Exception {
     Alarm alarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, getTestRootDisposable());
-    assertRequestsExecuteSequentially(alarm);
-  }
-
-  public void testAlarmRequestsShouldExecuteSequentiallyAbsolutelyEveryWhere() throws Exception {
-    Alarm alarm = new Alarm(Alarm.ThreadToUse.SHARED_THREAD, getTestRootDisposable());
     assertRequestsExecuteSequentially(alarm);
   }
 
@@ -89,7 +85,7 @@ import static org.assertj.core.api.Assertions.assertThat;
     Set<Thread> used = ContainerUtil.newConcurrentSet();
     AtomicInteger executed = new AtomicInteger();
     int N = 100000;
-    List<Alarm> alarms = Stream.generate(() -> new Alarm(getTestRootDisposable())).limit(N).collect(Collectors.toList());
+    List<Alarm> alarms = Stream.generate(() -> new Alarm(getTestRootDisposable())).limit(N).toList();
     alarms.forEach(alarm -> alarm.addRequest(() -> {
       executed.incrementAndGet();
       used.add(Thread.currentThread());
@@ -171,5 +167,29 @@ import static org.assertj.core.api.Assertions.assertThat;
     alarm.waitForAllExecuted(3000, TimeUnit.MILLISECONDS);
 
     assertEquals(2, sb.length());
+  }
+
+  public void testExceptionDuringAlarmExecutionMustManifestItselfInTests() {
+    Alarm alarm = new Alarm(getTestRootDisposable());
+    Throwable error = LoggedErrorProcessor.executeAndReturnLoggedError(() -> {
+      alarm.addRequest(() -> {
+        throw new RuntimeException("wtf");
+      }, 1);
+      boolean caught = false;
+      while (!alarm.isEmpty()) {
+        try {
+          UIUtil.dispatchAllInvocationEvents();
+        }
+        catch (RuntimeException e) {
+          caught |= "wtf".equals(e.getMessage());
+        }
+      }
+      assertTrue(caught);
+    });
+    assertEquals("wtf", error.getMessage());
+  }
+
+  public void testSingleAlarmMustRefuseToInstantiateWithWrongModality() {
+    assertThrows(IllegalArgumentException.class, () -> new SingleAlarm(() -> {}, 1, null, Alarm.ThreadToUse.SWING_THREAD, null));
   }
 }
