@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.testFramework.fixtures.impl;
 
 import com.intellij.analysis.AnalysisScope;
@@ -10,19 +10,24 @@ import com.intellij.codeInsight.completion.CompletionType;
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzer;
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzerSettings;
 import com.intellij.codeInsight.daemon.GutterMark;
+import com.intellij.codeInsight.daemon.ProblemHighlightFilter;
 import com.intellij.codeInsight.daemon.impl.*;
 import com.intellij.codeInsight.folding.CodeFoldingManager;
 import com.intellij.codeInsight.highlighting.actions.HighlightUsagesAction;
 import com.intellij.codeInsight.intention.IntentionAction;
+import com.intellij.codeInsight.intention.IntentionActionDelegate;
 import com.intellij.codeInsight.intention.impl.CachedIntentions;
 import com.intellij.codeInsight.intention.impl.IntentionListStep;
 import com.intellij.codeInsight.intention.impl.ShowIntentionActionsHandler;
+import com.intellij.codeInsight.intention.impl.preview.IntentionPreviewPopupUpdateProcessor;
+import com.intellij.codeInsight.intention.preview.IntentionPreviewInfo;
 import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.codeInsight.lookup.LookupManager;
 import com.intellij.codeInsight.lookup.impl.LookupImpl;
 import com.intellij.codeInspection.InspectionProfileEntry;
 import com.intellij.codeInspection.InspectionToolProvider;
 import com.intellij.codeInspection.LocalInspectionTool;
+import com.intellij.codeInspection.actions.CleanupInspectionIntention;
 import com.intellij.codeInspection.ex.InspectionToolWrapper;
 import com.intellij.facet.Facet;
 import com.intellij.facet.FacetManager;
@@ -33,12 +38,12 @@ import com.intellij.find.findUsages.FindUsagesManager;
 import com.intellij.find.findUsages.FindUsagesOptions;
 import com.intellij.find.impl.FindManagerImpl;
 import com.intellij.find.usages.api.SearchTarget;
-import com.intellij.find.usages.api.UsageHandler;
 import com.intellij.find.usages.api.UsageOptions;
 import com.intellij.find.usages.impl.AllSearchOptions;
 import com.intellij.ide.IdeEventQueue;
 import com.intellij.ide.actions.searcheverywhere.ClassSearchEverywhereContributor;
 import com.intellij.ide.actions.searcheverywhere.SearchEverywhereContributor;
+import com.intellij.ide.actions.searcheverywhere.SymbolSearchEverywhereContributor;
 import com.intellij.ide.structureView.StructureViewBuilder;
 import com.intellij.ide.structureView.newStructureView.StructureViewComponent;
 import com.intellij.ide.util.scopeChooser.ScopeDescriptor;
@@ -53,11 +58,13 @@ import com.intellij.model.psi.PsiSymbolReference;
 import com.intellij.model.psi.impl.ReferencesKt;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.*;
+import com.intellij.openapi.actionSystem.ex.ActionUtil;
 import com.intellij.openapi.actionSystem.impl.SimpleDataContext;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.command.WriteCommandAction;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.EditorFactory;
@@ -86,14 +93,19 @@ import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ModuleRootManager;
 import com.intellij.openapi.roots.ProjectRootManager;
+import com.intellij.openapi.roots.impl.ProjectRootManagerComponent;
 import com.intellij.openapi.roots.impl.ProjectRootManagerImpl;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.roots.impl.libraries.LibraryTableTracker;
+import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.util.Segment;
+import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.readOnlyHandler.ReadonlyStatusHandlerImpl;
 import com.intellij.openapi.vfs.*;
 import com.intellij.openapi.vfs.impl.VirtualFilePointerTracker;
+import com.intellij.profile.codeInspection.ProjectInspectionProfileManager;
 import com.intellij.psi.*;
 import com.intellij.psi.impl.PsiManagerEx;
 import com.intellij.psi.impl.PsiManagerImpl;
@@ -121,6 +133,7 @@ import com.intellij.usageView.UsageViewContentManager;
 import com.intellij.usages.*;
 import com.intellij.usages.impl.UsageViewImpl;
 import com.intellij.util.*;
+import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.indexing.FileBasedIndex;
 import com.intellij.util.indexing.FileBasedIndexExtension;
@@ -128,6 +141,8 @@ import com.intellij.util.indexing.FindSymbolParameters;
 import com.intellij.util.io.ReadOnlyAttributeUtil;
 import com.intellij.util.ui.UIUtil;
 import junit.framework.ComparisonFailure;
+import kotlin.UninitializedPropertyAccessException;
+import org.intellij.lang.annotations.Language;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
@@ -139,13 +154,16 @@ import java.lang.ref.Reference;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.intellij.find.usages.api.UsageHandler.UsageAction.FIND_USAGES;
 import static com.intellij.find.usages.impl.ImplKt.buildUsageViewQuery;
 import static com.intellij.openapi.util.io.FileUtil.toSystemDependentName;
 import static com.intellij.testFramework.RunAll.runAll;
@@ -158,6 +176,7 @@ import static org.junit.Assert.*;
  */
 @TestOnly
 public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsightTestFixture {
+  private static final Logger LOG = Logger.getInstance(CodeInsightTestFixtureImpl.class);
   private static final Function<IntentionAction, String> INTENTION_NAME_FUN = intentionAction -> '"' + intentionAction.getText() + '"';
 
   private static final String RAINBOW = "rainbow";
@@ -169,7 +188,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   private VirtualFile myFile;
 
   // Strong references to PSI files configured by the test (to avoid tree access assertions after PSI has been GC'ed)
-  private PsiFile myPsiFile;
+  @SuppressWarnings("unused") private PsiFile myPsiFile;
   private PsiFile[] myAllPsiFiles;
 
   private Editor myEditor;
@@ -180,6 +199,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   private boolean myCaresAboutInjection = true;
   private boolean myReadEditorMarkupModel;
   private VirtualFilePointerTracker myVirtualFilePointerTracker;
+  private LibraryTableTracker  myLibraryTableTracker;
   private ResourceBundle[] myMessageBundles = new ResourceBundle[0];
 
   public CodeInsightTestFixtureImpl(@NotNull IdeaProjectTestFixture projectFixture, @NotNull TempDirTestFixture tempDirTestFixture) {
@@ -187,7 +207,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     myTempDirFixture = tempDirTestFixture;
   }
 
-  private void setFileAndEditor(VirtualFile file, Editor editor) {
+  private void setFileAndEditor(@NotNull VirtualFile file, @NotNull Editor editor) {
     myFile = file;
     myEditor = editor;
     myEditorTestFixture = new EditorTestFixture(getProject(), editor, file);
@@ -202,7 +222,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     myAllPsiFiles = null;
   }
 
-  private static void addGutterIconRenderer(GutterMark renderer, int offset, @NotNull SortedMap<Integer, List<GutterMark>> result) {
+  private static void addGutterIconRenderer(GutterMark renderer, int offset, @NotNull Map<? super Integer, List<GutterMark>> result) {
     if (renderer == null) return;
 
     List<GutterMark> renderers = result.computeIfAbsent(offset, __ -> new SmartList<>());
@@ -211,12 +231,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   private static void removeDuplicatedRangesForInjected(@NotNull List<? extends HighlightInfo> infos) {
     infos.sort((o1, o2) -> {
-      final int i = o1.startOffset - o2.startOffset;
+      int i = o1.startOffset - o2.startOffset;
       return i != 0 ? i : o1.getSeverity().myVal - o2.getSeverity().myVal;
     });
     HighlightInfo prevInfo = null;
     for (Iterator<? extends HighlightInfo> it = infos.iterator(); it.hasNext();) {
-      final HighlightInfo info = it.next();
+      HighlightInfo info = it.next();
       if (prevInfo != null &&
           info.getSeverity() == HighlightInfoType.SYMBOL_TYPE_SEVERITY &&
           info.getDescription() == null &&
@@ -239,16 +259,25 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @TestOnly
-  public static List<HighlightInfo> instantiateAndRun(@NotNull PsiFile file,
+  public static List<HighlightInfo> instantiateAndRun(@NotNull PsiFile psiFile,
                                                       @NotNull Editor editor,
                                                       int @NotNull [] toIgnore,
                                                       boolean canChangeDocument,
                                                       boolean readEditorMarkupModel) {
-    Project project = file.getProject();
+    Project project = psiFile.getProject();
     ensureIndexesUpToDate(project);
+    VirtualFile virtualFile = psiFile.getVirtualFile();
+    if (!ReadAction.compute(() -> ProblemHighlightFilter.shouldHighlightFile(psiFile))) {
+      boolean inSource = ReadAction.compute(() -> ProjectRootManager.getInstance(project).getFileIndex().isInSource(virtualFile));
+      throw new IllegalStateException("ProblemHighlightFilter.shouldHighlightFile('" + psiFile + "') == false, so can't highlight it." +
+                                      (inSource ? "" : " Maybe it's because " + virtualFile+ " is outside source folders? (source folders: " +
+                                      ReadAction.compute(() -> Arrays.toString(ProjectRootManager.getInstance(project).getContentSourceRoots()))+")"));
+    }
+
     DaemonCodeAnalyzerImpl codeAnalyzer = (DaemonCodeAnalyzerImpl)DaemonCodeAnalyzer.getInstance(project);
     TextEditor textEditor = TextEditorProvider.getInstance().getTextEditor(editor);
     DaemonCodeAnalyzerSettings settings = DaemonCodeAnalyzerSettings.getInstance();
+    ProjectInspectionProfileManager.getInstance(project); // avoid "severities changed, restart" event
 
     ProcessCanceledException exception = null;
     int retries = 1000;
@@ -258,7 +287,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
         settings.setAutoReparseDelay(0);
         List<HighlightInfo> infos = new ArrayList<>();
         EdtTestUtil.runInEdtAndWait(() -> {
-          codeAnalyzer.runPasses(file, editor.getDocument(), Collections.singletonList(textEditor), toIgnore, canChangeDocument, null);
+          codeAnalyzer.runPasses(psiFile, editor.getDocument(), textEditor, toIgnore, canChangeDocument, null);
           IdeaTestExecutionPolicy policy = IdeaTestExecutionPolicy.current();
           if (policy != null) {
             policy.waitForHighlighting(project, editor);
@@ -271,13 +300,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
                                                    Processors.cancelableCollectProcessor(infos));
           }
         });
-        infos.addAll(DaemonCodeAnalyzerEx.getInstanceEx(project).getFileLevelHighlights(project, file));
+        infos.addAll(DaemonCodeAnalyzerEx.getInstanceEx(project).getFileLevelHighlights(project, psiFile));
         return infos;
       }
       catch (ProcessCanceledException e) {
         Throwable cause = e.getCause();
         if (cause != null && cause.getClass() != Throwable.class) {
-          // canceled because of an exception, no need to repeat the same a lot times
+          // canceled because of an exception, no need to repeat the same
           throw e;
         }
 
@@ -305,16 +334,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @NotNull
+  @TestOnly
   public static List<IntentionAction> getAvailableIntentions(@NotNull Editor editor, @NotNull PsiFile file) {
+    IdeaTestExecutionPolicy current = IdeaTestExecutionPolicy.current();
+    if (current != null) {
+      current.waitForHighlighting(file.getProject(), editor);
+    }
+    waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
     return ReadAction.compute(() -> doGetAvailableIntentions(editor, file));
   }
 
   @NotNull
   private static List<IntentionAction> doGetAvailableIntentions(@NotNull Editor editor, @NotNull PsiFile file) {
-    IdeaTestExecutionPolicy current = IdeaTestExecutionPolicy.current();
-    if (current != null) {
-      current.waitForHighlighting(file.getProject(), editor);
-    }
     ShowIntentionsPass.IntentionsInfo intentions = ShowIntentionsPass.getActionsToShow(editor, file, false);
 
     List<IntentionAction> result = new ArrayList<>();
@@ -327,25 +358,48 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
     List<HighlightInfo> infos = DaemonCodeAnalyzerEx.getInstanceEx(file.getProject()).getFileLevelHighlights(file.getProject(), file);
     for (HighlightInfo info : infos) {
-      List<Pair<HighlightInfo.IntentionActionDescriptor, TextRange>> fixRanges = info.quickFixActionRanges;
-      if (fixRanges != null) {
-        for (Pair<HighlightInfo.IntentionActionDescriptor, TextRange> pair : fixRanges) {
-          HighlightInfo.IntentionActionDescriptor actionInGroup = pair.first;
-          if (actionInGroup.getAction().isAvailable(file.getProject(), editor, file)) {
-            result.add(actionInGroup.getAction());
-            List<IntentionAction> options = actionInGroup.getOptions(file, editor);
-            if (options != null) {
-              for (IntentionAction subAction : options) {
-                if (subAction.isAvailable(file.getProject(), editor, file)) {
-                  result.add(subAction);
-                }
-              }
+      info.findRegisteredQuickFix((descriptor, range) -> {
+        if (descriptor.getAction().isAvailable(file.getProject(), editor, file)) {
+          result.add(descriptor.getAction());
+          for (IntentionAction subAction : descriptor.getOptions(file, editor)) {
+            if (subAction.isAvailable(file.getProject(), editor, file)) {
+              result.add(subAction);
             }
           }
         }
-      }
+        return null;
+      });
     }
     return result;
+  }
+
+  public static void waitForUnresolvedReferencesQuickFixesUnderCaret(@NotNull PsiFile file, @NotNull Editor editor) {
+    if (ApplicationManager.getApplication().isDispatchThread()) {
+      assert !ApplicationManager.getApplication().isWriteAccessAllowed(): "must not call under write action";
+
+      Future<?> future = ApplicationManager.getApplication().executeOnPooledThread(() -> {
+        if (!ReadAction.compute(() -> file.getProject().isDisposed() || editor.isDisposed())) {
+          DaemonCodeAnalyzerImpl.waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
+        }
+      });
+      try {
+        while (!future.isDone()) {
+          try {
+            future.get(10, TimeUnit.MILLISECONDS);
+          }
+          catch (TimeoutException ignored) {
+          }
+          UIUtil.dispatchAllInvocationEvents();
+        }
+        future.get();
+      }
+      catch (InterruptedException | ExecutionException e) {
+        throw new RuntimeException(e);
+      }
+    }
+    else {
+      DaemonCodeAnalyzerImpl.waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
+    }
   }
 
   @NotNull
@@ -398,7 +452,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
     assertFileEndsWithCaseSensitivePath(sourceFile);
 
-    assertTrue("Cannot find source file: " + sourcePath + "; test data path: " + testDataPath, sourceFile.exists());
+    assertTrue("Cannot find source file: " + sourceFile + "; test data path: " + testDataPath+"; sourcePath: "+sourcePath, sourceFile.exists());
     assertTrue("Not a file: " + sourceFile, sourceFile.isFile());
 
     if (targetFile == null) {
@@ -412,8 +466,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return targetFile;
   }
 
-  private static void assertFileEndsWithCaseSensitivePath(@Nullable File sourceFile) {
-    if (sourceFile == null) return;
+  private static void assertFileEndsWithCaseSensitivePath(@NotNull File sourceFile) {
     try {
       String sourceName = sourceFile.getPath();
       File realFile = sourceFile.getCanonicalFile();
@@ -425,11 +478,11 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       }
     }
     catch (IOException e) {
-      throw new UncheckedIOException(e);
+      throw new UncheckedIOException("sourceFile="+sourceFile, e);
     }
   }
 
-  private static void copyContent(File sourceFile, VirtualFile targetFile) {
+  private static void copyContent(@NotNull File sourceFile, @NotNull VirtualFile targetFile) {
     try {
       WriteAction.runAndWait(() -> {
         targetFile.setBinaryContent(FileUtil.loadFileBytes(sourceFile));
@@ -445,14 +498,14 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public VirtualFile copyDirectoryToProject(@NotNull String sourcePath, @NotNull String targetPath) {
-    final String testDataPath = getTestDataPath();
+    String testDataPath = getTestDataPath();
 
-    final File fromFile = new File(testDataPath + "/" + sourcePath);
+    File fromFile = new File(testDataPath + "/" + sourcePath);
     if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
       return myTempDirFixture.copyAll(fromFile.getPath(), targetPath);
     }
 
-    final File targetFile = new File(getTempDirPath() + "/" + targetPath);
+    File targetFile = new File(getTempDirPath() + "/" + targetPath);
     try {
       FileUtil.copyDir(fromFile, targetFile);
     }
@@ -460,7 +513,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       throw new RuntimeException(e);
     }
 
-    final VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(targetFile);
+    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(targetFile);
     assertNotNull(file);
     file.refresh(false, true);
 
@@ -530,8 +583,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   private long collectAndCheckHighlighting(boolean checkWarnings,
                                            boolean checkInfos,
                                            boolean checkWeakWarnings,
-                                           Stream<? extends VirtualFile> files) {
-    List<Trinity<PsiFile, Editor, ExpectedHighlightingData>> data = files.map(file -> {
+                                           @NotNull Stream<? extends VirtualFile> files) {
+    record FileHighlighting(PsiFile file, Editor editor, ExpectedHighlightingData data) {}
+    List<FileHighlighting> data = files.map(file -> {
       PsiFile psiFile = myPsiManager.findFile(file);
       assertNotNull(psiFile);
       Document document = PsiDocumentManager.getInstance(getProject()).getDocument(psiFile);
@@ -539,13 +593,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       ExpectedHighlightingData datum =
         new ExpectedHighlightingData(document, checkWarnings, checkWeakWarnings, checkInfos, false, myMessageBundles);
       datum.init();
-      return Trinity.create(psiFile, createEditor(file), datum);
-    })
-      .collect(Collectors.toList());
+      return new FileHighlighting(psiFile, createEditor(file), datum);
+    }).toList();
     long elapsed = 0;
-    for (Trinity<PsiFile, Editor, ExpectedHighlightingData> trinity : data) {
-      setFileAndEditor(trinity.first.getVirtualFile(), trinity.second);
-      elapsed += collectAndCheckHighlighting(trinity.third);
+    for (FileHighlighting highlighting : data) {
+      setFileAndEditor(highlighting.file().getVirtualFile(), highlighting.editor());
+      elapsed += collectAndCheckHighlighting(highlighting.data());
     }
     return elapsed;
   }
@@ -594,7 +647,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void openFileInEditor(@NotNull final VirtualFile file) {
+  public void openFileInEditor(@NotNull VirtualFile file) {
     setFileAndEditor(file, createEditor(file));
   }
 
@@ -623,24 +676,24 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @Nullable
-  public PsiReference getReferenceAtCaretPosition(final String @NotNull ... filePaths) {
+  public PsiReference getReferenceAtCaretPosition(String @NotNull ... filePaths) {
     if (filePaths.length > 0) {
       configureByFilesInner(filePaths);
     }
-    return getFile().findReferenceAt(myEditor.getCaretModel().getOffset());
+    return ReadAction.compute(() -> getFile().findReferenceAt(myEditor.getCaretModel().getOffset()));
   }
 
   @Override
   @NotNull
-  public PsiReference getReferenceAtCaretPositionWithAssertion(final String @NotNull ... filePaths) {
-    final PsiReference reference = getReferenceAtCaretPosition(filePaths);
+  public PsiReference getReferenceAtCaretPositionWithAssertion(String @NotNull ... filePaths) {
+    PsiReference reference = getReferenceAtCaretPosition(filePaths);
     assertNotNull("no reference found at " + myEditor.getCaretModel().getLogicalPosition(), reference);
     return reference;
   }
 
   @Override
   @NotNull
-  public List<IntentionAction> getAvailableIntentions(final String @NotNull ... filePaths) {
+  public List<IntentionAction> getAvailableIntentions(String @NotNull ... filePaths) {
     if (filePaths.length > 0) {
       configureByFilesInner(filePaths);
     }
@@ -649,7 +702,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public List<IntentionAction> getAllQuickFixes(final String @NotNull ... filePaths) {
+  public List<IntentionAction> getAllQuickFixes(String @NotNull ... filePaths) {
     if (filePaths.length != 0) {
       configureByFilesInner(filePaths);
     }
@@ -660,7 +713,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   public List<IntentionAction> getAvailableIntentions() {
     doHighlighting();
-    return ReadAction.compute(() -> getAvailableIntentions(getHostEditor(), getHostFileAtCaret()));
+    return getAvailableIntentions(ReadAction.compute(() -> getHostEditor()), ReadAction.compute(() -> getHostFileAtCaret()));
   }
 
   @NotNull
@@ -668,6 +721,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return InjectedLanguageEditorUtil.getTopLevelEditor(getEditor());
   }
 
+  @NotNull
   private PsiFile getHostFileAtCaret() {
     return Objects.requireNonNull(PsiUtilBase.getPsiFileInEditor(getHostEditor(), getProject()));
   }
@@ -681,7 +735,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public IntentionAction findSingleIntention(@NotNull String hint) {
-    final List<IntentionAction> list = filterAvailableIntentions(hint);
+    List<IntentionAction> list = filterAvailableIntentions(hint);
     if (list.isEmpty()) {
       fail("\"" + hint + "\" not in [" + StringUtil.join(getAvailableIntentions(), INTENTION_NAME_FUN, ", ") + "]");
     }
@@ -692,18 +746,60 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public IntentionAction getAvailableIntention(@NotNull final String intentionName, final String @NotNull ... filePaths) {
+  public IntentionAction getAvailableIntention(@NotNull String intentionName, String @NotNull ... filePaths) {
     List<IntentionAction> intentions = getAvailableIntentions(filePaths);
     IntentionAction action = CodeInsightTestUtil.findIntentionByText(intentions, intentionName);
     if (action == null) {
-      //noinspection UseOfSystemOutOrSystemErr
-      System.out.println(intentionName + " not found among " + StringUtil.join(intentions, IntentionAction::getText, ","));
+      LOG.debug(intentionName + " not found among " + StringUtil.join(intentions, IntentionAction::getText, ","));
     }
     return action;
   }
 
   @Override
-  public void launchAction(@NotNull final IntentionAction action) {
+  public void checkPreviewAndLaunchAction(@NotNull IntentionAction action) {
+    if (skipPreview(action)) {
+      launchAction(action);
+    } else {
+      String text = getIntentionPreviewText(action);
+      assertNotNull(action.getText(), text);
+      launchAction(action);
+      assertEquals(action.getText(), getFile().getText(), text);
+    }
+  }
+
+  private static boolean skipPreview(@NotNull IntentionAction action) {
+    return IntentionActionDelegate.unwrap(action) instanceof CleanupInspectionIntention;
+  }
+
+  @Override
+  public @Nullable String getIntentionPreviewText(@NotNull IntentionAction action) {
+    // Run in background thread to catch accidental write-actions during preview generation
+    try {
+      return ReadAction.nonBlocking(() -> IntentionPreviewPopupUpdateProcessor.getPreviewText(getProject(), action, getFile(), getEditor()))
+        .submit(AppExecutorUtil.getAppExecutorService()).get();
+    }
+    catch (InterruptedException | ExecutionException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Override
+  public void checkIntentionPreviewHtml(@NotNull IntentionAction action, @NotNull @Language("HTML") String expected) {
+    // Run in background thread to catch accidental write-actions during preview generation
+    IntentionPreviewInfo info;
+    try {
+      info = ReadAction.nonBlocking(() -> IntentionPreviewPopupUpdateProcessor.getPreviewInfo(getProject(), action, getFile(), getEditor()))
+        .submit(AppExecutorUtil.getAppExecutorService()).get();
+    }
+    catch (InterruptedException | ExecutionException e) {
+      throw new RuntimeException(e);
+    }
+    assertTrue(action.getText(), info instanceof IntentionPreviewInfo.Html);
+    assertEquals(action.getText(), expected, ((IntentionPreviewInfo.Html)info).content().toString());
+  }
+
+  @Override
+  public void launchAction(@NotNull IntentionAction action) {
     EdtTestUtil.runInEdtAndWait(() -> invokeIntention(action, getHostFileAtCaret(), getHostEditor()));
   }
 
@@ -713,7 +809,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testCompletionTyping(final String @NotNull [] filesBefore, @NotNull String toType, @NotNull final String fileAfter) {
+  public void testCompletionTyping(String @NotNull [] filesBefore, @NotNull String toType, @NotNull String fileAfter) {
     assertInitialized();
     configureByFiles(filesBefore);
     complete(CompletionType.BASIC);
@@ -748,18 +844,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testCompletionVariants(@NotNull final String fileBefore, final String @NotNull ... expectedItems) {
+  public void testCompletionVariants(@NotNull String fileBefore, String @NotNull ... expectedItems) {
     assertInitialized();
-    final List<String> result = getCompletionVariants(fileBefore);
+    List<String> result = getCompletionVariants(fileBefore);
     assertNotNull(result);
     UsefulTestCase.assertSameElements(result, expectedItems);
   }
 
   @Override
-  public List<String> getCompletionVariants(final String @NotNull ... filesBefore) {
+  public List<String> getCompletionVariants(String @NotNull ... filesBefore) {
     assertInitialized();
     configureByFiles(filesBefore);
-    final LookupElement[] items = complete(CompletionType.BASIC);
+    LookupElement[] items = complete(CompletionType.BASIC);
     assertNotNull("No lookup was shown, probably there was only one lookup element that was inserted automatically", items);
     return getLookupElementStrings();
   }
@@ -772,12 +868,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void finishLookup(final char completionChar) {
+  public void finishLookup(char completionChar) {
     myEditorTestFixture.finishLookup(completionChar);
   }
 
   @Override
-  public void testRename(@NotNull final String fileBefore,
+  public void testRename(@NotNull String fileBefore,
                          @NotNull String fileAfter,
                          @NotNull String newName,
                          @TestDataFile String @NotNull ... additionalFiles) {
@@ -797,13 +893,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testRenameUsingHandler(@NotNull final String fileAfter, @NotNull final String newName) {
+  public void testRenameUsingHandler(@NotNull String fileAfter, @NotNull String newName) {
     renameElementAtCaretUsingHandler(newName);
     checkResultByFile(fileAfter);
   }
 
   @Override
-  public void testRename(@NotNull final String fileAfter, @NotNull final String newName) {
+  public void testRename(@NotNull String fileAfter, @NotNull String newName) {
     renameElementAtCaret(newName);
     checkResultByFile(fileAfter);
   }
@@ -816,35 +912,35 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void renameElementAtCaret(@NotNull final String newName) {
+  public void renameElementAtCaret(@NotNull String newName) {
     renameElement(getElementAtCaret(), newName);
   }
 
   @Override
-  public void renameElementAtCaretUsingHandler(@NotNull final String newName) {
-    final DataContext editorContext = ((EditorEx)myEditor).getDataContext();
-    final DataContext context = dataId -> PsiElementRenameHandler.DEFAULT_NAME.is(dataId)
+  public void renameElementAtCaretUsingHandler(@NotNull String newName) {
+    DataContext editorContext = ((EditorEx)myEditor).getDataContext();
+    DataContext context = dataId -> PsiElementRenameHandler.DEFAULT_NAME.is(dataId)
            ? newName
            : editorContext.getData(dataId);
-    final RenameHandler renameHandler = RenameHandlerRegistry.getInstance().getRenameHandler(context);
+    RenameHandler renameHandler = RenameHandlerRegistry.getInstance().getRenameHandler(context);
     assertNotNull("No handler for this context", renameHandler);
 
     renameHandler.invoke(getProject(), myEditor, getFile(), context);
   }
 
   @Override
-  public void renameElement(@NotNull final PsiElement element, @NotNull final String newName) {
+  public void renameElement(@NotNull PsiElement element, @NotNull String newName) {
     final boolean searchInComments = false;
     final boolean searchTextOccurrences = false;
     renameElement(element, newName, searchInComments, searchTextOccurrences);
   }
 
   @Override
-  public void renameElement(@NotNull final PsiElement element,
-                            @NotNull final String newName,
-                            final boolean searchInComments,
-                            final boolean searchTextOccurrences) {
-    final PsiElement substitution = RenamePsiElementProcessor.forElement(element).substituteElementToRename(element, myEditor);
+  public void renameElement(@NotNull PsiElement element,
+                            @NotNull String newName,
+                            boolean searchInComments,
+                            boolean searchTextOccurrences) {
+    PsiElement substitution = RenamePsiElementProcessor.forElement(element).substituteElementToRename(element, myEditor);
     if (substitution == null) return;
     new RenameProcessor(getProject(), substitution, newName, searchInComments, searchTextOccurrences).run();
   }
@@ -860,7 +956,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void type(final char c) {
+  public void type(char c) {
     assertInitialized();
     myEditorTestFixture.type(c);
   }
@@ -871,7 +967,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void performEditorAction(@NotNull final String actionId) {
+  public void performEditorAction(@NotNull String actionId) {
     assertInitialized();
     EdtTestUtil.runInEdtAndWait(() -> myEditorTestFixture.performEditorAction(actionId));
   }
@@ -879,17 +975,16 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public Presentation testAction(@NotNull AnAction action) {
-    TestActionEvent e = new TestActionEvent(action);
-    action.beforeActionPerformedUpdate(e);
-    if (e.getPresentation().isEnabled() && e.getPresentation().isVisible()) {
-      action.actionPerformed(e);
+    AnActionEvent e = TestActionEvent.createTestEvent(action);
+    if (ActionUtil.lastUpdateAndCheckDumb(action, e, true)) {
+      ActionUtil.performActionDumbAwareWithCallbacks(action, e);
     }
     return e.getPresentation();
   }
 
   @NotNull
   @Override
-  public Collection<UsageInfo> testFindUsages(final String @NotNull ... fileNames) {
+  public Collection<UsageInfo> testFindUsages(String @NotNull ... fileNames) {
     assertInitialized();
     if (fileNames.length > 0) {
       configureByFiles(fileNames);
@@ -933,13 +1028,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public Collection<UsageInfo> findUsages(@NotNull final PsiElement targetElement) {
+  public Collection<UsageInfo> findUsages(@NotNull PsiElement targetElement) {
     return findUsages(targetElement, null);
   }
 
   @NotNull
   @Override
-  public String getUsageViewTreeTextRepresentation(@NotNull final Collection<? extends UsageInfo> usages) {
+  public String getUsageViewTreeTextRepresentation(@NotNull Collection<? extends UsageInfo> usages) {
     UsageViewImpl usageView = (UsageViewImpl)UsageViewManager
       .getInstance(getProject()).createUsageView(UsageTarget.EMPTY_ARRAY,
                                                  ContainerUtil.map(usages, usage -> new UsageInfo2UsageAdapter(usage)).toArray(Usage.EMPTY_ARRAY),
@@ -949,9 +1044,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public @NotNull String getUsageViewTreeTextRepresentation(final @NotNull List<UsageTarget> usageTargets,
-                                                            final @NotNull Collection<? extends Usage> usages) {
-    final UsageViewImpl usageView = (UsageViewImpl)UsageViewManager.getInstance(getProject())
+  public @NotNull String getUsageViewTreeTextRepresentation(@NotNull List<UsageTarget> usageTargets,
+                                                            @NotNull Collection<? extends Usage> usages) {
+    UsageViewImpl usageView = (UsageViewImpl)UsageViewManager.getInstance(getProject())
       .createUsageView(usageTargets.toArray(UsageTarget.EMPTY_ARRAY), usages.toArray(Usage.EMPTY_ARRAY), new UsageViewPresentation(), null);
 
     return getUsageViewTreeTextRepresentation(usageView);
@@ -959,11 +1054,11 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public String getUsageViewTreeTextRepresentation(@NotNull final PsiElement targetElement) {
-    final FindUsagesManager usagesManager = ((FindManagerImpl)FindManager.getInstance(getProject())).getFindUsagesManager();
-    final FindUsagesHandler handler = usagesManager.getFindUsagesHandler(targetElement, false);
+  public String getUsageViewTreeTextRepresentation(@NotNull PsiElement targetElement) {
+    FindUsagesManager usagesManager = ((FindManagerImpl)FindManager.getInstance(getProject())).getFindUsagesManager();
+    FindUsagesHandler handler = usagesManager.getFindUsagesHandler(targetElement, false);
     assertNotNull("Cannot find handler for: " + targetElement, handler);
-    final UsageViewImpl usageView = (UsageViewImpl)usagesManager.doFindUsages(handler.getPrimaryElements(),
+    UsageViewImpl usageView = (UsageViewImpl)usagesManager.doFindUsages(handler.getPrimaryElements(),
                                                                               handler.getSecondaryElements(),
                                                                               handler,
                                                                               handler.getFindUsagesOptions(),
@@ -973,32 +1068,28 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public @NotNull String getUsageViewTreeTextRepresentation(final @NotNull SearchTarget target) {
-    final Project project = getProject();
+  public @NotNull String getUsageViewTreeTextRepresentation(@NotNull SearchTarget target) {
+    Project project = getProject();
 
-    //noinspection unchecked
-    final UsageHandler<Object> handler = (UsageHandler<Object>)target.getUsageHandler();
-    final SearchScope searchScope = coalesce(target.getMaximalSearchScope(), GlobalSearchScope.allScope(project));
-    final AllSearchOptions<Object> allOptions =
-      new AllSearchOptions<>(UsageOptions.createOptions(searchScope), true, handler.getCustomOptions(FIND_USAGES));
-
-    final List<UsageTarget> usageTargets = List.of(new SearchTarget2UsageTarget<>(project, target, allOptions));
-    final Collection<? extends Usage> usages = buildUsageViewQuery(getProject(), target, handler, allOptions).findAll();
+    SearchScope searchScope = coalesce(target.getMaximalSearchScope(), GlobalSearchScope.allScope(project));
+    AllSearchOptions allOptions = new AllSearchOptions(UsageOptions.createOptions(searchScope), true);
+    List<UsageTarget> usageTargets = List.of(new SearchTarget2UsageTarget(project, target, allOptions));
+    Collection<? extends Usage> usages = buildUsageViewQuery(getProject(), target, allOptions).findAll();
 
     return getUsageViewTreeTextRepresentation(usageTargets, usages);
   }
 
   @NotNull
-  public Collection<UsageInfo> findUsages(@NotNull final PsiElement targetElement, @Nullable SearchScope scope) {
-    final Project project = getProject();
-    final FindUsagesHandler handler =
+  public Collection<UsageInfo> findUsages(@NotNull PsiElement targetElement, @Nullable SearchScope scope) {
+    Project project = getProject();
+    FindUsagesHandler handler =
       ((FindManagerImpl)FindManager.getInstance(project)).getFindUsagesManager().getFindUsagesHandler(targetElement, false);
 
-    final CommonProcessors.CollectProcessor<UsageInfo> processor =
+    CommonProcessors.CollectProcessor<UsageInfo> processor =
       new CommonProcessors.CollectProcessor<>(Collections.synchronizedList(new ArrayList<>()));
     assertNotNull("Cannot find handler for: " + targetElement, handler);
-    final PsiElement[] psiElements = ArrayUtil.mergeArrays(handler.getPrimaryElements(), handler.getSecondaryElements());
-    final FindUsagesOptions options = handler.getFindUsagesOptions(null);
+    PsiElement[] psiElements = ArrayUtil.mergeArrays(handler.getPrimaryElements(), handler.getSecondaryElements());
+    FindUsagesOptions options = handler.getFindUsagesOptions(null);
     if (scope != null) options.searchScope = scope;
     for (PsiElement psiElement : psiElements) {
       handler.processElementUsages(psiElement, processor, options);
@@ -1007,31 +1098,28 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public RangeHighlighter @NotNull [] testHighlightUsages(final String @NotNull ... files) {
+  public RangeHighlighter @NotNull [] testHighlightUsages(String @NotNull ... files) {
     configureByFiles(files);
     testAction(new HighlightUsagesAction());
-    final Editor editor = getEditor();
-    //final Editor editor = com.intellij.openapi.actionSystem.CommonDataKeys.EDITOR.getData(DataManager.getInstance().getDataContext());
-    //assert editor != null;
-    //HighlightUsagesHandler.invoke(getProject(), editor, getFile());
+    Editor editor = getEditor();
     return editor.getMarkupModel().getAllHighlighters();
   }
 
   @Override
-  public void moveFile(@NotNull final String filePath, @NotNull final String to, @TestDataFile final String @NotNull ... additionalFiles) {
+  public void moveFile(@NotNull String filePath, @NotNull String to, @TestDataFile String @NotNull ... additionalFiles) {
     assertInitialized();
-    final Project project = getProject();
+    Project project = getProject();
     configureByFiles(ArrayUtil.reverseArray(ArrayUtil.append(additionalFiles, filePath)));
-    final VirtualFile file = findFileInTempDir(to);
+    VirtualFile file = findFileInTempDir(to);
     assertNotNull("Directory " + to + " not found", file);
     assertTrue(to + " is not a directory", file.isDirectory());
-    final PsiDirectory directory = myPsiManager.findDirectory(file);
+    PsiDirectory directory = myPsiManager.findDirectory(file);
     new MoveFilesOrDirectoriesProcessor(project, new PsiElement[]{getFile()}, directory, false, false, null, null).run();
   }
 
   @Override
   @Nullable
-  public GutterMark findGutter(@NotNull final String filePath) {
+  public GutterMark findGutter(@NotNull String filePath) {
     configureByFilesInner(filePath);
     CommonProcessors.FindFirstProcessor<GutterMark> processor = new CommonProcessors.FindFirstProcessor<>();
     doHighlighting();
@@ -1065,7 +1153,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public List<GutterMark> findAllGutters(@NotNull final String filePath) {
+  public List<GutterMark> findAllGutters(@NotNull String filePath) {
     configureByFilesInner(filePath);
     return findAllGutters();
   }
@@ -1073,8 +1161,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @Override
   @NotNull
   public List<GutterMark> findAllGutters() {
-    final Project project = getProject();
-    final SortedMap<Integer, List<GutterMark>> result = new TreeMap<>();
+    Project project = getProject();
+    SortedMap<Integer, List<GutterMark>> result = new TreeMap<>();
 
     List<HighlightInfo> infos = doHighlighting();
     for (HighlightInfo info : infos) {
@@ -1082,7 +1170,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
 
     RangeHighlighter[] highlighters = DocumentMarkupModel.forDocument(myEditor.getDocument(), project, true).getAllHighlighters();
-    for (final RangeHighlighter highlighter : highlighters) {
+    for (RangeHighlighter highlighter : highlighters) {
       if (!highlighter.isValid()) continue;
       addGutterIconRenderer(highlighter.getGutterIconRenderer(), highlighter.getStartOffset(), result);
     }
@@ -1090,12 +1178,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile addFileToProject(@NotNull final String relativePath, @NotNull final String fileText) {
+  public PsiFile addFileToProject(@NotNull String relativePath, @NotNull String fileText) {
     assertInitialized();
     return addFileToProject(getTempDirPath(), relativePath, fileText);
   }
 
-  protected PsiFile addFileToProject(@NotNull final String rootPath, @NotNull final String relativePath, @NotNull final String fileText) {
+  protected PsiFile addFileToProject(@NotNull String rootPath, @NotNull String relativePath, @NotNull String fileText) {
     try {
       VirtualFile file = WriteCommandAction.runWriteCommandAction(getProject(), (ThrowableComputable<VirtualFile, IOException>)() -> {
         try {
@@ -1146,7 +1234,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public LookupElement[] complete(@NotNull final CompletionType type, final int invocationCount) {
+  public LookupElement[] complete(@NotNull CompletionType type, int invocationCount) {
     assertInitialized();
     return myEditorTestFixture.complete(type, invocationCount);
   }
@@ -1158,12 +1246,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public final List<LookupElement> completeBasicAllCarets(@Nullable final Character charToTypeAfterCompletion) {
+  public final List<LookupElement> completeBasicAllCarets(@Nullable Character charToTypeAfterCompletion) {
     return myEditorTestFixture.completeBasicAllCarets(charToTypeAfterCompletion);
   }
 
   @Override
-  public void saveText(@NotNull final VirtualFile file, @NotNull final String text) {
+  public void saveText(@NotNull VirtualFile file, @NotNull String text) {
     try {
     WriteAction.runAndWait(() -> VfsUtil.saveText(file, text));
     }
@@ -1260,6 +1348,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       if (policy != null) {
         policy.setUp(getProject(), getTestRootDisposable(), getTestDataPath());
       }
+      ActionUtil.performActionDumbAwareWithCallbacks(
+        new EmptyAction(true), AnActionEvent.createFromDataContext("", null, DataContext.EMPTY_CONTEXT));
     });
 
     for (Module module : ModuleManager.getInstance(getProject()).getModules()) {
@@ -1268,6 +1358,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     if (shouldTrackVirtualFilePointers()) {
       myVirtualFilePointerTracker = new VirtualFilePointerTracker();
     }
+    myLibraryTableTracker = new LibraryTableTracker();
   }
 
   protected boolean shouldTrackVirtualFilePointers() {
@@ -1278,6 +1369,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   public void tearDown() throws Exception {
     // don't use method references here to make stack trace reading easier
     //noinspection Convert2MethodRef
+    AtomicReference<ProjectRootManagerComponent> projectRootManagerComponentRef = new AtomicReference<>();
     runAll(
       () -> EdtTestUtil.runInEdtAndWait(() -> {
         if (ApplicationManager.getApplication() == null) {
@@ -1288,7 +1380,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
         try {
           project = myProjectFixture.getProject();
         }
-        catch (AssertionError ignore) {
+        catch (AssertionError | UninitializedPropertyAccessException ignore) {
           project = null;
         }
 
@@ -1313,6 +1405,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
           ((DaemonCodeAnalyzerImpl)DaemonCodeAnalyzer.getInstance(project)).cleanupAfterTest();
           // needed for myVirtualFilePointerTracker check below
           ((ProjectRootManagerImpl)ProjectRootManager.getInstance(project)).clearScopesCachesForModules();
+          projectRootManagerComponentRef.set(ObjectUtils.tryCast(ProjectRootManager.getInstance(project), ProjectRootManagerComponent.class));
         }
       }),
       () -> {
@@ -1324,8 +1417,22 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       () -> EdtTestUtil.runInEdtAndWait(() -> myTempDirFixture.tearDown()),
       () -> super.tearDown(),
       () -> {
+        // Even ProjectRootManagerComponent is a project service implementing Disposable, it might be not disposed in test light projects.
+        // Virtual file pointers could be created too late - during `myProjectFixture.tearDown()` - on
+        // `fixture.getTestRootDisposable()` disposing or on project files cleanup.
+        // Need to dispose virtual file pointers after that moment.
+        // It wouldn't be needed if `ProjectRootManagerComponent.dispose()` would get called in tests, like in production.
+        ProjectRootManagerComponent projectRootManagerComponent = projectRootManagerComponentRef.getAndSet(null);
+        if (projectRootManagerComponent != null) {
+          projectRootManagerComponent.disposeVirtualFilePointersAfterTest();
+        }
         if (myVirtualFilePointerTracker != null) {
           myVirtualFilePointerTracker.assertPointersAreDisposed();
+        }
+      },
+      () -> {
+        if (myLibraryTableTracker != null) {
+          myLibraryTableTracker.assertDisposed();
         }
       }
     );
@@ -1354,37 +1461,51 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile configureByFile(@NotNull final String file) {
+  public PsiFile configureByFile(@NotNull String file) {
     configureByFilesInner(file);
     return getFile();
   }
 
   @Override
-  public PsiFile @NotNull [] configureByFiles(final String @NotNull ... files) {
+  public PsiFile @NotNull [] configureByFiles(String @NotNull ... files) {
     return configureByFilesInner(files);
   }
 
   @Override
-  public PsiFile configureByText(@NotNull final FileType fileType, @NotNull final String text) {
+  public PsiFile configureByText(@NotNull FileType fileType, @NotNull String text) {
     assertInitialized();
-    final String extension = fileType.getDefaultExtension();
-    final FileTypeManager fileTypeManager = FileTypeManager.getInstance();
-    if (fileTypeManager.getFileTypeByExtension(extension) != fileType) {
-      WriteCommandAction.runWriteCommandAction(getProject(), () -> fileTypeManager.associateExtension(fileType, extension));
-    }
-    final String fileName = "aaa." + extension;
+    String extension = fileType.getDefaultExtension();
+    associateExtensionTemporarily(fileType, extension, getTestRootDisposable());
+    String fileName = "aaa." + extension;
     return configureByText(fileName, text);
   }
 
+  public static void associateExtensionTemporarily(@NotNull FileType fileType,
+                                                   @NotNull String extension,
+                                                   @NotNull Disposable parentDisposable) {
+    FileTypeManager fileTypeManager = FileTypeManager.getInstance();
+    if (!fileType.equals(fileTypeManager.getFileTypeByExtension(extension))) {
+      WriteAction.runAndWait(() -> fileTypeManager.associateExtension(fileType, extension));
+      Disposer.register(parentDisposable, ()->WriteAction.runAndWait(() -> fileTypeManager.removeAssociatedExtension(fileType, extension)));
+    }
+  }
+
   @Override
-  public PsiFile configureByText(@NotNull final String fileName, @NotNull final String text) {
+  public PsiFile configureByText(@NotNull String fileName, @NotNull String text) {
     assertInitialized();
-    VirtualFile vFile;
+    VirtualFile vFile = createFile(fileName, text);
+    configureInner(vFile, SelectionAndCaretMarkupLoader.fromFile(vFile));
+    return getFile();
+  }
+
+  @Override
+  public VirtualFile createFile(@NotNull String fileName, @NotNull String text) {
+    assertInitialized();
     try {
-      vFile = WriteCommandAction.writeCommandAction(getProject()).compute(() -> {
-        final VirtualFile file;
+      return WriteCommandAction.writeCommandAction(getProject()).compute(() -> {
+        VirtualFile file;
         if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
-          final VirtualFile root = LightPlatformTestCase.getSourceRoot();
+          VirtualFile root = LightPlatformTestCase.getSourceRoot();
           root.refresh(false, false);
           file = root.findOrCreateChildData(this, fileName);
           assertNotNull(fileName + " not found in " + root.getPath(), file);
@@ -1401,7 +1522,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
         prepareVirtualFile(file);
 
-        final Document document = FileDocumentManager.getInstance().getCachedDocument(file);
+        Document document = FileDocumentManager.getInstance().getCachedDocument(file);
         if (document != null) {
           PsiDocumentManager.getInstance(getProject()).doPostponedOperationsAndUnblockDocument(document);
           FileDocumentManager.getInstance().saveDocument(document);
@@ -1414,12 +1535,10 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     catch (IOException e) {
       throw new RuntimeException(e);
     }
-    configureInner(vFile, SelectionAndCaretMarkupLoader.fromFile(vFile));
-    return getFile();
   }
 
   @Override
-  public Document getDocument(@NotNull final PsiFile file) {
+  public Document getDocument(@NotNull PsiFile file) {
     assertInitialized();
     return PsiDocumentManager.getInstance(getProject()).getDocument(file);
   }
@@ -1431,8 +1550,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile configureFromTempProjectFile(@NotNull final String filePath) {
-    final VirtualFile fileInTempDir = findFileInTempDir(filePath);
+  public PsiFile configureFromTempProjectFile(@NotNull String filePath) {
+    VirtualFile fileInTempDir = findFileInTempDir(filePath);
     if (fileInTempDir == null) {
       throw new IllegalArgumentException("Could not find file in temp dir: " + filePath);
     }
@@ -1448,7 +1567,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return configureInner(copy, SelectionAndCaretMarkupLoader.fromFile(copy));
   }
 
-  private PsiFile configureInner(@NotNull final VirtualFile copy, @NotNull final SelectionAndCaretMarkupLoader loader) {
+  private PsiFile configureInner(@NotNull VirtualFile copy, @NotNull SelectionAndCaretMarkupLoader loader) {
     assertInitialized();
 
     EdtTestUtilKt.runInEdtAndWait(() -> {
@@ -1501,29 +1620,28 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public VirtualFile findFileInTempDir(@NotNull final String filePath) {
+  public VirtualFile findFileInTempDir(@NotNull String filePath) {
     if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
       return myTempDirFixture.getFile(filePath);
     }
     String fullPath = getTempDirPath() + "/" + filePath;
 
-    final VirtualFile copy = LocalFileSystem.getInstance().refreshAndFindFileByPath(fullPath.replace(File.separatorChar, '/'));
+    VirtualFile copy = LocalFileSystem.getInstance().refreshAndFindFileByPath(fullPath.replace(File.separatorChar, '/'));
     assertNotNull("file " + fullPath + " not found", copy);
     VfsTestUtil.assertFilePathEndsWithCaseSensitivePath(copy, filePath);
     return copy;
   }
 
-  @Nullable
+  @NotNull
   protected Editor createEditor(@NotNull VirtualFile file) {
-    final Project project = getProject();
-    final FileEditorManager instance = FileEditorManager.getInstance(project);
+    Project project = getProject();
+    FileEditorManager instance = FileEditorManager.getInstance(project);
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
 
     Editor editor = instance.openTextEditor(new OpenFileDescriptor(project, file), false);
+    UIUtil.markAsFocused(editor.getContentComponent(), true); // to make UIUtil.hasFocus return true to make ShowAutoImportPass.showImports work
     EditorTestUtil.waitForLoading(editor);
-    if (editor != null) {
-      DaemonCodeAnalyzer.getInstance(getProject()).restart();
-    }
+    DaemonCodeAnalyzer.getInstance(getProject()).restart();
     return editor;
   }
 
@@ -1535,6 +1653,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
                                            boolean checkInfos,
                                            boolean checkWeakWarnings,
                                            boolean ignoreExtraHighlighting) {
+    if (myEditor == null) {
+      throw new IllegalStateException("Fixture is not configured. Call something like configureByFile() or configureByText()");
+    }
     ExpectedHighlightingData data = new ExpectedHighlightingData(
       myEditor.getDocument(), checkWarnings, checkWeakWarnings, checkInfos, ignoreExtraHighlighting, myMessageBundles);
     data.init();
@@ -1547,17 +1668,16 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   public long collectAndCheckHighlighting(@NotNull ExpectedHighlightingData data) {
-    final Project project = getProject();
+    Project project = getProject();
     EdtTestUtil.runInEdtAndWait(() -> PsiDocumentManager.getInstance(project).commitAllDocuments());
-
     PsiFileImpl file = (PsiFileImpl)getHostFile();
     FileElement hardRefToFileElement = file.calcTreeElement();//to load text
 
     // to load AST for changed files before it's prohibited by "fileTreeAccessFilter"
     ensureIndexesUpToDate(project);
 
-    final long start = System.currentTimeMillis();
-    final VirtualFileFilter fileTreeAccessFilter = myVirtualFileFilter;
+    long start = System.currentTimeMillis();
+    VirtualFileFilter fileTreeAccessFilter = myVirtualFileFilter;
     Disposable disposable = Disposer.newDisposable();
     if (fileTreeAccessFilter != null) {
       PsiManagerEx.getInstanceEx(project).setAssertOnFileLoadingFilter(fileTreeAccessFilter, disposable);
@@ -1573,7 +1693,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       Disposer.dispose(disposable);
     }
     //    ProfilingUtil.captureCPUSnapshot("testing");
-    final long elapsed = System.currentTimeMillis() - start;
+    long elapsed = System.currentTimeMillis() - start;
 
     data.checkResult(file, infos, file.getText());
     if (data.hasLineMarkers()) {
@@ -1584,6 +1704,15 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return elapsed;
   }
 
+  /**
+   * Sets filter to check for which files AST loading is forbidden in {@link #collectAndCheckHighlighting(ExpectedHighlightingData)} method.
+   * <p>
+   * Other testing methods are not affected,
+   * consider using {@link PsiManagerEx#setAssertOnFileLoadingFilter(VirtualFileFilter, Disposable)}.
+   * <p>
+   * Files loaded with <b>configure*</b> methods (which are called, e.g., from {@link #testHighlighting(String...)}) won't be checked
+   * because their AST will be loaded before setting filter. Use {@link #copyFileToProject(String)} and similar methods.
+   */
   public void setVirtualFileFilter(@Nullable VirtualFileFilter filter) {
     myVirtualFileFilter = filter;
   }
@@ -1600,7 +1729,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public List<HighlightInfo> doHighlighting(@NotNull final HighlightSeverity minimalSeverity) {
+  public List<HighlightInfo> doHighlighting(@NotNull HighlightSeverity minimalSeverity) {
     return ContainerUtil.filter(doHighlighting(), info -> info.getSeverity().compareTo(minimalSeverity) >= 0);
   }
 
@@ -1636,13 +1765,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  @Nullable
   public PsiFile getFile() {
     return myFile != null ? ReadAction.compute(() -> PsiManager.getInstance(getProject()).findFile(myFile)) : null;
   }
 
   @Override
-  public void allowTreeAccessForFile(@NotNull final VirtualFile file) {
+  public void allowTreeAccessForFile(@NotNull VirtualFile file) {
     assert myVirtualFileFilter instanceof FileTreeAccessFilter : "configured filter does not support this method";
     ((FileTreeAccessFilter)myVirtualFileFilter).allowTreeAccessForFile(file);
   }
@@ -1717,7 +1845,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   private String stripTrailingSpaces(@NotNull String actualText) {
-    final Document document = EditorFactory.getInstance().createDocument(actualText);
+    Document document = EditorFactory.getInstance().createDocument(actualText);
     ((DocumentImpl)document).stripTrailingSpaces(getProject());
     actualText = document.getText();
     return actualText;
@@ -1729,7 +1857,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   public String getFoldingDescription(boolean withCollapseStatus) {
-    final Editor topEditor = getHostEditor();
+    Editor topEditor = getHostEditor();
     return EdtTestUtil.runInEdtAndGet(() -> {
       IdeaTestExecutionPolicy policy = IdeaTestExecutionPolicy.current();
       if (policy != null) {
@@ -1754,16 +1882,16 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
                                                                @NotNull Collection<? extends T> segments,
                                                                @NotNull String tagName,
                                                                @Nullable Function<? super T, String> attrCalculator) {
-    final List<Border> borders = new LinkedList<>();
-    for (T region : segments) {
-      String attr = attrCalculator == null ? null : attrCalculator.fun(region);
-      borders.add(new CodeInsightTestFixtureImpl.Border(true, region.getStartOffset(), attr));
-      borders.add(new CodeInsightTestFixtureImpl.Border(false, region.getEndOffset(), ""));
-    }
-    Collections.sort(borders);
+    List<Border> borders =
+    segments.stream()
+        .flatMap(region -> Stream.of(
+          new Border(true, region.getStartOffset(), attrCalculator == null ? null : attrCalculator.fun(region)),
+          new Border(false, region.getEndOffset(), "")))
+      .sorted()
+      .toList();
 
     StringBuilder result = new StringBuilder(text);
-    for (CodeInsightTestFixtureImpl.Border border : borders) {
+    for (Border border : borders) {
       StringBuilder info = new StringBuilder();
       info.append('<');
       if (border.isLeftBorder) {
@@ -1780,12 +1908,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
     return result.toString();
   }
+  private record Border(boolean isLeftBorder, int offset, @Nullable String text) implements Comparable<Border> {
+    @Override
+    public int compareTo(@NotNull Border o) {
+      return offset < o.offset ? 1 : -1;
+    }
+  }
 
   private void testFoldingRegions(@NotNull String verificationFileName,
                                   @Nullable String destinationFileName,
                                   boolean doCheckCollapseStatus) {
     String expectedContent;
-    final File verificationFile;
+    File verificationFile;
     try {
       verificationFile = new File(verificationFileName);
       expectedContent = FileUtil.loadFile(verificationFile);
@@ -1796,23 +1930,33 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     assertNotNull(expectedContent);
 
     expectedContent = StringUtil.replace(expectedContent, "\r", "");
-    final String cleanContent = removeFoldingMarkers(expectedContent);
+    String cleanContent = removeFoldingMarkers(expectedContent);
     if (destinationFileName == null) {
-      final String fileName = PathUtil.getFileName(verificationFileName);
+      String fileName = PathUtil.getFileName(verificationFileName);
       configureByText(fileName, cleanContent);
     }
     else {
       try {
-        FileUtil.writeToFile(new File(destinationFileName), cleanContent);
-        VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByPath(destinationFileName);
-        assertNotNull(file);
-        configureFromExistingVirtualFile(file);
+        @SuppressWarnings("ConstantConditions") String tempDirPrefix = myTempDirFixture.getFile("").getUrl();
+
+        // if destination (as a URL) points to a file inside the temp dir, then create it there
+        if (destinationFileName.startsWith(tempDirPrefix)) {
+          VirtualFile file = myTempDirFixture.createFile(destinationFileName.substring(tempDirPrefix.length()), cleanContent);
+          assertNotNull(file);
+          configureFromExistingVirtualFile(file);
+        }
+        else {
+          FileUtil.writeToFile(new File(destinationFileName), cleanContent);
+          VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByPath(destinationFileName);
+          assertNotNull(file);
+          configureFromExistingVirtualFile(file);
+        }
       }
       catch (IOException e) {
         throw new RuntimeException(e);
       }
     }
-    final String actual = getFoldingDescription(doCheckCollapseStatus);
+    String actual = getFoldingDescription(doCheckCollapseStatus);
     if (!expectedContent.equals(actual)) {
       throw new FileComparisonFailure(verificationFile.getName(), expectedContent, actual, verificationFile.getPath());
     }
@@ -1825,24 +1969,24 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testFoldingWithCollapseStatus(@NotNull final String verificationFileName) {
+  public void testFoldingWithCollapseStatus(@NotNull String verificationFileName) {
     testFoldingRegions(verificationFileName, null, true);
   }
 
   @Override
-  public void testFoldingWithCollapseStatus(@NotNull final String verificationFileName, @Nullable String destinationFileName) {
+  public void testFoldingWithCollapseStatus(@NotNull String verificationFileName, @Nullable String destinationFileName) {
     testFoldingRegions(verificationFileName, destinationFileName, true);
   }
 
   @Override
-  public void testFolding(@NotNull final String verificationFileName) {
+  public void testFolding(@NotNull String verificationFileName) {
     testFoldingRegions(verificationFileName, null, false);
   }
 
   @Override
   public void testRainbow(@NotNull String fileName, @NotNull String text, boolean isRainbowOn, boolean withColor) {
-    final EditorColorsScheme globalScheme = EditorColorsManager.getInstance().getGlobalScheme();
-    final boolean isRainbowOnInScheme = RainbowHighlighter.isRainbowEnabled(globalScheme, null);
+    EditorColorsScheme globalScheme = EditorColorsManager.getInstance().getGlobalScheme();
+    boolean isRainbowOnInScheme = RainbowHighlighter.isRainbowEnabled(globalScheme, null);
     try {
       RainbowHighlighter.setRainbowEnabled(globalScheme, null, isRainbowOn);
       configureByText(fileName, text.replaceAll("<" + RAINBOW + "(\\scolor='[^']*')?>", "").replace("</" + RAINBOW + ">", ""));
@@ -1900,7 +2044,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void assertPreferredCompletionItems(final int selected, final String @NotNull ... expected) {
+  public void assertPreferredCompletionItems(int selected, String @NotNull ... expected) {
     myEditorTestFixture.assertPreferredCompletionItems(selected, expected);
   }
 
@@ -1908,10 +2052,10 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   public void testStructureView(@NotNull Consumer<? super StructureViewComponent> consumer) {
     assertNotNull("configure first", myFile);
 
-    final FileEditor fileEditor = FileEditorManager.getInstance(getProject()).getSelectedEditor(myFile);
+    FileEditor fileEditor = FileEditorManager.getInstance(getProject()).getSelectedEditor(myFile);
     assertNotNull("editor not opened for " + myFile, myFile);
 
-    final StructureViewBuilder builder = LanguageStructureViewBuilder.INSTANCE.getStructureViewBuilder(getFile());
+    StructureViewBuilder builder = LanguageStructureViewBuilder.INSTANCE.getStructureViewBuilder(getFile());
     assertNotNull("no builder for " + myFile, builder);
 
     StructureViewComponent component = null;
@@ -1943,8 +2087,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public List<Object> getGotoClassResults(@NotNull String pattern, boolean searchEverywhere, @Nullable PsiElement contextForSorting) {
-    SearchEverywhereContributor<Object> contributor = createMockContributor(searchEverywhere);
-    final ArrayList<Object> results = new ArrayList<>();
+    SearchEverywhereContributor<Object> contributor = createMockClassSearchEverywhereContributor(searchEverywhere);
+    ArrayList<Object> results = new ArrayList<>();
+    contributor.fetchElements(pattern, new MockProgressIndicator(), new CommonProcessors.CollectProcessor<>(results));
+    return results;
+  }
+
+  @Override
+  public @NotNull List<Object> getGotoSymbolResults(@NotNull String pattern,
+                                                    boolean searchEverywhere,
+                                                    @Nullable PsiElement contextForSorting) {
+    SearchEverywhereContributor<Object> contributor = createMockSymbolSearchEverywhereContributor(searchEverywhere);
+    ArrayList<Object> results = new ArrayList<>();
     contributor.fetchElements(pattern, new MockProgressIndicator(), new CommonProcessors.CollectProcessor<>(results));
     return results;
   }
@@ -1955,10 +2109,20 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return myEditorTestFixture.getBreadcrumbsAtCaret();
   }
 
-  private SearchEverywhereContributor<Object> createMockContributor(boolean everywhere) {
+  private SearchEverywhereContributor<Object> createMockClassSearchEverywhereContributor(boolean everywhere) {
     DataContext dataContext = SimpleDataContext.getProjectContext(getProject());
     AnActionEvent event = AnActionEvent.createFromDataContext(ActionPlaces.UNKNOWN, null, dataContext);
     ClassSearchEverywhereContributor contributor = new ClassSearchEverywhereContributor(event) {{
+      myScopeDescriptor = new ScopeDescriptor(FindSymbolParameters.searchScopeFor(myProject, everywhere));
+    }};
+    Disposer.register(getProjectDisposable(), contributor);
+    return contributor;
+  }
+
+  private SearchEverywhereContributor<Object> createMockSymbolSearchEverywhereContributor(boolean everywhere) {
+    DataContext dataContext = SimpleDataContext.getProjectContext(getProject());
+    AnActionEvent event = AnActionEvent.createFromDataContext(ActionPlaces.UNKNOWN, null, dataContext);
+    SymbolSearchEverywhereContributor contributor = new SymbolSearchEverywhereContributor(event) {{
       myScopeDescriptor = new ScopeDescriptor(FindSymbolParameters.searchScopeFor(myProject, everywhere));
     }};
     Disposer.register(getProjectDisposable(), contributor);
@@ -1973,7 +2137,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
   }
 
-  public static boolean invokeIntention(@NotNull IntentionAction action, PsiFile file, Editor editor) {
+  public static boolean invokeIntention(@NotNull IntentionAction action, @NotNull PsiFile file, @NotNull Editor editor) {
     // Test that action will automatically clear the read-only attribute if modification is necessary.
     // If your test fails due to this, make sure that your quick-fix/intention
     // overrides "getElementToMakeWritable" or has the following line:
@@ -2023,12 +2187,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return writable;
   }
 
-  private static void checkPsiTextConsistency(Project project, VirtualFile vFile) {
+  private static void checkPsiTextConsistency(@NotNull Project project, @NotNull VirtualFile vFile) {
     PsiFile topLevelPsi = vFile.isValid() ? PsiManager.getInstance(project).findFile(vFile) : null;
     if (topLevelPsi != null) {
       if (Registry.is("ide.check.structural.psi.text.consistency.in.tests")) {
         PsiTestUtil.checkPsiStructureWithCommit(topLevelPsi, PsiTestUtil::checkPsiMatchesTextIgnoringNonCode);
-      } else {
+      }
+      else {
         PsiTestUtil.checkStubsMatchText(topLevelPsi);
       }
     }
@@ -2044,7 +2209,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @NotNull
-  public String getUsageViewTreeTextRepresentation(@NotNull final UsageViewImpl usageView) {
+  public String getUsageViewTreeTextRepresentation(@NotNull UsageViewImpl usageView) {
     Disposer.register(getTestRootDisposable(), usageView);
     usageView.expandAll();
     return TreeNodeTester.forNode(usageView.getRoot()).withPresenter(usageView::getNodeText).constructTextRepresentation();
@@ -2059,7 +2224,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     private SelectionAndCaretMarkupLoader(@NotNull String fileText, String filePath) {
       this.fileText = fileText;
       this.filePath = filePath;
-      final Document document = EditorFactory.getInstance().createDocument(fileText);
+      Document document = EditorFactory.getInstance().createDocument(fileText);
       caretState = EditorTestUtil.extractCaretAndSelectionMarkers(document);
       newFileText = document.getText();
     }
@@ -2087,23 +2252,6 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     @NotNull
     private static SelectionAndCaretMarkupLoader fromText(@NotNull String text) {
       return new SelectionAndCaretMarkupLoader(text, null);
-    }
-  }
-
-  private static final class Border implements Comparable<Border> {
-    private final boolean isLeftBorder;
-    private final int offset;
-    private final String text;
-
-    private Border(boolean isLeftBorder, int offset, String text) {
-      this.isLeftBorder = isLeftBorder;
-      this.offset = offset;
-      this.text = text;
-    }
-
-    @Override
-    public int compareTo(@NotNull Border o) {
-      return offset < o.offset ? 1 : -1;
     }
   }
 
