@@ -16,11 +16,12 @@ import com.siyeh.ig.InspectionGadgetsFix;
 import com.siyeh.ig.fixes.EqualityToEqualsFix;
 import com.siyeh.ig.psiutils.ComparisonUtils;
 import com.siyeh.ig.psiutils.ControlFlowUtils;
+import com.siyeh.ig.psiutils.VariableAccessUtils;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import static com.intellij.util.ObjectUtils.tryCast;
 
@@ -74,13 +75,17 @@ public class NewObjectEqualityInspection extends BaseInspection {
     }
 
     private static PsiExpression resolveExpression(PsiExpression expression) {
+      PsiElement parent = expression.getParent();
       expression = PsiUtil.skipParenthesizedExprDown(expression);
-      if (!(expression instanceof PsiReferenceExpression)) return expression;
-      PsiReferenceExpression reference = (PsiReferenceExpression)expression;
+      if (!(expression instanceof PsiReferenceExpression reference)) return expression;
       PsiLocalVariable variable = tryCast(reference.resolve(), PsiLocalVariable.class);
       if (variable == null) return expression;
       PsiExpression initializer = variable.getInitializer();
       if (initializer == null) return expression;
+      if (parent instanceof PsiBinaryExpression) {
+        // Check if variable is reused in the same expression
+        if (VariableAccessUtils.getVariableReferences(variable, parent).size() != 1) return expression;
+      }
       PsiElement block = ControlFlowUtil.findCodeFragment(variable);
       PsiElement expressionContext = PsiTreeUtil.getParentOfType(expression, PsiMember.class, PsiLambdaExpression.class);
       if (expressionContext == null || PsiTreeUtil.isAncestor(block, expressionContext, true)) return expression;
@@ -92,8 +97,9 @@ public class NewObjectEqualityInspection extends BaseInspection {
       catch (AnalysisCanceledException e) {
         return expression;
       }
-      int start = flow.getEndOffset(initializer) + 1;
-      if (ControlFlowUtils.isVariableReferencedBeforeStatementEntry(flow, start, expression, variable, Collections.emptySet())) {
+      int initializerEnd = flow.getEndOffset(initializer);
+      int start = initializerEnd + 1;
+      if (ControlFlowUtils.isVariableReferencedBeforeStatementEntry(flow, start, expression, variable, Set.of(initializerEnd))) {
         return expression;
       }
       return initializer;
