@@ -5,7 +5,6 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.util.Pair;
 import com.intellij.util.ExceptionUtil;
-import com.intellij.util.ReflectionUtil;
 import org.jetbrains.annotations.Nullable;
 
 import java.lang.ref.SoftReference;
@@ -24,12 +23,14 @@ public final class ReflectedProject {
 
   private static final ReentrantLock ourProjectsLock = new ReentrantLock();
   public static final String ANT_PROJECT_CLASS = "org.apache.tools.ant.Project";
+  public static final String COMPONENT_HELPER_CLASS = "org.apache.tools.ant.ComponentHelper";
 
   private final Object myProject;
-  private Hashtable myTaskDefinitions;
-  private Hashtable myDataTypeDefinitions;
-  private Hashtable myProperties;
-  private Class myTargetClass;
+  private Map<String, Class<?>> myTaskDefinitions;
+  private Map<String, Class<?>> myDataTypeDefinitions;
+  private Map<String, Collection<Class<?>>> myRestrictedDefinitions;
+  private Map<String, String> myProperties;
+  private Class<?> myTargetClass;
 
   public static ReflectedProject getProject(final ClassLoader classLoader) {
     ourProjectsLock.lock();
@@ -66,19 +67,44 @@ public final class ReflectedProject {
   ReflectedProject(final ClassLoader classLoader) {
     Object project = null;
     try {
-      final Class projectClass = classLoader.loadClass(ANT_PROJECT_CLASS);
-      if (projectClass != null) {
-        project = projectClass.newInstance();
-        Method method = projectClass.getMethod("init");
-        method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getTaskDefinitions");
-        myTaskDefinitions = (Hashtable)method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getDataTypeDefinitions");
-        myDataTypeDefinitions = (Hashtable)method.invoke(project);
-        method = ReflectionUtil.getMethod(projectClass, "getProperties");
-        myProperties = (Hashtable)method.invoke(project);
-        myTargetClass = classLoader.loadClass("org.apache.tools.ant.Target");
+      final Class<?> projectClass = classLoader.loadClass(ANT_PROJECT_CLASS);
+      project = projectClass.getConstructor().newInstance();
+      Method method = projectClass.getMethod("init");
+      method.invoke(project);
+      method = projectClass.getMethod("getTaskDefinitions");
+      //noinspection unchecked
+      myTaskDefinitions = (Map<String, Class<?>>)method.invoke(project);
+      method = projectClass.getMethod( "getDataTypeDefinitions");
+      //noinspection unchecked
+      myDataTypeDefinitions = (Map<String, Class<?>>)method.invoke(project);
+      method = projectClass.getMethod( "getProperties");
+      //noinspection unchecked
+      myProperties = (Map<String, String>)method.invoke(project);
+      myTargetClass = classLoader.loadClass("org.apache.tools.ant.Target");
+
+      try {
+        myRestrictedDefinitions = new HashMap<>();
+        final Class<?> componentHelperClass = classLoader.loadClass(COMPONENT_HELPER_CLASS);
+        final Object helper = componentHelperClass.getMethod("getComponentHelper", projectClass).invoke(null, project);
+        componentHelperClass.getMethod("getDefinition", String.class).invoke(helper, "ant"); // this will initialize restricted definitions
+        final Method getRestrictedDef = componentHelperClass.getDeclaredMethod("getRestrictedDefinition");
+        getRestrictedDef.setAccessible(true);
+        final Map<String, ? extends Collection<?>> restrictedDefinitions = (Map<String, ? extends Collection<?>>)getRestrictedDef.invoke(helper);
+        for (Map.Entry<String, ? extends Collection<?>> entry : restrictedDefinitions.entrySet()) {
+          final List<Class<?>> classes = new ArrayList<>();
+          for (Object /* org.apache.tools.ant.AntTypeDefinition */ typeDef : entry.getValue()) {
+            try {
+              classes.add((Class<?>)typeDef.getClass().getMethod("getTypeClass", projectClass).invoke(typeDef, project));
+            }
+            catch (Throwable ignored) {
+            }
+          }
+          myRestrictedDefinitions.put(entry.getKey(), classes);
+        }
       }
+      catch (Throwable ignored) {
+      }
+
     }
     catch (ProcessCanceledException e) {
       throw e;
@@ -105,7 +131,11 @@ public final class ReflectedProject {
     return myDataTypeDefinitions;
   }
 
-  public Hashtable getProperties() {
+  public Map<String, Collection<Class<?>>> getRestrictedDefinitions() {
+    return myRestrictedDefinitions;
+  }
+
+  public Map<String, String> getProperties() {
     return myProperties;
   }
 
