@@ -13,16 +13,15 @@ import com.intellij.util.PathsList;
 import com.intellij.util.messages.MessageBusConnection;
 import org.assertj.core.api.Assertions;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.plugins.gradle.importing.TestGradleBuildScriptBuilder;
 import org.junit.Test;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.intellij.util.PathUtil.toSystemDependentName;
-import static com.intellij.util.containers.ContainerUtil.newArrayList;
 import static java.util.Arrays.asList;
 
 public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
@@ -38,19 +37,15 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     createProjectSubFile("impl/src/main/resources/dir/file-impl.properties");
     createProjectSubFile("impl/src/test/resources/dir/file-impl-test.properties");
+    TestGradleBuildScriptBuilder builder = createBuildScriptBuilder();
     importProject(
-      "allprojects {\n" +
-      "  apply plugin: 'java'\n" +
-      "}\n" +
-      "\n" +
-      "dependencies {\n" +
-      "  compile project(':api')\n" +
-      "}\n" +
-      "configure(project(':api')) {\n" +
-      "  dependencies {\n" +
-      "    compile project(':impl')\n" +
-      "  }\n" +
-      "}"
+      builder
+        .allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
+        .addImplementationDependency(builder.project(":api"))
+        .project(":api", p -> {
+          p.addImplementationDependency(p.project(":impl"));
+        })
+        .generate()
     );
     assertModules("project", "project.main", "project.test",
                   "project.api", "project.api.main", "project.api.test",
@@ -109,13 +104,15 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     createProjectSubFile("src/another cool name/resources/dir/file-Spaces.properties");
 
     importProject(
-      "apply plugin: 'java'\n" +
-      "\n" +
-      "sourceSets {\n" +
-      "  'integration-test' {}\n" +
-      "  anotherSourceSet {}\n" +
-      "  'another cool name' {}\n" +
-      "}\n"
+      """
+        apply plugin: 'java'
+
+        sourceSets {
+          'integration-test' {}
+          anotherSourceSet {}
+          'another cool name' {}
+        }
+        """
     );
     assertModules("project", "project.main", "project.test",
                   "project.integration-test",
@@ -145,48 +142,43 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     }
 
     VirtualFile appFile = createProjectSubFile("src/main/java/my/pack/App.java",
-                                               "package my.pack;\n" +
-                                               "public class App {\n" +
-                                               "  public int method() { return 42; }" +
-                                               "}");
+                                               """
+                                                 package my.pack;
+                                                 public class App {
+                                                   public int method() { return 42; }}""");
     createProjectSubFile("src/test/java/my/pack/AppTest.java",
-                         "package my.pack;\n" +
-                         "public class AppTest {\n" +
-                         "  public void test() { new App().method(); }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class AppTest {
+                             public void test() { new App().method(); }}""");
 
     createProjectSubFile("api/src/main/java/my/pack/Api.java",
-                         "package my.pack;\n" +
-                         "public class Api {\n" +
-                         "  public int method() { return 42; }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class Api {
+                             public int method() { return 42; }}""");
     createProjectSubFile("api/src/test/java/my/pack/ApiTest.java",
                          "package my.pack;\n" +
                          "public class ApiTest {}");
 
     createProjectSubFile("impl/src/main/java/my/pack/Impl.java",
-                         "package my.pack;\n" +
-                         "import my.pack.Api;\n" +
-                         "public class Impl extends Api {}");
+                         """
+                           package my.pack;
+                           import my.pack.Api;
+                           public class Impl extends Api {}""");
     createProjectSubFile("impl/src/test/java/my/pack/ImplTest.java",
-                         "package my.pack;\n" +
-                         "import my.pack.ApiTest;\n" +
-                         "public class ImplTest extends ApiTest {}");
+                         """
+                           package my.pack;
+                           import my.pack.ApiTest;
+                           public class ImplTest extends ApiTest {}""");
 
-    importProject(
-      "allprojects {\n" +
-      "  apply plugin: 'java'\n" +
-      "}\n" +
-      "\n" +
-      "dependencies {\n" +
-      "  compile project(':impl')\n" +
-      "}\n" +
-      "configure(project(':impl')) {\n" +
-      "  dependencies {\n" +
-      "    compile project(':api')\n" +
-      "  }\n" +
-      "}"
-    );
+    importProject(script(it -> {
+      it.allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
+        .addImplementationDependency(it.project(":impl"))
+        .project(":impl", p -> {
+          p.addImplementationDependency(p.project(":api"));
+        });
+    }));
     assertModules("project", "project.main", "project.test",
                   "project.api", "project.api.main", "project.api.test",
                   "project.impl", "project.impl.main", "project.impl.test");
@@ -203,18 +195,18 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
       @Override
       public void finished(@NotNull ProjectTaskManager.Result result) {
         result.getContext().getDirtyOutputPaths()
-          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).collect(Collectors.toList())));
+          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).toList()));
       }
     });
 
     compileModules("project.main");
 
     String langPart = isGradleOlderThan("4.0") ? "build/classes" : "build/classes/java";
-    List<String> expected = newArrayList(path(langPart + "/main"),
-                                         path("api/" + langPart + "/main"),
-                                         path("impl/" + langPart + "/main"),
-                                         path("api/build/libs/api.jar"),
-                                         path("impl/build/libs/impl.jar"));
+    List<String> expected = new ArrayList<>(List.of(path(langPart + "/main"),
+                                    path("api/" + langPart + "/main"),
+                                    path("impl/" + langPart + "/main"),
+                                    path("api/build/libs/api.jar"),
+                                    path("impl/build/libs/impl.jar")));
 
     if (isGradleOlderThan("3.3")) {
       expected.addAll(asList(path("build/dependency-cache"),
@@ -234,6 +226,12 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
                              path("impl/build/generated/sources/headers/java/main")));
     }
 
+    if (isGradleNewerOrSameAs("7.1")) {
+      expected.addAll(asList(path("build/tmp/compileJava/previous-compilation-data.bin"),
+                             path("api/build/tmp/compileJava/previous-compilation-data.bin"),
+                             path("impl/build/tmp/compileJava/previous-compilation-data.bin")));
+    }
+
     Assertions.assertThat(dirtyOutputRoots)
       .containsExactlyInAnyOrderElementsOf(expected);
 
@@ -248,15 +246,14 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check incremental make and build dependant module----//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "  public int methodX() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }  public int methodX() { return 42; }}""", false);
     compileModules("project.test");
 
-    expected = newArrayList(path(langPart + "/main"),
-                            path(langPart + "/test"));
+    expected = new ArrayList<>(List.of(path(langPart + "/main"),
+                       path(langPart + "/test")));
 
     if (isGradleOlderThan("3.3")) {
       expected.add(path("build/dependency-cache"));
@@ -269,6 +266,11 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     if (isGradleNewerOrSameAs("6.3")) {
       expected.addAll(asList(path("build/generated/sources/headers/java/main"),
                              path("build/generated/sources/headers/java/test")));
+    }
+
+    if (isGradleNewerOrSameAs("7.1")) {
+      expected.addAll(asList(path("build/tmp/compileTestJava/previous-compilation-data.bin"),
+                             path("build/tmp/compileJava/previous-compilation-data.bin")));
     }
 
     Assertions.assertThat(dirtyOutputRoots)
@@ -285,10 +287,10 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check reverted change -> related build result can be obtained by Gradle from cache ---//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }}""", false);
     compileModules("project.test");
     assertUnorderedElementsAreEqual(dirtyOutputRoots, expected);
   }
