@@ -6,8 +6,11 @@ import com.intellij.openapi.externalSystem.ExternalSystemManager;
 import com.intellij.openapi.externalSystem.model.DataNode;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.ProjectKeys;
+import com.intellij.openapi.externalSystem.model.project.ContentRootData;
+import com.intellij.openapi.externalSystem.model.project.ExternalSystemSourceType;
 import com.intellij.openapi.externalSystem.model.project.ModuleData;
 import com.intellij.openapi.externalSystem.model.project.ProjectData;
+import com.intellij.openapi.externalSystem.service.project.IdeModelsProviderImpl;
 import com.intellij.openapi.externalSystem.util.ExternalSystemApiUtil;
 import com.intellij.openapi.externalSystem.util.ExternalSystemConstants;
 import com.intellij.openapi.fileChooser.FileChooserDescriptor;
@@ -17,13 +20,12 @@ import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiFile;
-import com.intellij.util.BooleanFunction;
 import com.intellij.util.containers.Stack;
 import org.gradle.tooling.model.GradleProject;
 import org.gradle.tooling.model.gradle.GradleScript;
-import org.gradle.util.GUtil;
 import org.gradle.util.GradleVersion;
 import org.gradle.wrapper.WrapperConfiguration;
 import org.gradle.wrapper.WrapperExecutor;
@@ -31,11 +33,14 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.gradle.GradleManager;
+import org.jetbrains.plugins.gradle.execution.build.CachedModuleDataFinder;
+import org.jetbrains.plugins.gradle.model.data.GradleProjectBuildScriptData;
 import org.jetbrains.plugins.gradle.settings.GradleProjectSettings;
 import org.jetbrains.plugins.gradle.settings.GradleSettings;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.Reader;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
@@ -44,17 +49,16 @@ import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.intellij.openapi.util.io.FileUtil.isAncestor;
+import static com.intellij.openapi.util.io.FileUtil.toCanonicalPath;
 import static com.intellij.openapi.util.text.StringUtil.*;
 import static org.jetbrains.plugins.gradle.util.GradleConstants.EXTENSION;
 import static org.jetbrains.plugins.gradle.util.GradleConstants.KOTLIN_DSL_SCRIPT_EXTENSION;
 
 /**
  * Holds miscellaneous utility methods.
- *
- * @author Denis Zhdanov
  */
 public final class GradleUtil {
   private static final String LAST_USED_GRADLE_HOME_KEY = "last.used.gradle.home";
@@ -102,8 +106,10 @@ public final class GradleUtil {
     if (wrapperPropertiesFile == null) return null;
 
     final WrapperConfiguration wrapperConfiguration = new WrapperConfiguration();
-    try {
-      final Properties props = GUtil.loadProperties(Files.newInputStream(wrapperPropertiesFile));
+
+    try (Reader wrapperPropertiesReader = Files.newBufferedReader(wrapperPropertiesFile)) {
+      final Properties props = new Properties();
+      props.load(wrapperPropertiesReader);
       String distributionUrl = props.getProperty(WrapperExecutor.DISTRIBUTION_URL_PROPERTY);
       if (isEmpty(distributionUrl)) {
         throw new ExternalSystemException("Wrapper 'distributionUrl' property does not exist!");
@@ -217,7 +223,7 @@ public final class GradleUtil {
     try (Stream<Path> pathsStream = Files.list(wrapperDir)) {
       List<Path> candidates = pathsStream
         .filter(path -> FileUtilRt.extensionEquals(path.getFileName().toString(), "properties") && Files.isRegularFile(path))
-        .collect(Collectors.toList());
+        .toList();
 
       if (candidates.isEmpty()) {
         GradleLog.LOG.warn("No *.properties file is found at the gradle wrapper directory " + wrapperDir);
@@ -287,10 +293,22 @@ public final class GradleUtil {
   @ApiStatus.Experimental
   @Nullable
   public static DataNode<ModuleData> findGradleModuleData(@NotNull Project project, @NotNull String projectPath) {
-    DataNode<ProjectData> projectNode = ExternalSystemApiUtil.findProjectData(project, GradleConstants.SYSTEM_ID, projectPath);
-    if (projectNode == null) return null;
-    BooleanFunction<DataNode<ModuleData>> predicate = node -> projectPath.equals(node.getData().getLinkedExternalProjectPath());
-    return ExternalSystemApiUtil.find(projectNode, ProjectKeys.MODULE, predicate);
+    return ExternalSystemApiUtil.findModuleNode(project, GradleConstants.SYSTEM_ID, projectPath);
+  }
+
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull String projectPath) {
+    var moduleNode = ExternalSystemApiUtil.findModuleNode(project, GradleConstants.SYSTEM_ID, projectPath);
+    if (moduleNode == null) return null;
+    return findGradleModule(project, moduleNode.getData());
+  }
+
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull ProjectData projectData) {
+    return findGradleModule(project, projectData.getLinkedExternalProjectPath());
+  }
+
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull ModuleData moduleData) {
+    var modelsProvider = new IdeModelsProviderImpl(project);
+    return modelsProvider.findIdeModule(moduleData);
   }
 
   public static @NotNull GradleVersion getGradleVersion(Project project, PsiFile file) {
@@ -304,8 +322,7 @@ public final class GradleUtil {
 
   public static @NotNull GradleVersion getGradleVersion(Project project, String filePath) {
     ExternalSystemManager<?, ?, ?, ?, ?> manager = ExternalSystemApiUtil.getManager(GradleConstants.SYSTEM_ID);
-    if (manager instanceof GradleManager) {
-      GradleManager gradleManager = (GradleManager)manager;
+    if (manager instanceof GradleManager gradleManager) {
       String externalProjectPath = gradleManager.getAffectedExternalProjectPath(filePath, project);
       if (externalProjectPath != null) {
         GradleSettings settings = GradleSettings.getInstance(project);
@@ -320,5 +337,47 @@ public final class GradleUtil {
 
   public static boolean isSupportedImplementationScope(@NotNull GradleVersion gradleVersion) {
     return gradleVersion.getBaseVersion().compareTo(GradleVersion.version("3.4")) >= 0;
+  }
+
+  @Nullable
+  public static VirtualFile getGradleBuildScriptSource(@NotNull Module module) {
+    DataNode<? extends ModuleData> moduleData = CachedModuleDataFinder.getInstance(module.getProject()).findModuleData(module);
+    if (moduleData == null) return null;
+    DataNode<GradleProjectBuildScriptData> dataNode = ExternalSystemApiUtil.find(moduleData, GradleProjectBuildScriptData.KEY);
+    if (dataNode == null) return null;
+    File data = dataNode.getData().getBuildScriptSource();
+    if (data == null) return null;
+    return VfsUtil.findFileByIoFile(data, true);
+  }
+
+  public static void excludeOutDir(@NotNull DataNode<ModuleData> ideModule, File ideaOutDir) {
+    ContentRootData excludedContentRootData;
+    DataNode<ContentRootData> contentRootDataDataNode = ExternalSystemApiUtil.find(ideModule, ProjectKeys.CONTENT_ROOT);
+    if (contentRootDataDataNode == null || !isContentRootAncestor(contentRootDataDataNode.getData(), ideaOutDir)) {
+      excludedContentRootData = new ContentRootData(GradleConstants.SYSTEM_ID, ideaOutDir.getPath());
+      ideModule.createChild(ProjectKeys.CONTENT_ROOT, excludedContentRootData);
+    }
+    else {
+      excludedContentRootData = contentRootDataDataNode.getData();
+    }
+
+    excludedContentRootData.storePath(ExternalSystemSourceType.EXCLUDED, ideaOutDir.getPath());
+  }
+
+  public static void unexcludeOutDir(@NotNull DataNode<ModuleData> ideModule, File ideaOutDir) {
+    DataNode<ContentRootData> contentRootDataDataNode = ExternalSystemApiUtil.find(ideModule, ProjectKeys.CONTENT_ROOT);
+
+    if (contentRootDataDataNode != null && isContentRootAncestor(contentRootDataDataNode.getData(), ideaOutDir)) {
+          ContentRootData excludedContentRootData;
+          excludedContentRootData = contentRootDataDataNode.getData();
+          excludedContentRootData.getPaths(ExternalSystemSourceType.EXCLUDED).removeIf(sourceRoot -> {
+            return sourceRoot.getPath().equals(ideaOutDir.getPath()); });
+        }
+  }
+
+  private static boolean isContentRootAncestor(@NotNull ContentRootData data, @NotNull File ideaOutDir) {
+    var canonicalIdeOutPath = toCanonicalPath(ideaOutDir.getPath());
+    var canonicalRootPath = data.getRootPath();
+    return isAncestor(canonicalRootPath, canonicalIdeOutPath, false);
   }
 }
