@@ -13,11 +13,9 @@ import de.plushnikov.intellij.plugin.thirdparty.LombokUtils;
 import de.plushnikov.intellij.plugin.util.LombokProcessorUtil;
 import de.plushnikov.intellij.plugin.util.PsiAnnotationUtil;
 import de.plushnikov.intellij.plugin.util.PsiClassUtil;
-import de.plushnikov.intellij.plugin.util.PsiMethodUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
@@ -53,12 +51,13 @@ public final class FieldNameConstantsHandler {
     return configDiscovery.getBooleanLombokConfigProperty(ConfigKey.FIELD_NAME_CONSTANTS_UPPERCASE, containingClass);
   }
 
-  public static List<PsiField> createFields(@NotNull PsiClass containingClass, @NotNull Collection<PsiField> psiFields) {
+  public static List<PsiField> createFields(@NotNull PsiClass containingClass, @NotNull Collection<PsiMember> psiMembers) {
     final Set<String> existingFieldNames = PsiClassUtil.collectClassFieldsIntern(containingClass).stream().map(PsiField::getName).collect(Collectors.toSet());
     final PsiElementFactory psiElementFactory = JavaPsiFacade.getElementFactory(containingClass.getProject());
     final PsiClassType classType = psiElementFactory.createType(containingClass);
     boolean makeUppercased = useUppercasedConstants(containingClass);
-    return psiFields.stream().filter(psiField -> !existingFieldNames.contains(makeFieldNameConstant(psiField, makeUppercased)))
+    return psiMembers.stream()
+      .filter(psiMember -> !existingFieldNames.contains(makeFieldNameConstant(psiMember, makeUppercased)))
       .map(psiField -> {
         if (containingClass.isEnum()) {
           return createEnumConstant(psiField, makeUppercased, containingClass, classType);
@@ -78,18 +77,18 @@ public final class FieldNameConstantsHandler {
       .withImplicitModifier(PsiModifier.STATIC)
       .withImplicitModifier(PsiModifier.FINAL);
 
-    lazyClassBuilder.withMethodSupplier(()-> {
+    lazyClassBuilder.withMethodSupplier((thisPsiClass)-> {
       //add enum methods like here:  ClassInnerStuffCache.calcMethods
       final PsiManager psiManager = containingClass.getManager();
-      final PsiClassType enumClassType = PsiClassUtil.getTypeWithGenerics(lazyClassBuilder);
+      final PsiClassType enumClassType = PsiClassUtil.getTypeWithGenerics(thisPsiClass);
 //    "public static " + myClass.getName() + "[] values() { }"
       final LombokLightMethodBuilder valuesEnumMethod = new LombokLightMethodBuilder(psiManager, "values")
         .withModifier(PsiModifier.PUBLIC)
         .withModifier(PsiModifier.STATIC)
         .withContainingClass(containingClass)
         .withNavigationElement(navigationElement)
-        .withMethodReturnType(new PsiArrayType(enumClassType));
-      valuesEnumMethod.withBody(PsiMethodUtil.createCodeBlockFromText("", valuesEnumMethod));
+        .withMethodReturnType(new PsiArrayType(enumClassType))
+        .withBodyText("");
 
       //     "public static " + myClass.getName() + " valueOf(java.lang.String name) throws java.lang.IllegalArgumentException { }"
       final LombokLightMethodBuilder valueOfEnumMethod = new LombokLightMethodBuilder(psiManager, "valueOf")
@@ -99,27 +98,27 @@ public final class FieldNameConstantsHandler {
         .withNavigationElement(navigationElement)
         .withParameter("name", PsiType.getJavaLangString(psiManager, containingClass.getResolveScope()))
         .withException(PsiType.getTypeByName("java.lang.IllegalArgumentException", containingClass.getProject(), containingClass.getResolveScope()))
-        .withMethodReturnType(enumClassType);
-      valueOfEnumMethod.withBody(PsiMethodUtil.createCodeBlockFromText("", valueOfEnumMethod));
+        .withMethodReturnType(enumClassType)
+        .withBodyText("");
 
-      return Arrays.asList(valuesEnumMethod, valueOfEnumMethod);
+      return List.of(valuesEnumMethod, valueOfEnumMethod);
     });
 
     return lazyClassBuilder;
   }
 
-  private static PsiField createEnumConstant(@NotNull PsiField field, boolean makeUppercased, @NotNull PsiClass containingClass, PsiClassType classType) {
-    return new LombokEnumConstantBuilder(containingClass.getManager(), makeFieldNameConstant(field, makeUppercased), classType)
+  private static PsiField createEnumConstant(@NotNull PsiMember psiMember, boolean makeUppercased, @NotNull PsiClass containingClass, PsiClassType classType) {
+    return new LombokEnumConstantBuilder(containingClass.getManager(), makeFieldNameConstant(psiMember, makeUppercased), classType)
       .withContainingClass(containingClass)
       .withModifier(PsiModifier.PUBLIC)
       .withImplicitModifier(PsiModifier.STATIC)
       .withImplicitModifier(PsiModifier.FINAL)
-      .withNavigationElement(field);
+      .withNavigationElement(psiMember);
   }
 
-  private static String makeFieldNameConstant(@NotNull PsiField field, boolean makeUppercased1) {
-    final String fieldName = field.getName();
-    return makeUppercased1 ? LombokUtils.camelCaseToConstant(fieldName) : fieldName;
+  private static String makeFieldNameConstant(@NotNull PsiMember psiMember, boolean makeUppercased) {
+    final String fieldName = psiMember.getName();
+    return makeUppercased ? LombokUtils.camelCaseToConstant(fieldName) : fieldName;
   }
 
   @NotNull
@@ -135,19 +134,19 @@ public final class FieldNameConstantsHandler {
   }
 
   @NotNull
-  private static PsiField createFieldNameConstant(@NotNull PsiField psiField, boolean makeUppercased, @NotNull PsiClass containingClass) {
+  private static PsiField createFieldNameConstant(@NotNull PsiMember psiMember, boolean makeUppercased, @NotNull PsiClass containingClass) {
     final PsiManager manager = containingClass.getContainingFile().getManager();
     final PsiType fieldNameConstType = PsiType.getJavaLangString(manager, GlobalSearchScope.allScope(containingClass.getProject()));
 
-    LombokLightFieldBuilder fieldNameConstant = new LombokLightFieldBuilder(manager, makeFieldNameConstant(psiField, makeUppercased), fieldNameConstType)
+    LombokLightFieldBuilder fieldNameConstant = new LombokLightFieldBuilder(manager, makeFieldNameConstant(psiMember, makeUppercased), fieldNameConstType)
       .withContainingClass(containingClass)
-      .withNavigationElement(psiField)
+      .withNavigationElement(psiMember)
       .withModifier(PsiModifier.PUBLIC)
       .withModifier(PsiModifier.STATIC)
       .withModifier(PsiModifier.FINAL);
 
     final PsiElementFactory psiElementFactory = JavaPsiFacade.getElementFactory(containingClass.getProject());
-    final PsiExpression initializer = psiElementFactory.createExpressionFromText("\"" + psiField.getName() + "\"", containingClass);
+    final PsiExpression initializer = psiElementFactory.createExpressionFromText("\"" + psiMember.getName() + "\"", containingClass);
     fieldNameConstant.setInitializer(initializer);
     return fieldNameConstant;
   }
