@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.env.python.testing;
 
 import com.intellij.execution.ExecutionException;
@@ -30,7 +30,7 @@ import com.jetbrains.python.sdk.flavors.IronPythonSdkFlavor;
 import com.jetbrains.python.testing.ConfigurationTarget;
 import com.jetbrains.python.testing.PyUnitTestConfiguration;
 import com.jetbrains.python.testing.PyUnitTestFactory;
-import com.jetbrains.python.testing.PythonTestConfigurationsModel;
+import com.jetbrains.python.testing.PythonTestConfigurationType;
 import com.jetbrains.python.tools.sdkTools.SdkCreationType;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -39,7 +39,7 @@ import org.junit.Test;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 import static com.intellij.testFramework.assertions.Assertions.assertThat;
@@ -238,7 +238,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testRenameClass() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameClassTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
@@ -250,7 +250,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
         @NotNull
         @Override
         protected PyUnitTestFactory createFactory() {
-          return new PyUnitTestFactory();
+          return PythonTestConfigurationType.getInstance().getUnitTestFactory();
         }
 
         @Override
@@ -290,11 +290,52 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         assertEquals("Runner did not stop after first fail", 1, runner.getAllTestsCount());
-        assertEquals("Bad tree produced for failfast", "Test tree:\n" +
-                                                       "[root](-)\n" +
-                                                       ".test_test(-)\n" +
-                                                       "..SomeTestCase(-)\n" +
-                                                       "...test_1_test(-)\n", runner.getFormattedTestTree());
+        assertEquals("Bad tree produced for failfast", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SomeTestCase(-)
+          ...test_1_test(-)
+          """, runner.getFormattedTestTree());
+      }
+    });
+  }
+
+  /**
+   * test should be launched from __init__.py
+   */
+  @Test
+  public void testTestInInit() {
+
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/testInInit", "") {
+
+      @NotNull
+      @Override
+      protected PyUnitTestProcessRunner createProcessRunner() {
+        return new PyUnitTestProcessRunner("", 0) {
+          @Override
+          protected void configurationCreatedAndWillLaunch(@NotNull final PyUnitTestConfiguration configuration) throws IOException {
+            super.configurationCreatedAndWillLaunch(configuration);
+            configuration.getTarget().setTargetType(PyRunTargetVariant.PYTHON);
+            configuration.getTarget().setTarget("mymodule.ExampleModuleTestCase");
+          }
+        };
+      }
+
+      @Override
+      protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
+                                      @NotNull final String stdout,
+                                      @NotNull final String stderr,
+                                      @NotNull final String all, int exitCode) {
+        assertEquals("wrong test launched", """
+          Test tree:
+          [root](+)
+          .mymodule(+)
+          ..ExampleModuleTestCase(+)
+          ...test1(+)
+          ...test2(+)
+          """, runner.getFormattedTestTree());
+        assertEquals("wrong exit code", 0, exitCode);
       }
     });
   }
@@ -318,11 +359,13 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
 
         runner.getFormattedTestTree();
         assertEquals("Skipped test with non-ascii message broke tree",
-                     "Test tree:\n" +
-                     "[root](~)\n" +
-                     ".test_test(~)\n" +
-                     "..TestCase(~)\n" +
-                     "...test(~)\n", runner.getFormattedTestTree());
+                     """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestCase(~)
+                       ...test(~)
+                       """, runner.getFormattedTestTree());
         assertThat(stdout)
           .describedAs("non-ascii char broken in output")
           .contains("ошибка");
@@ -349,12 +392,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         final String formattedTestTree = runner.getFormattedTestTree();
-        assertEquals("Bad tree:" + formattedTestTree, "Test tree:\n" +
-                                                      "[root](-)\n" +
-                                                      ".test_test(-)\n" +
-                                                      "..TestThis(-)\n" +
-                                                      "...test_this(-)\n" +
-                                                      "....[test](-)\n", formattedTestTree);
+        assertEquals("Bad tree:" + formattedTestTree, """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..TestThis(-)
+          ...test_this(-)
+          ....[test](-)
+          """, formattedTestTree);
       }
     });
   }
@@ -406,17 +451,19 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String all, int exitCode) {
         assertEquals(3, runner.getFailedTestsCount());
         assertEquals(6, runner.getAllTestsCount());
-        assertEquals("Test tree:\n" +
-                     "[root](-)\n" +
-                     ".test_test(-)\n" +
-                     "..NumbersTest(-)\n" +
-                     "...test_even (Test that numbers between 0 and 5 are all even_)(-)\n" +
-                     "....(i=0)(+)\n" +
-                     "....(i=1)(-)\n" +
-                     "....(i=2)(+)\n" +
-                     "....(i=3)(-)\n" +
-                     "....(i=4)(+)\n" +
-                     "....(i=5)(-)\n", runner.getFormattedTestTree());
+        assertEquals("""
+                       Test tree:
+                       [root](-)
+                       .test_test(-)
+                       ..NumbersTest(-)
+                       ...test_even (Test that numbers between 0 and 5 are all even_)(-)
+                       ....(i=0)(+)
+                       ....(i=1)(-)
+                       ....(i=2)(+)
+                       ....(i=3)(-)
+                       ....(i=4)(+)
+                       ....(i=5)(-)
+                       """, runner.getFormattedTestTree());
       }
     });
   }
@@ -441,21 +488,23 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("dots in subtest names broke output", "Test tree:\n" +
-                                                           "[root](-)\n" +
-                                                           ".test_test(-)\n" +
-                                                           "..SampleTest(-)\n" +
-                                                           "...test_sample(-)\n" +
-                                                           "....(i='0_0')(-)\n" +
-                                                           "....(i='1_1')(-)\n" +
-                                                           "....(i='2_2')(+)\n" +
-                                                           "....(i='3_3')(+)\n" +
-                                                           "....(i='4_4')(+)\n" +
-                                                           "....(i='5_5')(+)\n" +
-                                                           "....(i='6_6')(+)\n" +
-                                                           "....(i='7_7')(+)\n" +
-                                                           "....(i='8_8')(+)\n" +
-                                                           "....(i='9_9')(+)\n", runner.getFormattedTestTree());
+        assertEquals("dots in subtest names broke output", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SampleTest(-)
+          ...test_sample(-)
+          ....(i='0_0')(-)
+          ....(i='1_1')(-)
+          ....(i='2_2')(+)
+          ....(i='3_3')(+)
+          ....(i='4_4')(+)
+          ....(i='5_5')(+)
+          ....(i='6_6')(+)
+          ....(i='7_7')(+)
+          ....(i='8_8')(+)
+          ....(i='9_9')(+)
+          """, runner.getFormattedTestTree());
       }
     });
   }
@@ -474,13 +523,15 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("Output tree broken for skipped exception thrown in setup method", "Test tree:\n" +
-                                                                                        "[root](~)\n" +
-                                                                                        ".test_test(~)\n" +
-                                                                                        "..TestSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n" +
-                                                                                        "..TestSubSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n",
+        assertEquals("Output tree broken for skipped exception thrown in setup method", """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestSimple(~)
+                       ...setUpClass(~)
+                       ..TestSubSimple(~)
+                       ...setUpClass(~)
+                       """,
                      runner.getFormattedTestTree());
       }
     });
@@ -619,21 +670,23 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull String stdout,
                                       @NotNull String stderr,
                                       @NotNull String all, int exitCode) {
-        final String expectedResult = "Test tree:\n" +
-                                      "[root](-)\n" +
-                                      ".test_subtest(-)\n" +
-                                      "..SpamTest(-)\n" +
-                                      "...test_test(-)\n" +
-                                      "....(i=0)(-)\n" +
-                                      "....(i=1)(+)\n" +
-                                      "....(i=2)(-)\n" +
-                                      "....(i=3)(+)\n" +
-                                      "....(i=4)(-)\n" +
-                                      "....(i=5)(+)\n" +
-                                      "....(i=6)(-)\n" +
-                                      "....(i=7)(+)\n" +
-                                      "....(i=8)(-)\n" +
-                                      "....(i=9)(+)\n";
+        final String expectedResult = """
+          Test tree:
+          [root](-)
+          .test_subtest(-)
+          ..SpamTest(-)
+          ...test_test(-)
+          ....(i=0)(-)
+          ....(i=1)(+)
+          ....(i=2)(-)
+          ....(i=3)(+)
+          ....(i=4)(-)
+          ....(i=5)(+)
+          ....(i=6)(-)
+          ....(i=7)(+)
+          ....(i=8)(-)
+          ....(i=9)(+)
+          """;
         final String tree = runner.getFormattedTestTree();
         assertEquals("Bad tree:" + tree + ". \nStdout:" + stdout + "\n. Stderr: " + stderr, expectedResult, tree);
       }
@@ -658,7 +711,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   // PY-24407
   @Test
   public void testWorkingDirectoryDependsOnRelativeImport() {
-    runPythonTest(new CreateConfigurationTestTask<>(PythonTestConfigurationsModel.getPythonsUnittestName(),
+    runPythonTest(new CreateConfigurationTestTask<>(PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
                                                     PyUnitTestConfiguration.class) {
       @NotNull
       @Override
@@ -824,7 +877,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testConfigurationProducerOnDirectory() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameFolderTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
@@ -832,7 +885,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testConfigurationProducer() {
     runPythonTest(
-      new CreateConfigurationByFileTask<>(PythonTestConfigurationsModel.getPythonsUnittestName(), PyUnitTestConfiguration.class));
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(), PyUnitTestConfiguration.class));
   }
 
   /**
@@ -841,14 +894,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testConfigurationProducerObeysDefaultDir() {
     runPythonTest(
-      new CreateConfigurationByFileTask<>(PythonTestConfigurationsModel.getPythonsUnittestName(),
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(),
                                           PyUnitTestConfiguration.class) {
         private static final String SOME_RANDOM_DIR = "//some/random/ddir";
 
         @Override
         public void runTestOn(@NotNull final String sdkHome, @Nullable Sdk existingSdk) throws InvalidSdkException {
           // Set default working directory to some random location before actual exection
-          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory());
+          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()));
           templateConfiguration.setWorkingDirectory(SOME_RANDOM_DIR);
           super.runTestOn(sdkHome, existingSdk);
           templateConfiguration.setWorkingDirectory("");
@@ -878,10 +931,9 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
       super(relativePathToTestData, scriptName, rerunFailedTests, PythonUnitTestingTest.this::createTestRunner);
     }
 
-    @NotNull
     @Override
-    public Iterable<Class<?>> getClassesToEnableDebug() {
-      return Collections.singletonList(GeneralIdBasedToSMTRunnerEventsConvertor.class);
+    public @NotNull Collection<Class<?>> getClassesToEnableDebug() {
+      return List.of(GeneralIdBasedToSMTRunnerEventsConvertor.class);
     }
   }
 
